rules.v4
# Generated by iptables-save v1.4.14 on Tue Mar 24 16:28:39 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:NAT_POSTROUTING_CHAIN - [0:0]
:NAT_PREROUTING_CHAIN - [0:0]
:POST_NAT_POSTROUTING_CHAIN - [0:0]
:POST_NAT_PREROUTING_CHAIN - [0:0]
-A PREROUTING -j NAT_PREROUTING_CHAIN
-A PREROUTING -j POST_NAT_PREROUTING_CHAIN
-A PREROUTING -p tcp -m tcp --dport 22 -j REDIRECT --to-ports 2222
-A POSTROUTING -j NAT_POSTROUTING_CHAIN
-A POSTROUTING -j POST_NAT_POSTROUTING_CHAIN
COMMIT
# Completed on Tue Mar 24 16:28:39 2015
# Generated by iptables-save v1.4.14 on Tue Mar 24 16:28:39 2015
*mangle
:PREROUTING ACCEPT [141296:7544335]
:INPUT ACCEPT [141296:7544335]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [147922:15153416]
:POSTROUTING ACCEPT [147922:15153416]
COMMIT
# Completed on Tue Mar 24 16:28:39 2015
# Generated by iptables-save v1.4.14 on Tue Mar 24 16:28:39 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:BASE_FORWARD_CHAIN - [0:0]
:BASE_INPUT_CHAIN - [0:0]
:BASE_OUTPUT_CHAIN - [0:0]
:DMZ_FORWARD_IN_CHAIN - [0:0]
:DMZ_FORWARD_OUT_CHAIN - [0:0]
:DMZ_INET_FORWARD_CHAIN - [0:0]
:DMZ_INPUT_CHAIN - [0:0]
:DMZ_LAN_FORWARD_CHAIN - [0:0]
:DMZ_OUTPUT_CHAIN - [0:0]
:EXT_BROADCAST_CHAIN - [0:0]
:EXT_FORWARD_IN_CHAIN - [0:0]
:EXT_FORWARD_OUT_CHAIN - [0:0]
:EXT_ICMP_FLOOD_CHAIN - [0:0]
:EXT_INPUT_CHAIN - [0:0]
:EXT_MULTICAST_CHAIN - [0:0]
:EXT_OUTPUT_CHAIN - [0:0]
:FORWARD_CHAIN - [0:0]
:HOST_BLOCK_DROP - [0:0]
:HOST_BLOCK_DST - [0:0]
:HOST_BLOCK_SRC - [0:0]
:INET_DMZ_FORWARD_CHAIN - [0:0]
:INPUT_CHAIN - [0:0]
:INT_FORWARD_IN_CHAIN - [0:0]
:INT_FORWARD_OUT_CHAIN - [0:0]
:INT_INPUT_CHAIN - [0:0]
:INT_OUTPUT_CHAIN - [0:0]
:LAN_INET_FORWARD_CHAIN - [0:0]
:OUTPUT_CHAIN - [0:0]
:POST_FORWARD_CHAIN - [0:0]
:POST_INPUT_CHAIN - [0:0]
:POST_INPUT_DROP_CHAIN - [0:0]
:POST_OUTPUT_CHAIN - [0:0]
:RESERVED_NET_CHK - [0:0]
:SPOOF_CHK - [0:0]
:VALID_CHK - [0:0]
-A INPUT -j BASE_INPUT_CHAIN
-A INPUT -j INPUT_CHAIN
-A INPUT -j HOST_BLOCK_SRC
-A INPUT -j SPOOF_CHK
-A INPUT -i eth0 -j VALID_CHK
-A INPUT -i eth0 ! -p icmp -m state --state NEW -j EXT_INPUT_CHAIN
-A INPUT -i eth0 -p icmp -m state --state NEW -m limit --limit 60/sec --limit-burst 100 -j EXT_INPUT_CHAIN
-A INPUT -i eth0 -p icmp -m state --state NEW -j EXT_ICMP_FLOOD_CHAIN
-A INPUT -j POST_INPUT_CHAIN
-A INPUT -m limit --limit 1/sec -j LOG --log-prefix "AIF:Dropped INPUT packet: " --log-level 6
-A INPUT -j DROP
-A INPUT -s 181.91.14.73 -j ACCEPT
-A INPUT -s 5.8.46.0/25 -j ACCEPT
-A INPUT -s 23.40.240.0/20 -j ACCEPT
-A INPUT -s 23.43.32.0/20 -j ACCEPT
-A INPUT -s 23.197.58.0/23 -j ACCEPT
-A INPUT -s 23.197.208.0/20 -j ACCEPT
-A INPUT -s 23.197.224.0/20 -j ACCEPT
-A INPUT -s 23.197.240.0/22 -j ACCEPT
-A INPUT -s 24.232.0.0/18 -j ACCEPT
-A INPUT -s 24.232.64.0/20 -j ACCEPT
-A INPUT -s 24.232.80.0/22 -j ACCEPT
-A INPUT -s 24.232.84.0/24 -j ACCEPT
-A INPUT -s 24.232.86.0/23 -j ACCEPT
-A INPUT -s 24.232.88.0/21 -j ACCEPT
-A INPUT -s 24.232.96.0/19 -j ACCEPT
-A INPUT -s 24.232.128.0/17 -j ACCEPT
-A INPUT -s 31.7.189.0/24 -j ACCEPT
-A INPUT -s 31.187.67.128/27 -j ACCEPT
-A INPUT -s 32.59.65.0/24 -j ACCEPT
-A INPUT -s 32.59.67.0/24 -j ACCEPT
-A INPUT -s 32.59.68.0/22 -j ACCEPT
-A INPUT -s 32.59.72.0/21 -j ACCEPT
-A INPUT -s 32.104.16.0/24 -j ACCEPT
-A INPUT -s 32.104.65.0/24 -j ACCEPT
-A INPUT -s 38.108.41.64/28 -j ACCEPT
-A INPUT -s 38.122.122.128/32 -j ACCEPT
-A INPUT -s 38.122.122.130/31 -j ACCEPT
-A INPUT -s 38.122.122.132/30 -j ACCEPT
-A INPUT -s 46.166.167.32/27 -j ACCEPT
-A INPUT -s 46.233.68.0/28 -j ACCEPT
-A INPUT -s 46.248.26.0/23 -j ACCEPT
-A INPUT -s 57.74.128.0/19 -j ACCEPT
-A INPUT -s 63.128.82.0/23 -j ACCEPT
-A INPUT -s 63.128.94.0/24 -j ACCEPT
-A INPUT -s 63.250.133.224/27 -j ACCEPT
-A INPUT -s 63.250.178.128/29 -j ACCEPT
-A INPUT -s 63.250.180.64/28 -j ACCEPT
-A INPUT -s 63.250.181.24/29 -j ACCEPT
-A INPUT -s 63.250.181.224/29 -j ACCEPT
-A INPUT -s 63.250.181.240/29 -j ACCEPT
-A INPUT -s 64.14.123.80/28 -j ACCEPT
-A INPUT -s 64.14.123.128/26 -j ACCEPT
-A INPUT -s 64.14.124.64/26 -j ACCEPT
-A INPUT -s 64.35.35.160/27 -j ACCEPT
-A INPUT -s 64.35.51.32/27 -j ACCEPT
-A INPUT -s 64.58.71.240/28 -j ACCEPT
-A INPUT -s 64.58.88.64/26 -j ACCEPT
-A INPUT -s 64.76.0.0/22 -j ACCEPT
-A INPUT -s 64.76.4.0/23 -j ACCEPT
-A INPUT -s 64.76.6.0/31 -j ACCEPT
-A INPUT -s 64.76.6.3/32 -j ACCEPT
-A INPUT -s 64.76.6.4/30 -j ACCEPT
-A INPUT -s 64.76.6.8/29 -j ACCEPT
-A INPUT -s 64.76.6.16/28 -j ACCEPT
-A INPUT -s 64.76.6.32/27 -j ACCEPT
-A INPUT -s 64.76.6.64/26 -j ACCEPT
-A INPUT -s 64.76.6.128/25 -j ACCEPT
-A INPUT -s 64.76.7.0/24 -j ACCEPT
-A INPUT -s 64.76.8.0/21 -j ACCEPT
-A INPUT -s 64.76.16.0/21 -j ACCEPT
-A INPUT -s 64.76.24.0/22 -j ACCEPT
-A INPUT -s 64.76.28.0/24 -j ACCEPT
-A INPUT -s 64.76.29.0/25 -j ACCEPT
-A INPUT -s 64.76.29.128/28 -j ACCEPT
-A INPUT -s 64.76.29.152/29 -j ACCEPT
-A INPUT -s 64.76.29.160/27 -j ACCEPT
-A INPUT -s 64.76.29.192/26 -j ACCEPT
-A INPUT -s 64.76.30.0/23 -j ACCEPT
-A INPUT -s 64.76.32.0/20 -j ACCEPT
-A INPUT -s 64.76.120.0/21 -j ACCEPT
-A INPUT -s 64.116.224.0/27 -j ACCEPT
-A INPUT -s 64.116.224.40/29 -j ACCEPT
-A INPUT -s 64.116.224.72/29 -j ACCEPT
-A INPUT -s 64.116.224.80/28 -j ACCEPT
-A INPUT -s 64.116.224.96/27 -j ACCEPT
-A INPUT -s 64.116.224.224/27 -j ACCEPT
-A INPUT -s 64.116.225.16/28 -j ACCEPT
-A INPUT -s 64.116.225.64/26 -j ACCEPT
-A INPUT -s 64.116.225.144/29 -j ACCEPT
-A INPUT -s 64.116.225.176/28 -j ACCEPT
-A INPUT -s 64.116.225.192/28 -j ACCEPT
-A INPUT -s 64.116.225.216/29 -j ACCEPT
-A INPUT -s 64.116.226.0/23 -j ACCEPT
-A INPUT -s 64.116.228.0/24 -j ACCEPT
-A INPUT -s 64.116.230.32/27 -j ACCEPT
-A INPUT -s 64.116.230.64/26 -j ACCEPT
-A INPUT -s 64.116.230.176/28 -j ACCEPT
-A INPUT -s 64.116.230.192/27 -j ACCEPT
-A INPUT -s 64.116.230.240/28 -j ACCEPT
-A INPUT -s 64.116.231.0/24 -j ACCEPT
-A INPUT -s 64.116.232.0/26 -j ACCEPT
-A INPUT -s 64.116.232.128/28 -j ACCEPT
-A INPUT -s 64.116.232.152/29 -j ACCEPT
-A INPUT -s 64.116.232.224/28 -j ACCEPT
-A INPUT -s 64.116.233.32/28 -j ACCEPT
-A INPUT -s 64.116.233.64/26 -j ACCEPT
-A INPUT -s 64.116.233.200/29 -j ACCEPT
-A INPUT -s 64.116.234.0/26 -j ACCEPT
-A INPUT -s 64.116.234.128/26 -j ACCEPT
-A INPUT -s 64.116.238.128/26 -j ACCEPT
-A INPUT -s 64.119.161.160/27 -j ACCEPT
-A INPUT -s 64.119.162.72/29 -j ACCEPT
-A INPUT -s 64.119.163.200/29 -j ACCEPT
-A INPUT -s 64.119.163.208/28 -j ACCEPT
-A INPUT -s 64.119.164.88/29 -j ACCEPT
-A INPUT -s 64.119.164.120/29 -j ACCEPT
-A INPUT -s 64.119.164.184/29 -j ACCEPT
-A INPUT -s 64.119.165.56/29 -j ACCEPT
-A INPUT -s 64.119.165.152/29 -j ACCEPT
-A INPUT -s 64.119.165.208/28 -j ACCEPT
-A INPUT -s 64.119.170.96/27 -j ACCEPT
-A INPUT -s 64.119.170.128/28 -j ACCEPT
-A INPUT -s 64.119.171.128/29 -j ACCEPT
-A INPUT -s 64.119.171.216/29 -j ACCEPT
-A INPUT -s 64.119.171.224/27 -j ACCEPT
-A INPUT -s 64.208.7.69/32 -j ACCEPT
-A INPUT -s 64.208.7.70/32 -j ACCEPT
-A INPUT -s 64.208.17.113/32 -j ACCEPT
-A INPUT -s 64.208.17.114/32 -j ACCEPT
-A INPUT -s 64.208.26.177/32 -j ACCEPT
-A INPUT -s 64.208.26.178/32 -j ACCEPT
-A INPUT -s 64.208.72.237/32 -j ACCEPT
-A INPUT -s 64.208.72.241/32 -j ACCEPT
-A INPUT -s 64.208.170.129/32 -j ACCEPT
-A INPUT -s 64.208.170.130/32 -j ACCEPT
-A INPUT -s 64.209.94.69/32 -j ACCEPT
-A INPUT -s 64.209.94.70/32 -j ACCEPT
-A INPUT -s 64.209.94.97/32 -j ACCEPT
-A INPUT -s 64.209.94.98/32 -j ACCEPT
-A INPUT -s 64.209.97.5/32 -j ACCEPT
-A INPUT -s 64.209.97.6/32 -j ACCEPT
-A INPUT -s 64.209.97.165/32 -j ACCEPT
-A INPUT -s 64.209.97.166/32 -j ACCEPT
-A INPUT -s 64.209.102.125/32 -j ACCEPT
-A INPUT -s 64.209.102.126/32 -j ACCEPT
-A INPUT -s 64.209.104.29/32 -j ACCEPT
-A INPUT -s 64.209.104.30/32 -j ACCEPT
-A INPUT -s 64.209.107.61/32 -j ACCEPT
-A INPUT -s 64.209.107.62/32 -j ACCEPT
-A INPUT -s 64.210.12.213/32 -j ACCEPT
-A INPUT -s 64.210.12.214/32 -j ACCEPT
-A INPUT -s 64.210.21.33/32 -j ACCEPT
-A INPUT -s 64.210.21.34/32 -j ACCEPT
-A INPUT -s 64.210.29.237/32 -j ACCEPT
-A INPUT -s 64.210.29.238/32 -j ACCEPT
-A INPUT -s 64.210.30.29/32 -j ACCEPT
-A INPUT -s 64.210.30.30/32 -j ACCEPT
-A INPUT -s 64.210.30.81/32 -j ACCEPT
-A INPUT -s 64.210.30.82/32 -j ACCEPT
-A INPUT -s 64.211.1.109/32 -j ACCEPT
-A INPUT -s 64.211.1.110/32 -j ACCEPT
-A INPUT -s 64.211.60.61/32 -j ACCEPT
-A INPUT -s 64.211.60.62/32 -j ACCEPT
-A INPUT -s 64.211.64.245/32 -j ACCEPT
-A INPUT -s 64.211.64.246/32 -j ACCEPT
-A INPUT -s 64.211.72.79/32 -j ACCEPT
-A INPUT -s 64.211.83.81/32 -j ACCEPT
-A INPUT -s 64.211.83.82/32 -j ACCEPT
-A INPUT -s 64.211.83.217/32 -j ACCEPT
-A INPUT -s 64.211.83.218/32 -j ACCEPT
-A INPUT -s 64.211.110.189/32 -j ACCEPT
-A INPUT -s 64.211.110.190/32 -j ACCEPT
-A INPUT -s 64.211.111.101/32 -j ACCEPT
-A INPUT -s 64.211.111.102/32 -j ACCEPT
-A INPUT -s 64.211.206.93/32 -j ACCEPT
-A INPUT -s 64.211.206.94/32 -j ACCEPT
-A INPUT -s 64.212.70.161/32 -j ACCEPT
-A INPUT -s 64.212.70.162/32 -j ACCEPT
-A INPUT -s 64.212.108.89/32 -j ACCEPT
-A INPUT -s 64.212.108.90/32 -j ACCEPT
-A INPUT -s 64.212.109.101/32 -j ACCEPT
-A INPUT -s 64.212.109.102/32 -j ACCEPT
-A INPUT -s 64.212.109.225/32 -j ACCEPT
-A INPUT -s 64.212.109.226/32 -j ACCEPT
-A INPUT -s 64.212.225.25/32 -j ACCEPT
-A INPUT -s 64.212.225.26/32 -j ACCEPT
-A INPUT -s 64.213.22.9/32 -j ACCEPT
-A INPUT -s 64.213.22.10/32 -j ACCEPT
-A INPUT -s 64.213.22.21/32 -j ACCEPT
-A INPUT -s 64.213.22.22/32 -j ACCEPT
-A INPUT -s 64.213.22.49/32 -j ACCEPT
-A INPUT -s 64.213.22.50/32 -j ACCEPT
-A INPUT -s 64.213.23.41/32 -j ACCEPT
-A INPUT -s 64.213.23.42/32 -j ACCEPT
-A INPUT -s 64.213.76.197/32 -j ACCEPT
-A INPUT -s 64.213.76.198/32 -j ACCEPT
-A INPUT -s 64.214.20.136/32 -j ACCEPT
-A INPUT -s 64.214.62.109/32 -j ACCEPT
-A INPUT -s 64.214.62.110/32 -j ACCEPT
-A INPUT -s 64.214.62.225/32 -j ACCEPT
-A INPUT -s 64.214.62.226/32 -j ACCEPT
-A INPUT -s 64.214.121.209/32 -j ACCEPT
-A INPUT -s 64.214.121.210/32 -j ACCEPT
-A INPUT -s 64.214.130.253/32 -j ACCEPT
-A INPUT -s 64.214.130.254/32 -j ACCEPT
-A INPUT -s 64.214.141.97/32 -j ACCEPT
-A INPUT -s 64.214.141.98/32 -j ACCEPT
-A INPUT -s 64.214.144.229/32 -j ACCEPT
-A INPUT -s 64.214.144.230/32 -j ACCEPT
-A INPUT -s 64.214.146.249/32 -j ACCEPT
-A INPUT -s 64.214.146.250/32 -j ACCEPT
-A INPUT -s 64.214.149.97/32 -j ACCEPT
-A INPUT -s 64.214.149.98/32 -j ACCEPT
-A INPUT -s 64.214.174.229/32 -j ACCEPT
-A INPUT -s 64.214.174.230/32 -j ACCEPT
-A INPUT -s 64.214.175.117/32 -j ACCEPT
-A INPUT -s 64.214.175.118/32 -j ACCEPT
-A INPUT -s 64.215.24.153/32 -j ACCEPT
-A INPUT -s 64.215.24.154/32 -j ACCEPT
-A INPUT -s 64.215.27.249/32 -j ACCEPT
-A INPUT -s 64.215.27.250/32 -j ACCEPT
-A INPUT -s 64.215.81.57/32 -j ACCEPT
-A INPUT -s 64.215.81.58/32 -j ACCEPT
-A INPUT -s 64.215.184.61/32 -j ACCEPT
-A INPUT -s 64.215.184.62/32 -j ACCEPT
-A INPUT -s 64.215.200.0/24 -j ACCEPT
-A INPUT -s 65.38.181.0/25 -j ACCEPT
-A INPUT -s 66.60.0.0/18 -j ACCEPT
-A INPUT -s 66.128.32.0/20 -j ACCEPT
-A INPUT -s 66.198.35.32/29 -j ACCEPT
-A INPUT -s 66.201.189.0/24 -j ACCEPT
-A INPUT -s 66.253.49.0/24 -j ACCEPT
-A INPUT -s 67.16.129.162/32 -j ACCEPT
-A INPUT -s 67.16.132.58/31 -j ACCEPT
-A INPUT -s 67.16.132.60/32 -j ACCEPT
-A INPUT -s 67.16.134.113/32 -j ACCEPT
-A INPUT -s 67.16.134.114/32 -j ACCEPT
-A INPUT -s 67.16.138.121/32 -j ACCEPT
-A INPUT -s 67.16.138.122/32 -j ACCEPT
-A INPUT -s 67.16.140.69/32 -j ACCEPT
-A INPUT -s 67.16.140.70/32 -j ACCEPT
-A INPUT -s 67.16.140.81/32 -j ACCEPT
-A INPUT -s 67.16.140.82/32 -j ACCEPT
-A INPUT -s 67.16.140.97/32 -j ACCEPT
-A INPUT -s 67.16.140.98/32 -j ACCEPT
-A INPUT -s 67.16.141.177/32 -j ACCEPT
-A INPUT -s 67.16.141.178/32 -j ACCEPT
-A INPUT -s 67.16.142.221/32 -j ACCEPT
-A INPUT -s 67.16.142.222/32 -j ACCEPT
-A INPUT -s 67.16.145.221/32 -j ACCEPT
-A INPUT -s 67.16.145.222/32 -j ACCEPT
-A INPUT -s 67.16.145.225/32 -j ACCEPT
-A INPUT -s 67.16.145.226/32 -j ACCEPT
-A INPUT -s 67.16.146.133/32 -j ACCEPT
-A INPUT -s 67.16.146.134/32 -j ACCEPT
-A INPUT -s 67.16.146.137/32 -j ACCEPT
-A INPUT -s 67.16.146.138/32 -j ACCEPT
-A INPUT -s 67.16.146.141/32 -j ACCEPT
-A INPUT -s 67.16.146.142/32 -j ACCEPT
-A INPUT -s 67.16.146.149/32 -j ACCEPT
-A INPUT -s 67.16.146.150/32 -j ACCEPT
-A INPUT -s 67.16.146.165/32 -j ACCEPT
-A INPUT -s 67.16.146.166/32 -j ACCEPT
-A INPUT -s 67.16.146.173/32 -j ACCEPT
-A INPUT -s 67.16.146.174/32 -j ACCEPT
-A INPUT -s 67.16.146.185/32 -j ACCEPT
-A INPUT -s 67.16.146.186/32 -j ACCEPT
-A INPUT -s 67.16.147.117/32 -j ACCEPT
-A INPUT -s 67.16.147.118/32 -j ACCEPT
-A INPUT -s 67.16.148.33/32 -j ACCEPT
-A INPUT -s 67.16.148.34/32 -j ACCEPT
-A INPUT -s 67.16.149.201/32 -j ACCEPT
-A INPUT -s 67.16.149.202/32 -j ACCEPT
-A INPUT -s 67.16.151.154/31 -j ACCEPT
-A INPUT -s 67.16.151.156/32 -j ACCEPT
-A INPUT -s 67.16.156.97/32 -j ACCEPT
-A INPUT -s 67.16.156.98/32 -j ACCEPT
-A INPUT -s 67.16.156.101/32 -j ACCEPT
-A INPUT -s 67.16.156.102/32 -j ACCEPT
-A INPUT -s 67.16.156.105/32 -j ACCEPT
-A INPUT -s 67.16.156.106/32 -j ACCEPT
-A INPUT -s 67.16.156.109/32 -j ACCEPT
-A INPUT -s 67.16.156.110/32 -j ACCEPT
-A INPUT -s 67.16.157.49/32 -j ACCEPT
-A INPUT -s 67.16.157.50/32 -j ACCEPT
-A INPUT -s 67.16.157.65/32 -j ACCEPT
-A INPUT -s 67.16.157.66/32 -j ACCEPT
-A INPUT -s 67.16.160.93/32 -j ACCEPT
-A INPUT -s 67.16.160.97/32 -j ACCEPT
-A INPUT -s 67.16.160.137/32 -j ACCEPT
-A INPUT -s 67.16.160.141/32 -j ACCEPT
-A INPUT -s 67.16.160.153/32 -j ACCEPT
-A INPUT -s 67.16.160.217/32 -j ACCEPT
-A INPUT -s 67.16.160.218/32 -j ACCEPT
-A INPUT -s 67.16.160.249/32 -j ACCEPT
-A INPUT -s 67.16.160.250/32 -j ACCEPT
-A INPUT -s 67.16.161.5/32 -j ACCEPT
-A INPUT -s 67.16.161.9/32 -j ACCEPT
-A INPUT -s 67.16.161.101/32 -j ACCEPT
-A INPUT -s 67.16.162.65/32 -j ACCEPT
-A INPUT -s 67.16.162.66/32 -j ACCEPT
-A INPUT -s 67.16.162.73/32 -j ACCEPT
-A INPUT -s 67.16.162.74/32 -j ACCEPT
-A INPUT -s 67.16.162.81/32 -j ACCEPT
-A INPUT -s 67.16.162.82/32 -j ACCEPT
-A INPUT -s 67.16.162.89/32 -j ACCEPT
-A INPUT -s 67.16.162.90/32 -j ACCEPT
-A INPUT -s 67.16.162.93/32 -j ACCEPT
-A INPUT -s 67.16.162.94/32 -j ACCEPT
-A INPUT -s 67.16.162.97/32 -j ACCEPT
-A INPUT -s 67.16.162.98/32 -j ACCEPT
-A INPUT -s 67.16.162.142/32 -j ACCEPT
-A INPUT -s 67.16.163.169/32 -j ACCEPT
-A INPUT -s 67.16.164.165/32 -j ACCEPT
-A INPUT -s 67.16.164.166/32 -j ACCEPT
-A INPUT -s 67.16.164.173/32 -j ACCEPT
-A INPUT -s 67.16.164.174/32 -j ACCEPT
-A INPUT -s 67.16.164.245/32 -j ACCEPT
-A INPUT -s 67.16.165.13/32 -j ACCEPT
-A INPUT -s 67.16.165.33/32 -j ACCEPT
-A INPUT -s 67.16.165.45/32 -j ACCEPT
-A INPUT -s 67.16.165.145/32 -j ACCEPT
-A INPUT -s 67.16.165.146/32 -j ACCEPT
-A INPUT -s 67.16.166.142/32 -j ACCEPT
-A INPUT -s 67.16.166.149/32 -j ACCEPT
-A INPUT -s 67.16.167.25/32 -j ACCEPT
-A INPUT -s 67.16.167.225/32 -j ACCEPT
-A INPUT -s 67.16.167.226/32 -j ACCEPT
-A INPUT -s 67.16.167.229/32 -j ACCEPT
-A INPUT -s 67.16.167.230/32 -j ACCEPT
-A INPUT -s 67.16.172.81/32 -j ACCEPT
-A INPUT -s 67.16.172.82/32 -j ACCEPT
-A INPUT -s 67.16.172.110/31 -j ACCEPT
-A INPUT -s 67.16.172.160/32 -j ACCEPT
-A INPUT -s 67.16.178.125/32 -j ACCEPT
-A INPUT -s 67.16.178.126/32 -j ACCEPT
-A INPUT -s 67.16.178.129/32 -j ACCEPT
-A INPUT -s 67.16.178.130/32 -j ACCEPT
-A INPUT -s 67.16.179.77/32 -j ACCEPT
-A INPUT -s 67.16.179.93/32 -j ACCEPT
-A INPUT -s 67.16.179.115/32 -j ACCEPT
-A INPUT -s 67.16.179.119/32 -j ACCEPT
-A INPUT -s 67.16.180.5/32 -j ACCEPT
-A INPUT -s 67.16.180.6/32 -j ACCEPT
-A INPUT -s 67.16.180.9/32 -j ACCEPT
-A INPUT -s 67.16.180.10/32 -j ACCEPT
-A INPUT -s 67.16.180.21/32 -j ACCEPT
-A INPUT -s 67.16.180.22/32 -j ACCEPT
-A INPUT -s 67.17.58.194/32 -j ACCEPT
-A INPUT -s 67.17.61.246/32 -j ACCEPT
-A INPUT -s 67.17.66.109/32 -j ACCEPT
-A INPUT -s 67.17.67.1/32 -j ACCEPT
-A INPUT -s 67.17.67.5/32 -j ACCEPT
-A INPUT -s 67.17.67.6/32 -j ACCEPT
-A INPUT -s 67.17.67.17/32 -j ACCEPT
-A INPUT -s 67.17.67.18/32 -j ACCEPT
-A INPUT -s 67.17.67.65/32 -j ACCEPT
-A INPUT -s 67.17.67.66/32 -j ACCEPT
-A INPUT -s 67.17.67.85/32 -j ACCEPT
-A INPUT -s 67.17.67.86/32 -j ACCEPT
-A INPUT -s 67.17.67.133/32 -j ACCEPT
-A INPUT -s 67.17.67.134/32 -j ACCEPT
-A INPUT -s 67.17.67.141/32 -j ACCEPT
-A INPUT -s 67.17.67.142/32 -j ACCEPT
-A INPUT -s 67.17.70.117/32 -j ACCEPT
-A INPUT -s 67.17.70.118/32 -j ACCEPT
-A INPUT -s 67.17.71.163/32 -j ACCEPT
-A INPUT -s 67.17.76.113/32 -j ACCEPT
-A INPUT -s 67.17.76.114/31 -j ACCEPT
-A INPUT -s 67.17.76.116/32 -j ACCEPT
-A INPUT -s 67.17.76.118/32 -j ACCEPT
-A INPUT -s 67.17.78.29/32 -j ACCEPT
-A INPUT -s 67.17.78.30/32 -j ACCEPT
-A INPUT -s 67.17.80.46/32 -j ACCEPT
-A INPUT -s 67.17.80.108/32 -j ACCEPT
-A INPUT -s 67.17.80.157/32 -j ACCEPT
-A INPUT -s 67.17.80.158/32 -j ACCEPT
-A INPUT -s 67.17.80.177/32 -j ACCEPT
-A INPUT -s 67.17.80.189/32 -j ACCEPT
-A INPUT -s 67.17.81.116/32 -j ACCEPT
-A INPUT -s 67.17.81.130/32 -j ACCEPT
-A INPUT -s 67.17.81.172/32 -j ACCEPT
-A INPUT -s 67.17.82.140/32 -j ACCEPT
-A INPUT -s 67.17.82.145/32 -j ACCEPT
-A INPUT -s 67.17.82.239/32 -j ACCEPT
-A INPUT -s 67.17.82.240/32 -j ACCEPT
-A INPUT -s 67.17.83.32/32 -j ACCEPT
-A INPUT -s 67.17.83.78/32 -j ACCEPT
-A INPUT -s 67.17.83.88/31 -j ACCEPT
-A INPUT -s 67.17.83.90/32 -j ACCEPT
-A INPUT -s 67.17.83.162/32 -j ACCEPT
-A INPUT -s 67.17.83.169/32 -j ACCEPT
-A INPUT -s 67.17.83.177/32 -j ACCEPT
-A INPUT -s 67.17.83.219/32 -j ACCEPT
-A INPUT -s 67.17.83.220/31 -j ACCEPT
-A INPUT -s 67.17.86.233/32 -j ACCEPT
-A INPUT -s 67.17.86.237/32 -j ACCEPT
-A INPUT -s 67.17.89.73/32 -j ACCEPT
-A INPUT -s 67.17.89.77/32 -j ACCEPT
-A INPUT -s 67.17.89.81/32 -j ACCEPT
-A INPUT -s 67.17.89.85/32 -j ACCEPT
-A INPUT -s 67.17.92.13/32 -j ACCEPT
-A INPUT -s 67.17.92.14/32 -j ACCEPT
-A INPUT -s 67.17.92.41/32 -j ACCEPT
-A INPUT -s 67.17.92.42/32 -j ACCEPT
-A INPUT -s 67.17.92.129/32 -j ACCEPT
-A INPUT -s 67.17.92.161/32 -j ACCEPT
-A INPUT -s 67.17.92.162/32 -j ACCEPT
-A INPUT -s 67.17.92.217/32 -j ACCEPT
-A INPUT -s 67.17.93.0/30 -j ACCEPT
-A INPUT -s 67.17.93.4/32 -j ACCEPT
-A INPUT -s 67.17.93.7/32 -j ACCEPT
-A INPUT -s 67.17.93.8/32 -j ACCEPT
-A INPUT -s 67.17.93.11/32 -j ACCEPT
-A INPUT -s 67.17.93.12/32 -j ACCEPT
-A INPUT -s 67.17.93.15/32 -j ACCEPT
-A INPUT -s 67.17.93.16/32 -j ACCEPT
-A INPUT -s 67.17.93.19/32 -j ACCEPT
-A INPUT -s 67.17.93.20/32 -j ACCEPT
-A INPUT -s 67.17.93.23/32 -j ACCEPT
-A INPUT -s 67.17.93.24/32 -j ACCEPT
-A INPUT -s 67.17.93.27/32 -j ACCEPT
-A INPUT -s 67.17.93.28/30 -j ACCEPT
-A INPUT -s 67.17.93.32/32 -j ACCEPT
-A INPUT -s 67.17.93.35/32 -j ACCEPT
-A INPUT -s 67.17.93.36/30 -j ACCEPT
-A INPUT -s 67.17.93.40/32 -j ACCEPT
-A INPUT -s 67.17.93.43/32 -j ACCEPT
-A INPUT -s 67.17.93.44/30 -j ACCEPT
-A INPUT -s 67.17.93.48/29 -j ACCEPT
-A INPUT -s 67.17.93.56/32 -j ACCEPT
-A INPUT -s 67.17.93.59/32 -j ACCEPT
-A INPUT -s 67.17.93.60/30 -j ACCEPT
-A INPUT -s 67.17.93.64/30 -j ACCEPT
-A INPUT -s 67.17.93.68/32 -j ACCEPT
-A INPUT -s 67.17.93.71/32 -j ACCEPT
-A INPUT -s 67.17.93.72/32 -j ACCEPT
-A INPUT -s 67.17.93.75/32 -j ACCEPT
-A INPUT -s 67.17.93.76/32 -j ACCEPT
-A INPUT -s 67.17.93.79/32 -j ACCEPT
-A INPUT -s 67.17.93.80/32 -j ACCEPT
-A INPUT -s 67.17.93.83/32 -j ACCEPT
-A INPUT -s 67.17.93.84/30 -j ACCEPT
-A INPUT -s 67.17.93.88/32 -j ACCEPT
-A INPUT -s 67.17.93.91/32 -j ACCEPT
-A INPUT -s 67.17.93.92/30 -j ACCEPT
-A INPUT -s 67.17.93.96/29 -j ACCEPT
-A INPUT -s 67.17.93.104/32 -j ACCEPT
-A INPUT -s 67.17.93.107/32 -j ACCEPT
-A INPUT -s 67.17.93.108/30 -j ACCEPT
-A INPUT -s 67.17.93.112/32 -j ACCEPT
-A INPUT -s 67.17.93.115/32 -j ACCEPT
-A INPUT -s 67.17.93.116/32 -j ACCEPT
-A INPUT -s 67.17.93.119/32 -j ACCEPT
-A INPUT -s 67.17.93.120/32 -j ACCEPT
-A INPUT -s 67.17.93.123/32 -j ACCEPT
-A INPUT -s 67.17.93.124/32 -j ACCEPT
-A INPUT -s 67.17.93.127/32 -j ACCEPT
-A INPUT -s 67.17.93.128/30 -j ACCEPT
-A INPUT -s 67.17.93.132/32 -j ACCEPT
-A INPUT -s 67.17.93.135/32 -j ACCEPT
-A INPUT -s 67.17.93.136/30 -j ACCEPT
-A INPUT -s 67.17.93.140/32 -j ACCEPT
-A INPUT -s 67.17.93.143/32 -j ACCEPT
-A INPUT -s 67.17.93.144/32 -j ACCEPT
-A INPUT -s 67.17.93.147/32 -j ACCEPT
-A INPUT -s 67.17.93.148/30 -j ACCEPT
-A INPUT -s 67.17.93.152/29 -j ACCEPT
-A INPUT -s 67.17.93.160/30 -j ACCEPT
-A INPUT -s 67.17.93.164/32 -j ACCEPT
-A INPUT -s 67.17.93.167/32 -j ACCEPT
-A INPUT -s 67.17.93.168/32 -j ACCEPT
-A INPUT -s 67.17.93.171/32 -j ACCEPT
-A INPUT -s 67.17.93.172/32 -j ACCEPT
-A INPUT -s 67.17.93.175/32 -j ACCEPT
-A INPUT -s 67.17.93.176/32 -j ACCEPT
-A INPUT -s 67.17.93.179/32 -j ACCEPT
-A INPUT -s 67.17.93.180/32 -j ACCEPT
-A INPUT -s 67.17.93.183/32 -j ACCEPT
-A INPUT -s 67.17.93.184/30 -j ACCEPT
-A INPUT -s 67.17.93.188/32 -j ACCEPT
-A INPUT -s 67.17.93.191/32 -j ACCEPT
-A INPUT -s 67.17.93.192/32 -j ACCEPT
-A INPUT -s 67.17.93.195/32 -j ACCEPT
-A INPUT -s 67.17.93.196/32 -j ACCEPT
-A INPUT -s 67.17.93.199/32 -j ACCEPT
-A INPUT -s 67.17.93.200/29 -j ACCEPT
-A INPUT -s 67.17.93.208/32 -j ACCEPT
-A INPUT -s 67.17.93.211/32 -j ACCEPT
-A INPUT -s 67.17.93.212/30 -j ACCEPT
-A INPUT -s 67.17.93.216/32 -j ACCEPT
-A INPUT -s 67.17.93.219/32 -j ACCEPT
-A INPUT -s 67.17.93.220/32 -j ACCEPT
-A INPUT -s 67.17.93.223/32 -j ACCEPT
-A INPUT -s 67.17.93.224/30 -j ACCEPT
-A INPUT -s 67.17.93.228/32 -j ACCEPT
-A INPUT -s 67.17.93.231/32 -j ACCEPT
-A INPUT -s 67.17.93.232/32 -j ACCEPT
-A INPUT -s 67.17.93.235/32 -j ACCEPT
-A INPUT -s 67.17.93.236/30 -j ACCEPT
-A INPUT -s 67.17.93.240/29 -j ACCEPT
-A INPUT -s 67.17.93.248/32 -j ACCEPT
-A INPUT -s 67.17.93.251/32 -j ACCEPT
-A INPUT -s 67.17.93.252/30 -j ACCEPT
-A INPUT -s 67.17.94.9/32 -j ACCEPT
-A INPUT -s 67.17.94.10/32 -j ACCEPT
-A INPUT -s 67.17.94.237/32 -j ACCEPT
-A INPUT -s 67.17.94.238/32 -j ACCEPT
-A INPUT -s 67.17.95.50/32 -j ACCEPT
-A INPUT -s 67.17.95.77/32 -j ACCEPT
-A INPUT -s 67.17.95.78/32 -j ACCEPT
-A INPUT -s 67.17.96.99/32 -j ACCEPT
-A INPUT -s 67.17.96.137/32 -j ACCEPT
-A INPUT -s 67.17.96.138/32 -j ACCEPT
-A INPUT -s 67.17.96.141/32 -j ACCEPT
-A INPUT -s 67.17.96.142/32 -j ACCEPT
-A INPUT -s 67.17.99.218/32 -j ACCEPT
-A INPUT -s 67.17.101.97/32 -j ACCEPT
-A INPUT -s 67.17.101.98/32 -j ACCEPT
-A INPUT -s 67.17.101.105/32 -j ACCEPT
-A INPUT -s 67.17.101.106/32 -j ACCEPT
-A INPUT -s 67.17.101.109/32 -j ACCEPT
-A INPUT -s 67.17.101.110/32 -j ACCEPT
-A INPUT -s 67.17.101.189/32 -j ACCEPT
-A INPUT -s 67.17.101.190/32 -j ACCEPT
-A INPUT -s 67.17.103.165/32 -j ACCEPT
-A INPUT -s 67.17.103.166/32 -j ACCEPT
-A INPUT -s 67.17.107.85/32 -j ACCEPT
-A INPUT -s 67.17.107.86/32 -j ACCEPT
-A INPUT -s 67.17.107.93/32 -j ACCEPT
-A INPUT -s 67.17.108.1/32 -j ACCEPT
-A INPUT -s 67.17.108.2/32 -j ACCEPT
-A INPUT -s 67.17.109.41/32 -j ACCEPT
-A INPUT -s 67.17.109.42/32 -j ACCEPT
-A INPUT -s 67.17.109.105/32 -j ACCEPT
-A INPUT -s 67.17.109.106/32 -j ACCEPT
-A INPUT -s 67.17.109.209/32 -j ACCEPT
-A INPUT -s 67.17.109.210/32 -j ACCEPT
-A INPUT -s 67.17.156.165/32 -j ACCEPT
-A INPUT -s 67.17.156.166/32 -j ACCEPT
-A INPUT -s 67.17.160.41/32 -j ACCEPT
-A INPUT -s 67.17.160.42/32 -j ACCEPT
-A INPUT -s 67.17.161.13/32 -j ACCEPT
-A INPUT -s 67.17.161.14/32 -j ACCEPT
-A INPUT -s 67.17.161.201/32 -j ACCEPT
-A INPUT -s 67.17.161.202/32 -j ACCEPT
-A INPUT -s 67.17.197.93/32 -j ACCEPT
-A INPUT -s 67.17.197.94/32 -j ACCEPT
-A INPUT -s 67.17.199.97/32 -j ACCEPT
-A INPUT -s 67.17.199.98/32 -j ACCEPT
-A INPUT -s 67.17.199.185/32 -j ACCEPT
-A INPUT -s 67.17.199.186/32 -j ACCEPT
-A INPUT -s 67.17.213.89/32 -j ACCEPT
-A INPUT -s 67.17.213.90/32 -j ACCEPT
-A INPUT -s 67.17.213.213/32 -j ACCEPT
-A INPUT -s 67.17.213.214/32 -j ACCEPT
-A INPUT -s 67.220.183.160/28 -j ACCEPT
-A INPUT -s 67.220.184.16/29 -j ACCEPT
-A INPUT -s 69.24.250.0/28 -j ACCEPT
-A INPUT -s 69.61.8.88/29 -j ACCEPT
-A INPUT -s 69.61.8.192/29 -j ACCEPT
-A INPUT -s 69.61.8.208/29 -j ACCEPT
-A INPUT -s 69.61.10.160/29 -j ACCEPT
-A INPUT -s 69.61.11.192/27 -j ACCEPT
-A INPUT -s 69.61.11.248/29 -j ACCEPT
-A INPUT -s 69.61.16.160/29 -j ACCEPT
-A INPUT -s 69.61.16.208/29 -j ACCEPT
-A INPUT -s 69.61.18.128/29 -j ACCEPT
-A INPUT -s 69.61.21.120/29 -j ACCEPT
-A INPUT -s 69.61.22.152/29 -j ACCEPT
-A INPUT -s 69.61.23.48/29 -j ACCEPT
-A INPUT -s 69.61.25.88/29 -j ACCEPT
-A INPUT -s 69.61.28.120/29 -j ACCEPT
-A INPUT -s 69.61.28.128/29 -j ACCEPT
-A INPUT -s 69.61.28.144/29 -j ACCEPT
-A INPUT -s 69.61.29.64/26 -j ACCEPT
-A INPUT -s 69.61.29.176/29 -j ACCEPT
-A INPUT -s 69.61.31.8/29 -j ACCEPT
-A INPUT -s 69.61.33.96/27 -j ACCEPT
-A INPUT -s 69.61.34.16/29 -j ACCEPT
-A INPUT -s 69.61.45.64/27 -j ACCEPT
-A INPUT -s 69.61.47.48/28 -j ACCEPT
-A INPUT -s 69.61.55.160/28 -j ACCEPT
-A INPUT -s 69.61.56.88/29 -j ACCEPT
-A INPUT -s 69.61.56.160/27 -j ACCEPT
-A INPUT -s 69.61.59.160/27 -j ACCEPT
-A INPUT -s 69.61.93.0/24 -j ACCEPT
-A INPUT -s 69.61.102.64/27 -j ACCEPT
-A INPUT -s 69.61.107.32/27 -j ACCEPT
-A INPUT -s 69.63.145.224/30 -j ACCEPT
-A INPUT -s 69.63.151.166/32 -j ACCEPT
-A INPUT -s 69.63.159.109/32 -j ACCEPT
-A INPUT -s 69.63.159.110/31 -j ACCEPT
-A INPUT -s 69.63.159.112/31 -j ACCEPT
-A INPUT -s 72.14.241.0/29 -j ACCEPT
-A INPUT -s 72.247.90.0/23 -j ACCEPT
-A INPUT -s 72.247.92.0/22 -j ACCEPT
-A INPUT -s 78.41.226.224/28 -j ACCEPT
-A INPUT -s 78.41.226.240/29 -j ACCEPT
-A INPUT -s 80.239.202.80/29 -j ACCEPT
-A INPUT -s 82.114.142.128/25 -j ACCEPT
-A INPUT -s 84.16.6.5/32 -j ACCEPT
-A INPUT -s 84.16.6.6/32 -j ACCEPT
-A INPUT -s 84.16.6.61/32 -j ACCEPT
-A INPUT -s 84.16.6.62/32 -j ACCEPT
-A INPUT -s 84.16.6.101/32 -j ACCEPT
-A INPUT -s 84.16.6.102/32 -j ACCEPT
-A INPUT -s 84.16.6.125/32 -j ACCEPT
-A INPUT -s 84.16.6.126/32 -j ACCEPT
-A INPUT -s 84.16.6.145/32 -j ACCEPT
-A INPUT -s 84.16.6.146/32 -j ACCEPT
-A INPUT -s 84.16.6.181/32 -j ACCEPT
-A INPUT -s 84.16.6.182/32 -j ACCEPT
-A INPUT -s 84.16.7.57/32 -j ACCEPT
-A INPUT -s 84.16.7.58/32 -j ACCEPT
-A INPUT -s 84.16.7.249/32 -j ACCEPT
-A INPUT -s 84.16.7.250/32 -j ACCEPT
-A INPUT -s 84.16.9.233/32 -j ACCEPT
-A INPUT -s 84.16.9.234/32 -j ACCEPT
-A INPUT -s 84.16.10.69/32 -j ACCEPT
-A INPUT -s 84.16.10.70/32 -j ACCEPT
-A INPUT -s 84.16.10.169/32 -j ACCEPT
-A INPUT -s 84.16.10.193/32 -j ACCEPT
-A INPUT -s 84.16.10.194/32 -j ACCEPT
-A INPUT -s 84.16.10.237/32 -j ACCEPT
-A INPUT -s 84.16.10.238/32 -j ACCEPT
-A INPUT -s 84.16.10.245/32 -j ACCEPT
-A INPUT -s 84.16.10.246/32 -j ACCEPT
-A INPUT -s 84.16.10.249/32 -j ACCEPT
-A INPUT -s 84.16.10.250/32 -j ACCEPT
-A INPUT -s 84.16.10.253/32 -j ACCEPT
-A INPUT -s 84.16.10.254/32 -j ACCEPT
-A INPUT -s 84.16.11.33/32 -j ACCEPT
-A INPUT -s 84.16.11.34/32 -j ACCEPT
-A INPUT -s 84.16.11.97/32 -j ACCEPT
-A INPUT -s 84.16.11.98/32 -j ACCEPT
-A INPUT -s 84.16.11.157/32 -j ACCEPT
-A INPUT -s 84.16.11.158/32 -j ACCEPT
-A INPUT -s 84.16.11.229/32 -j ACCEPT
-A INPUT -s 84.16.11.230/32 -j ACCEPT
-A INPUT -s 84.16.11.233/32 -j ACCEPT
-A INPUT -s 84.16.12.101/32 -j ACCEPT
-A INPUT -s 84.16.12.102/32 -j ACCEPT
-A INPUT -s 84.16.14.117/32 -j ACCEPT
-A INPUT -s 84.16.14.118/32 -j ACCEPT
-A INPUT -s 84.16.15.5/32 -j ACCEPT
-A INPUT -s 84.16.15.6/32 -j ACCEPT
-A INPUT -s 84.16.15.73/32 -j ACCEPT
-A INPUT -s 84.16.15.85/32 -j ACCEPT
-A INPUT -s 84.16.15.197/32 -j ACCEPT
-A INPUT -s 84.16.15.198/32 -j ACCEPT
-A INPUT -s 84.16.18.29/32 -j ACCEPT
-A INPUT -s 84.16.18.30/32 -j ACCEPT
-A INPUT -s 84.16.18.33/32 -j ACCEPT
-A INPUT -s 84.16.18.34/32 -j ACCEPT
-A INPUT -s 84.16.18.193/32 -j ACCEPT
-A INPUT -s 84.16.18.194/32 -j ACCEPT
-A INPUT -s 89.202.218.104/31 -j ACCEPT
-A INPUT -s 94.142.100.148/32 -j ACCEPT
-A INPUT -s 94.142.103.10/32 -j ACCEPT
-A INPUT -s 94.142.103.14/32 -j ACCEPT
-A INPUT -s 94.142.103.18/32 -j ACCEPT
-A INPUT -s 94.142.103.22/32 -j ACCEPT
-A INPUT -s 94.142.103.25/32 -j ACCEPT
-A INPUT -s 94.142.103.26/32 -j ACCEPT
-A INPUT -s 94.142.103.30/32 -j ACCEPT
-A INPUT -s 94.142.103.34/32 -j ACCEPT
-A INPUT -s 94.142.103.86/32 -j ACCEPT
-A INPUT -s 94.142.103.153/32 -j ACCEPT
-A INPUT -s 94.142.106.148/32 -j ACCEPT
-A INPUT -s 94.142.110.148/32 -j ACCEPT
-A INPUT -s 94.142.116.33/32 -j ACCEPT
-A INPUT -s 94.142.116.34/32 -j ACCEPT
-A INPUT -s 94.142.116.37/32 -j ACCEPT
-A INPUT -s 94.142.116.38/32 -j ACCEPT
-A INPUT -s 94.142.116.73/32 -j ACCEPT
-A INPUT -s 94.142.116.77/32 -j ACCEPT
-A INPUT -s 94.142.116.81/32 -j ACCEPT
-A INPUT -s 94.142.116.85/32 -j ACCEPT
-A INPUT -s 94.142.116.89/32 -j ACCEPT
-A INPUT -s 94.142.116.93/32 -j ACCEPT
-A INPUT -s 94.142.116.117/32 -j ACCEPT
-A INPUT -s 94.142.116.121/32 -j ACCEPT
-A INPUT -s 94.142.117.1/32 -j ACCEPT
-A INPUT -s 94.142.117.5/32 -j ACCEPT
-A INPUT -s 94.142.117.9/32 -j ACCEPT
-A INPUT -s 94.142.117.13/32 -j ACCEPT
-A INPUT -s 94.142.117.121/32 -j ACCEPT
-A INPUT -s 94.142.117.125/32 -j ACCEPT
-A INPUT -s 94.142.117.129/32 -j ACCEPT
-A INPUT -s 94.142.117.133/32 -j ACCEPT
-A INPUT -s 94.142.117.162/32 -j ACCEPT
-A INPUT -s 94.142.117.166/32 -j ACCEPT
-A INPUT -s 94.142.119.41/32 -j ACCEPT
-A INPUT -s 94.142.119.42/32 -j ACCEPT
-A INPUT -s 94.142.119.85/32 -j ACCEPT
-A INPUT -s 94.142.119.86/32 -j ACCEPT
-A INPUT -s 94.142.119.109/32 -j ACCEPT
-A INPUT -s 94.142.119.110/32 -j ACCEPT
-A INPUT -s 94.142.119.113/32 -j ACCEPT
-A INPUT -s 94.142.119.114/32 -j ACCEPT
-A INPUT -s 94.142.119.117/32 -j ACCEPT
-A INPUT -s 94.142.119.118/32 -j ACCEPT
-A INPUT -s 94.142.119.137/32 -j ACCEPT
-A INPUT -s 94.142.119.138/32 -j ACCEPT
-A INPUT -s 94.142.120.53/32 -j ACCEPT
-A INPUT -s 94.142.120.57/32 -j ACCEPT
-A INPUT -s 94.142.120.61/32 -j ACCEPT
-A INPUT -s 94.142.120.209/32 -j ACCEPT
-A INPUT -s 94.142.120.213/32 -j ACCEPT
-A INPUT -s 94.142.120.217/32 -j ACCEPT
-A INPUT -s 94.142.120.222/32 -j ACCEPT
-A INPUT -s 94.142.120.225/32 -j ACCEPT
-A INPUT -s 94.142.121.45/32 -j ACCEPT
-A INPUT -s 94.142.121.173/32 -j ACCEPT
-A INPUT -s 94.142.121.174/32 -j ACCEPT
-A INPUT -s 94.142.121.209/32 -j ACCEPT
-A INPUT -s 94.142.121.213/32 -j ACCEPT
-A INPUT -s 94.142.121.217/32 -j ACCEPT
-A INPUT -s 94.142.121.221/32 -j ACCEPT
-A INPUT -s 94.142.121.225/32 -j ACCEPT
-A INPUT -s 94.142.121.229/32 -j ACCEPT
-A INPUT -s 94.142.121.233/32 -j ACCEPT
-A INPUT -s 94.142.121.237/32 -j ACCEPT
-A INPUT -s 94.142.121.242/32 -j ACCEPT
-A INPUT -s 94.142.121.246/32 -j ACCEPT
-A INPUT -s 94.142.121.250/32 -j ACCEPT
-A INPUT -s 94.142.122.41/32 -j ACCEPT
-A INPUT -s 94.142.122.42/32 -j ACCEPT
-A INPUT -s 94.142.122.57/32 -j ACCEPT
-A INPUT -s 94.142.122.58/32 -j ACCEPT
-A INPUT -s 94.142.122.101/32 -j ACCEPT
-A INPUT -s 94.142.122.102/32 -j ACCEPT
-A INPUT -s 94.142.122.109/32 -j ACCEPT
-A INPUT -s 94.142.122.110/32 -j ACCEPT
-A INPUT -s 94.142.122.138/32 -j ACCEPT
-A INPUT -s 94.142.123.13/32 -j ACCEPT
-A INPUT -s 94.142.123.17/32 -j ACCEPT
-A INPUT -s 94.142.123.21/32 -j ACCEPT
-A INPUT -s 94.142.123.25/32 -j ACCEPT
-A INPUT -s 94.142.123.29/32 -j ACCEPT
-A INPUT -s 94.142.123.33/32 -j ACCEPT
-A INPUT -s 94.142.123.37/32 -j ACCEPT
-A INPUT -s 94.142.123.41/32 -j ACCEPT
-A INPUT -s 94.142.123.45/32 -j ACCEPT
-A INPUT -s 94.142.123.49/32 -j ACCEPT
-A INPUT -s 94.142.123.53/32 -j ACCEPT
-A INPUT -s 94.142.123.57/32 -j ACCEPT
-A INPUT -s 94.142.123.61/32 -j ACCEPT
-A INPUT -s 94.142.123.65/32 -j ACCEPT
-A INPUT -s 94.142.123.69/32 -j ACCEPT
-A INPUT -s 94.142.123.73/32 -j ACCEPT
-A INPUT -s 94.142.124.2/32 -j ACCEPT
-A INPUT -s 94.142.124.38/32 -j ACCEPT
-A INPUT -s 94.142.124.42/32 -j ACCEPT
-A INPUT -s 94.142.124.46/32 -j ACCEPT
-A INPUT -s 94.142.124.50/32 -j ACCEPT
-A INPUT -s 94.142.124.114/32 -j ACCEPT
-A INPUT -s 94.142.125.113/32 -j ACCEPT
-A INPUT -s 94.142.125.117/32 -j ACCEPT
-A INPUT -s 94.142.125.121/32 -j ACCEPT
-A INPUT -s 94.142.125.125/32 -j ACCEPT
-A INPUT -s 94.142.125.137/32 -j ACCEPT
-A INPUT -s 94.142.125.141/32 -j ACCEPT
-A INPUT -s 94.142.125.213/32 -j ACCEPT
-A INPUT -s 94.142.125.214/32 -j ACCEPT
-A INPUT -s 94.142.125.217/32 -j ACCEPT
-A INPUT -s 94.142.125.218/32 -j ACCEPT
-A INPUT -s 94.142.127.126/32 -j ACCEPT
-A INPUT -s 94.142.127.169/32 -j ACCEPT
-A INPUT -s 94.142.127.170/32 -j ACCEPT
-A INPUT -s 94.142.127.181/32 -j ACCEPT
-A INPUT -s 94.142.127.182/32 -j ACCEPT
-A INPUT -s 94.142.127.254/32 -j ACCEPT
-A INPUT -s 104.243.244.0/24 -j ACCEPT
-A INPUT -s 107.190.139.232/29 -j ACCEPT
-A INPUT -s 108.175.168.112/29 -j ACCEPT
-A INPUT -s 108.175.169.147/32 -j ACCEPT
-A INPUT -s 108.175.169.148/32 -j ACCEPT
-A INPUT -s 119.81.235.208/29 -j ACCEPT
-A INPUT -s 119.81.236.8/29 -j ACCEPT
-A INPUT -s 119.81.237.192/29 -j ACCEPT
-A INPUT -s 128.90.106.0/24 -j ACCEPT
-A INPUT -s 128.90.113.0/24 -j ACCEPT
-A INPUT -s 130.185.108.224/27 -j ACCEPT
-A INPUT -s 131.0.52.0/22 -j ACCEPT
-A INPUT -s 131.0.104.0/22 -j ACCEPT
-A INPUT -s 131.0.128.0/22 -j ACCEPT
-A INPUT -s 131.0.196.0/22 -j ACCEPT
-A INPUT -s 131.0.232.0/22 -j ACCEPT
-A INPUT -s 131.72.0.0/22 -j ACCEPT
-A INPUT -s 131.72.28.0/22 -j ACCEPT
-A INPUT -s 131.72.72.0/22 -j ACCEPT
-A INPUT -s 131.72.132.0/22 -j ACCEPT
-A INPUT -s 131.72.156.0/22 -j ACCEPT
-A INPUT -s 131.72.204.0/22 -j ACCEPT
-A INPUT -s 131.72.240.0/22 -j ACCEPT
-A INPUT -s 131.100.64.0/22 -j ACCEPT
-A INPUT -s 131.100.88.0/22 -j ACCEPT
-A INPUT -s 131.100.100.0/22 -j ACCEPT
-A INPUT -s 131.100.108.0/22 -j ACCEPT
-A INPUT -s 131.100.180.0/22 -j ACCEPT
-A INPUT -s 131.108.0.0/22 -j ACCEPT
-A INPUT -s 131.108.40.0/22 -j ACCEPT
-A INPUT -s 131.108.68.0/24 -j ACCEPT
-A INPUT -s 131.108.80.0/22 -j ACCEPT
-A INPUT -s 131.108.140.0/22 -j ACCEPT
-A INPUT -s 131.161.88.0/22 -j ACCEPT
-A INPUT -s 131.161.152.0/22 -j ACCEPT
-A INPUT -s 131.161.184.0/22 -j ACCEPT
-A INPUT -s 131.161.232.0/21 -j ACCEPT
-A INPUT -s 131.221.0.0/22 -j ACCEPT
-A INPUT -s 131.221.16.0/22 -j ACCEPT
-A INPUT -s 131.221.64.0/22 -j ACCEPT
-A INPUT -s 131.255.4.0/27 -j ACCEPT
-A INPUT -s 131.255.4.32/28 -j ACCEPT
-A INPUT -s 131.255.4.48/29 -j ACCEPT
-A INPUT -s 131.255.4.56/31 -j ACCEPT
-A INPUT -s 131.255.4.62/31 -j ACCEPT
-A INPUT -s 131.255.4.64/26 -j ACCEPT
-A INPUT -s 131.255.4.128/25 -j ACCEPT
-A INPUT -s 131.255.5.0/24 -j ACCEPT
-A INPUT -s 131.255.6.0/23 -j ACCEPT
-A INPUT -s 131.255.12.0/22 -j ACCEPT
-A INPUT -s 131.255.60.0/22 -j ACCEPT
-A INPUT -s 131.255.180.0/22 -j ACCEPT
-A INPUT -s 131.255.248.0/22 -j ACCEPT
-A INPUT -s 132.255.4.0/22 -j ACCEPT
-A INPUT -s 132.255.8.0/22 -j ACCEPT
-A INPUT -s 132.255.112.0/22 -j ACCEPT
-A INPUT -s 132.255.200.0/22 -j ACCEPT
-A INPUT -s 132.255.224.0/22 -j ACCEPT
-A INPUT -s 134.162.82.0/23 -j ACCEPT
-A INPUT -s 134.162.84.0/24 -j ACCEPT
-A INPUT -s 138.0.8.0/22 -j ACCEPT
-A INPUT -s 138.0.56.0/22 -j ACCEPT
-A INPUT -s 138.0.104.0/22 -j ACCEPT
-A INPUT -s 138.0.152.0/21 -j ACCEPT
-A INPUT -s 138.0.184.0/22 -j ACCEPT
-A INPUT -s 138.36.16.0/22 -j ACCEPT
-A INPUT -s 138.36.52.0/22 -j ACCEPT
-A INPUT -s 138.36.96.0/22 -j ACCEPT
-A INPUT -s 138.36.148.0/22 -j ACCEPT
-A INPUT -s 138.36.236.0/22 -j ACCEPT
-A INPUT -s 140.191.0.0/16 -j ACCEPT
-A INPUT -s 141.101.103.0/24 -j ACCEPT
-A INPUT -s 142.70.54.0/24 -j ACCEPT
-A INPUT -s 152.168.0.0/14 -j ACCEPT
-A INPUT -s 152.231.16.0/21 -j ACCEPT
-A INPUT -s 152.231.48.0/20 -j ACCEPT
-A INPUT -s 157.92.0.0/16 -j ACCEPT
-A INPUT -s 159.63.23.5/32 -j ACCEPT
-A INPUT -s 159.63.23.6/32 -j ACCEPT
-A INPUT -s 159.63.23.9/32 -j ACCEPT
-A INPUT -s 159.63.23.10/32 -j ACCEPT
-A INPUT -s 159.63.23.29/32 -j ACCEPT
-A INPUT -s 159.63.23.30/32 -j ACCEPT
-A INPUT -s 159.63.23.169/32 -j ACCEPT
-A INPUT -s 159.63.23.170/32 -j ACCEPT
-A INPUT -s 159.63.23.209/32 -j ACCEPT
-A INPUT -s 159.63.23.210/32 -j ACCEPT
-A INPUT -s 159.63.23.217/32 -j ACCEPT
-A INPUT -s 159.63.23.218/32 -j ACCEPT
-A INPUT -s 159.63.53.149/32 -j ACCEPT
-A INPUT -s 159.63.53.150/32 -j ACCEPT
-A INPUT -s 159.63.53.213/32 -j ACCEPT
-A INPUT -s 159.63.53.214/32 -j ACCEPT
-A INPUT -s 161.0.64.0/22 -j ACCEPT
-A INPUT -s 161.0.72.0/21 -j ACCEPT
-A INPUT -s 161.0.176.0/21 -j ACCEPT
-A INPUT -s 161.22.0.0/19 -j ACCEPT
-A INPUT -s 161.190.0.0/16 -j ACCEPT
-A INPUT -s 162.97.118.157/32 -j ACCEPT
-A INPUT -s 162.97.118.158/32 -j ACCEPT
-A INPUT -s 163.10.0.0/16 -j ACCEPT
-A INPUT -s 167.252.0.0/16 -j ACCEPT
-A INPUT -s 168.83.0.0/16 -j ACCEPT
-A INPUT -s 168.96.0.0/16 -j ACCEPT
-A INPUT -s 168.101.0.0/16 -j ACCEPT
-A INPUT -s 168.226.0.0/16 -j ACCEPT
-A INPUT -s 169.53.243.0/27 -j ACCEPT
-A INPUT -s 169.54.193.128/29 -j ACCEPT
-A INPUT -s 170.51.61.0/24 -j ACCEPT
-A INPUT -s 170.51.62.0/23 -j ACCEPT
-A INPUT -s 170.51.128.0/17 -j ACCEPT
-A INPUT -s 170.155.0.0/16 -j ACCEPT
-A INPUT -s 170.210.0.0/16 -j ACCEPT
-A INPUT -s 173.255.2.208/29 -j ACCEPT
-A INPUT -s 173.255.4.104/29 -j ACCEPT
-A INPUT -s 173.255.7.32/28 -j ACCEPT
-A INPUT -s 174.136.106.40/29 -j ACCEPT
-A INPUT -s 176.67.81.112/28 -j ACCEPT
-A INPUT -s 176.67.84.68/30 -j ACCEPT
-A INPUT -s 176.67.86.8/30 -j ACCEPT
-A INPUT -s 177.234.128.0/22 -j ACCEPT
-A INPUT -s 179.0.0.0/23 -j ACCEPT
-A INPUT -s 179.0.4.0/22 -j ACCEPT
-A INPUT -s 179.0.11.0/24 -j ACCEPT
-A INPUT -s 179.0.14.0/24 -j ACCEPT
-A INPUT -s 179.0.25.0/24 -j ACCEPT
-A INPUT -s 179.0.130.0/23 -j ACCEPT
-A INPUT -s 179.0.132.0/22 -j ACCEPT
-A INPUT -s 179.0.136.0/21 -j ACCEPT
-A INPUT -s 179.0.144.0/23 -j ACCEPT
-A INPUT -s 179.0.147.0/24 -j ACCEPT
-A INPUT -s 179.0.148.0/22 -j ACCEPT
-A INPUT -s 179.0.193.0/24 -j ACCEPT
-A INPUT -s 179.0.203.0/24 -j ACCEPT
-A INPUT -s 179.0.224.0/19 -j ACCEPT
-A INPUT -s 179.36.0.0/14 -j ACCEPT
-A INPUT -s 179.40.0.0/15 -j ACCEPT
-A INPUT -s 179.42.160.0/21 -j ACCEPT
-A INPUT -s 179.42.168.0/22 -j ACCEPT
-A INPUT -s 179.42.176.0/20 -j ACCEPT
-A INPUT -s 179.43.64.0/20 -j ACCEPT
-A INPUT -s 179.43.100.0/22 -j ACCEPT
-A INPUT -s 179.43.112.0/24 -j ACCEPT
-A INPUT -s 179.43.113.0/26 -j ACCEPT
-A INPUT -s 179.43.113.64/27 -j ACCEPT
-A INPUT -s 179.43.113.96/29 -j ACCEPT
-A INPUT -s 179.43.113.112/28 -j ACCEPT
-A INPUT -s 179.43.113.128/25 -j ACCEPT
-A INPUT -s 179.43.114.0/29 -j ACCEPT
-A INPUT -s 179.43.114.16/28 -j ACCEPT
-A INPUT -s 179.43.114.32/27 -j ACCEPT
-A INPUT -s 179.43.114.64/26 -j ACCEPT
-A INPUT -s 179.43.114.128/25 -j ACCEPT
-A INPUT -s 179.43.115.32/27 -j ACCEPT
-A INPUT -s 179.43.115.64/26 -j ACCEPT
-A INPUT -s 179.43.115.128/25 -j ACCEPT
-A INPUT -s 179.43.116.0/26 -j ACCEPT
-A INPUT -s 179.43.116.64/28 -j ACCEPT
-A INPUT -s 179.43.116.88/29 -j ACCEPT
-A INPUT -s 179.43.116.96/28 -j ACCEPT
-A INPUT -s 179.43.116.128/28 -j ACCEPT
-A INPUT -s 179.43.116.152/29 -j ACCEPT
-A INPUT -s 179.43.116.160/27 -j ACCEPT
-A INPUT -s 179.43.116.192/26 -j ACCEPT
-A INPUT -s 179.43.117.0/25 -j ACCEPT
-A INPUT -s 179.43.117.128/29 -j ACCEPT
-A INPUT -s 179.43.117.144/29 -j ACCEPT
-A INPUT -s 179.43.117.160/28 -j ACCEPT
-A INPUT -s 179.43.117.176/29 -j ACCEPT
-A INPUT -s 179.43.117.192/27 -j ACCEPT
-A INPUT -s 179.43.117.224/28 -j ACCEPT
-A INPUT -s 179.43.117.248/29 -j ACCEPT
-A INPUT -s 179.43.118.0/24 -j ACCEPT
-A INPUT -s 179.43.119.0/26 -j ACCEPT
-A INPUT -s 179.43.119.64/29 -j ACCEPT
-A INPUT -s 179.43.119.80/28 -j ACCEPT
-A INPUT -s 179.43.119.96/27 -j ACCEPT
-A INPUT -s 179.43.119.128/28 -j ACCEPT
-A INPUT -s 179.43.119.144/29 -j ACCEPT
-A INPUT -s 179.43.119.160/27 -j ACCEPT
-A INPUT -s 179.43.119.192/26 -j ACCEPT
-A INPUT -s 179.43.120.0/21 -j ACCEPT
-A INPUT -s 179.48.252.0/22 -j ACCEPT
-A INPUT -s 179.49.72.0/21 -j ACCEPT
-A INPUT -s 179.49.96.0/20 -j ACCEPT
-A INPUT -s 179.49.120.0/21 -j ACCEPT
-A INPUT -s 179.51.80.0/20 -j ACCEPT
-A INPUT -s 179.51.224.0/20 -j ACCEPT
-A INPUT -s 179.51.240.0/21 -j ACCEPT
-A INPUT -s 179.60.0.0/19 -j ACCEPT
-A INPUT -s 179.60.96.0/20 -j ACCEPT
-A INPUT -s 179.60.152.0/21 -j ACCEPT
-A INPUT -s 179.60.168.0/21 -j ACCEPT
-A INPUT -s 179.60.184.0/21 -j ACCEPT
-A INPUT -s 179.60.196.0/22 -j ACCEPT
-A INPUT -s 179.60.200.0/22 -j ACCEPT
-A INPUT -s 179.60.208.0/22 -j ACCEPT
-A INPUT -s 179.60.216.0/21 -j ACCEPT
-A INPUT -s 179.60.228.0/22 -j ACCEPT
-A INPUT -s 179.60.232.0/21 -j ACCEPT
-A INPUT -s 179.60.248.0/21 -j ACCEPT
-A INPUT -s 179.61.0.0/21 -j ACCEPT
-A INPUT -s 179.61.8.0/22 -j ACCEPT
-A INPUT -s 179.61.16.0/20 -j ACCEPT
-A INPUT -s 179.61.32.0/19 -j ACCEPT
-A INPUT -s 179.61.64.0/19 -j ACCEPT
-A INPUT -s 179.62.0.0/16 -j ACCEPT
-A INPUT -s 179.63.200.0/21 -j ACCEPT
-A INPUT -s 179.63.208.0/21 -j ACCEPT
-A INPUT -s 179.63.236.0/22 -j ACCEPT
-A INPUT -s 179.63.240.0/22 -j ACCEPT
-A INPUT -s 179.63.248.0/22 -j ACCEPT
-A INPUT -s 181.0.0.0/13 -j ACCEPT
-A INPUT -s 181.8.0.0/14 -j ACCEPT
-A INPUT -s 181.12.0.0/15 -j ACCEPT
-A INPUT -s 181.14.0.0/17 -j ACCEPT
-A INPUT -s 181.14.128.0/18 -j ACCEPT
-A INPUT -s 181.14.192.0/21 -j ACCEPT
-A INPUT -s 181.14.200.0/22 -j ACCEPT
-A INPUT -s 181.14.204.0/25 -j ACCEPT
-A INPUT -s 181.14.204.128/27 -j ACCEPT
-A INPUT -s 181.14.204.160/29 -j ACCEPT
-A INPUT -s 181.14.204.176/28 -j ACCEPT
-A INPUT -s 181.14.204.192/26 -j ACCEPT
-A INPUT -s 181.14.205.0/24 -j ACCEPT
-A INPUT -s 181.14.206.0/23 -j ACCEPT
-A INPUT -s 181.14.208.0/20 -j ACCEPT
-A INPUT -s 181.14.224.0/21 -j ACCEPT
-A INPUT -s 181.14.232.0/22 -j ACCEPT
-A INPUT -s 181.14.236.0/25 -j ACCEPT
-A INPUT -s 181.14.236.128/28 -j ACCEPT
-A INPUT -s 181.14.236.152/29 -j ACCEPT
-A INPUT -s 181.14.236.160/27 -j ACCEPT
-A INPUT -s 181.14.236.192/26 -j ACCEPT
-A INPUT -s 181.14.237.0/24 -j ACCEPT
-A INPUT -s 181.14.238.0/23 -j ACCEPT
-A INPUT -s 181.14.240.0/23 -j ACCEPT
-A INPUT -s 181.14.242.0/26 -j ACCEPT
-A INPUT -s 181.14.242.64/27 -j ACCEPT
-A INPUT -s 181.14.242.96/29 -j ACCEPT
-A INPUT -s 181.14.242.112/28 -j ACCEPT
-A INPUT -s 181.14.242.128/25 -j ACCEPT
-A INPUT -s 181.14.243.0/24 -j ACCEPT
-A INPUT -s 181.14.244.0/22 -j ACCEPT
-A INPUT -s 181.14.248.0/21 -j ACCEPT
-A INPUT -s 181.15.0.0/17 -j ACCEPT
-A INPUT -s 181.15.128.0/21 -j ACCEPT
-A INPUT -s 181.15.136.0/24 -j ACCEPT
-A INPUT -s 181.15.137.0/29 -j ACCEPT
-A INPUT -s 181.15.137.16/28 -j ACCEPT
-A INPUT -s 181.15.137.32/27 -j ACCEPT
-A INPUT -s 181.15.137.64/26 -j ACCEPT
-A INPUT -s 181.15.137.128/25 -j ACCEPT
-A INPUT -s 181.15.138.0/23 -j ACCEPT
-A INPUT -s 181.15.140.0/22 -j ACCEPT
-A INPUT -s 181.15.144.0/23 -j ACCEPT
-A INPUT -s 181.15.146.0/26 -j ACCEPT
-A INPUT -s 181.15.146.72/29 -j ACCEPT
-A INPUT -s 181.15.146.80/28 -j ACCEPT
-A INPUT -s 181.15.146.104/29 -j ACCEPT
-A INPUT -s 181.15.146.112/28 -j ACCEPT
-A INPUT -s 181.15.146.128/25 -j ACCEPT
-A INPUT -s 181.15.147.0/24 -j ACCEPT
-A INPUT -s 181.15.148.0/28 -j ACCEPT
-A INPUT -s 181.15.148.16/29 -j ACCEPT
-A INPUT -s 181.15.148.32/27 -j ACCEPT
-A INPUT -s 181.15.148.64/26 -j ACCEPT
-A INPUT -s 181.15.148.128/25 -j ACCEPT
-A INPUT -s 181.15.149.0/24 -j ACCEPT
-A INPUT -s 181.15.150.0/27 -j ACCEPT
-A INPUT -s 181.15.150.40/29 -j ACCEPT
-A INPUT -s 181.15.150.48/28 -j ACCEPT
-A INPUT -s 181.15.150.64/26 -j ACCEPT
-A INPUT -s 181.15.150.128/25 -j ACCEPT
-A INPUT -s 181.15.151.0/24 -j ACCEPT
-A INPUT -s 181.15.152.0/21 -j ACCEPT
-A INPUT -s 181.15.160.0/19 -j ACCEPT
-A INPUT -s 181.15.192.0/18 -j ACCEPT
-A INPUT -s 181.16.0.0/16 -j ACCEPT
-A INPUT -s 181.20.0.0/14 -j ACCEPT
-A INPUT -s 181.24.0.0/13 -j ACCEPT
-A INPUT -s 181.41.224.0/19 -j ACCEPT
-A INPUT -s 181.44.0.0/14 -j ACCEPT
-A INPUT -s 181.78.0.0/15 -j ACCEPT
-A INPUT -s 181.80.0.0/12 -j ACCEPT
-A INPUT -s 181.96.0.0/13 -j ACCEPT
-A INPUT -s 181.104.0.0/14 -j ACCEPT
-A INPUT -s 181.108.0.0/15 -j ACCEPT
-A INPUT -s 181.110.0.0/17 -j ACCEPT
-A INPUT -s 181.110.128.0/18 -j ACCEPT
-A INPUT -s 181.110.192.0/19 -j ACCEPT
-A INPUT -s 181.110.224.0/20 -j ACCEPT
-A INPUT -s 181.110.240.0/21 -j ACCEPT
-A INPUT -s 181.110.248.0/22 -j ACCEPT
-A INPUT -s 181.110.252.0/24 -j ACCEPT
-A INPUT -s 181.110.253.0/25 -j ACCEPT
-A INPUT -s 181.110.253.128/27 -j ACCEPT
-A INPUT -s 181.110.253.168/29 -j ACCEPT
-A INPUT -s 181.110.253.176/28 -j ACCEPT
-A INPUT -s 181.110.253.192/26 -j ACCEPT
-A INPUT -s 181.110.254.0/23 -j ACCEPT
-A INPUT -s 181.111.0.0/16 -j ACCEPT
-A INPUT -s 181.114.32.0/20 -j ACCEPT
-A INPUT -s 181.114.48.0/21 -j ACCEPT
-A INPUT -s 181.114.60.0/22 -j ACCEPT
-A INPUT -s 181.114.128.0/19 -j ACCEPT
-A INPUT -s 181.114.192.0/19 -j ACCEPT
-A INPUT -s 181.114.224.0/21 -j ACCEPT
-A INPUT -s 181.116.0.0/15 -j ACCEPT
-A INPUT -s 181.118.0.0/19 -j ACCEPT
-A INPUT -s 181.118.64.0/18 -j ACCEPT
-A INPUT -s 181.118.128.0/20 -j ACCEPT
-A INPUT -s 181.118.176.0/20 -j ACCEPT
-A INPUT -s 181.118.192.0/18 -j ACCEPT
-A INPUT -s 181.119.0.0/20 -j ACCEPT
-A INPUT -s 181.119.16.0/23 -j ACCEPT
-A INPUT -s 181.119.18.0/30 -j ACCEPT
-A INPUT -s 181.119.18.4/32 -j ACCEPT
-A INPUT -s 181.119.18.6/31 -j ACCEPT
-A INPUT -s 181.119.18.8/29 -j ACCEPT
-A INPUT -s 181.119.18.16/29 -j ACCEPT
-A INPUT -s 181.119.18.24/30 -j ACCEPT
-A INPUT -s 181.119.18.33/32 -j ACCEPT
-A INPUT -s 181.119.18.34/32 -j ACCEPT
-A INPUT -s 181.119.18.41/32 -j ACCEPT
-A INPUT -s 181.119.18.42/31 -j ACCEPT
-A INPUT -s 181.119.18.44/30 -j ACCEPT
-A INPUT -s 181.119.18.48/28 -j ACCEPT
-A INPUT -s 181.119.18.64/27 -j ACCEPT
-A INPUT -s 181.119.18.96/28 -j ACCEPT
-A INPUT -s 181.119.18.112/29 -j ACCEPT
-A INPUT -s 181.119.18.122/31 -j ACCEPT
-A INPUT -s 181.119.18.124/30 -j ACCEPT
-A INPUT -s 181.119.18.128/29 -j ACCEPT
-A INPUT -s 181.119.18.137/32 -j ACCEPT
-A INPUT -s 181.119.18.138/31 -j ACCEPT
-A INPUT -s 181.119.18.140/30 -j ACCEPT
-A INPUT -s 181.119.18.144/30 -j ACCEPT
-A INPUT -s 181.119.18.148/31 -j ACCEPT
-A INPUT -s 181.119.18.150/32 -j ACCEPT
-A INPUT -s 181.119.18.152/32 -j ACCEPT
-A INPUT -s 181.119.18.155/32 -j ACCEPT
-A INPUT -s 181.119.18.156/30 -j ACCEPT
-A INPUT -s 181.119.18.160/27 -j ACCEPT
-A INPUT -s 181.119.18.192/26 -j ACCEPT
-A INPUT -s 181.119.19.0/24 -j ACCEPT
-A INPUT -s 181.119.20.0/22 -j ACCEPT
-A INPUT -s 181.119.24.0/22 -j ACCEPT
-A INPUT -s 181.119.28.0/23 -j ACCEPT
-A INPUT -s 181.119.30.128/25 -j ACCEPT
-A INPUT -s 181.119.31.0/24 -j ACCEPT
-A INPUT -s 181.119.32.0/19 -j ACCEPT
-A INPUT -s 181.119.64.0/19 -j ACCEPT
-A INPUT -s 181.119.96.0/20 -j ACCEPT
-A INPUT -s 181.119.128.0/17 -j ACCEPT
-A INPUT -s 181.164.0.0/14 -j ACCEPT
-A INPUT -s 181.168.0.0/14 -j ACCEPT
-A INPUT -s 181.174.128.0/19 -j ACCEPT
-A INPUT -s 181.174.172.0/22 -j ACCEPT
-A INPUT -s 181.174.176.0/21 -j ACCEPT
-A INPUT -s 181.174.192.0/20 -j ACCEPT
-A INPUT -s 181.177.0.0/18 -j ACCEPT
-A INPUT -s 181.177.192.0/20 -j ACCEPT
-A INPUT -s 181.177.208.0/21 -j ACCEPT
-A INPUT -s 181.189.160.0/20 -j ACCEPT
-A INPUT -s 181.189.192.0/19 -j ACCEPT
-A INPUT -s 181.192.0.0/18 -j ACCEPT
-A INPUT -s 181.192.64.0/19 -j ACCEPT
-A INPUT -s 181.197.192.0/18 -j ACCEPT
-A INPUT -s 181.199.144.0/20 -j ACCEPT
-A INPUT -s 181.199.160.0/20 -j ACCEPT
-A INPUT -s 181.209.0.0/17 -j ACCEPT
-A INPUT -s 181.224.96.0/19 -j ACCEPT
-A INPUT -s 181.224.164.0/22 -j ACCEPT
-A INPUT -s 181.224.176.0/20 -j ACCEPT
-A INPUT -s 181.224.208.0/21 -j ACCEPT
-A INPUT -s 181.225.0.0/19 -j ACCEPT
-A INPUT -s 181.225.136.0/22 -j ACCEPT
-A INPUT -s 181.225.152.0/21 -j ACCEPT
-A INPUT -s 181.225.192.0/19 -j ACCEPT
-A INPUT -s 181.228.0.0/14 -j ACCEPT
-A INPUT -s 181.238.0.0/15 -j ACCEPT
-A INPUT -s 185.2.178.0/24 -j ACCEPT
-A INPUT -s 186.0.128.0/20 -j ACCEPT
-A INPUT -s 186.0.152.0/22 -j ACCEPT
-A INPUT -s 186.0.160.0/20 -j ACCEPT
-A INPUT -s 186.0.176.0/21 -j ACCEPT
-A INPUT -s 186.0.184.0/22 -j ACCEPT
-A INPUT -s 186.0.192.0/20 -j ACCEPT
-A INPUT -s 186.0.208.0/21 -j ACCEPT
-A INPUT -s 186.0.217.0/24 -j ACCEPT
-A INPUT -s 186.0.218.0/23 -j ACCEPT
-A INPUT -s 186.0.220.0/22 -j ACCEPT
-A INPUT -s 186.0.224.0/19 -j ACCEPT
-A INPUT -s 186.1.208.0/20 -j ACCEPT
-A INPUT -s 186.1.224.0/20 -j ACCEPT
-A INPUT -s 186.1.240.0/21 -j ACCEPT
-A INPUT -s 186.4.64.0/18 -j ACCEPT
-A INPUT -s 186.5.176.0/20 -j ACCEPT
-A INPUT -s 186.5.192.0/19 -j ACCEPT
-A INPUT -s 186.5.224.0/21 -j ACCEPT
-A INPUT -s 186.5.240.0/20 -j ACCEPT
-A INPUT -s 186.12.0.0/15 -j ACCEPT
-A INPUT -s 186.18.0.0/15 -j ACCEPT
-A INPUT -s 186.22.0.0/15 -j ACCEPT
-A INPUT -s 186.26.64.0/19 -j ACCEPT
-A INPUT -s 186.26.96.0/20 -j ACCEPT
-A INPUT -s 186.33.0.0/18 -j ACCEPT
-A INPUT -s 186.33.192.0/18 -j ACCEPT
-A INPUT -s 186.38.0.0/15 -j ACCEPT
-A INPUT -s 186.56.0.0/13 -j ACCEPT
-A INPUT -s 186.64.0.0/20 -j ACCEPT
-A INPUT -s 186.64.16.0/27 -j ACCEPT
-A INPUT -s 186.64.16.32/28 -j ACCEPT
-A INPUT -s 186.64.16.48/29 -j ACCEPT
-A INPUT -s 186.64.16.64/26 -j ACCEPT
-A INPUT -s 186.64.16.128/27 -j ACCEPT
-A INPUT -s 186.64.16.160/28 -j ACCEPT
-A INPUT -s 186.64.16.184/29 -j ACCEPT
-A INPUT -s 186.64.16.192/26 -j ACCEPT
-A INPUT -s 186.64.17.0/24 -j ACCEPT
-A INPUT -s 186.64.18.0/23 -j ACCEPT
-A INPUT -s 186.64.20.0/22 -j ACCEPT
-A INPUT -s 186.64.24.0/21 -j ACCEPT
-A INPUT -s 186.64.32.0/19 -j ACCEPT
-A INPUT -s 186.64.64.0/19 -j ACCEPT
-A INPUT -s 186.64.96.0/21 -j ACCEPT
-A INPUT -s 186.65.64.0/21 -j ACCEPT
-A INPUT -s 186.65.80.0/21 -j ACCEPT
-A INPUT -s 186.65.96.0/21 -j ACCEPT
-A INPUT -s 186.65.108.0/22 -j ACCEPT
-A INPUT -s 186.65.126.160/27 -j ACCEPT
-A INPUT -s 186.96.0.0/23 -j ACCEPT
-A INPUT -s 186.96.2.0/24 -j ACCEPT
-A INPUT -s 186.96.3.128/25 -j ACCEPT
-A INPUT -s 186.96.4.0/24 -j ACCEPT
-A INPUT -s 186.96.5.128/25 -j ACCEPT
-A INPUT -s 186.96.6.0/23 -j ACCEPT
-A INPUT -s 186.96.8.0/25 -j ACCEPT
-A INPUT -s 201.234.146.176/28 -j ACCEPT
-A INPUT -s 201.234.146.192/26 -j ACCEPT
-A INPUT -s 201.234.147.0/27 -j ACCEPT
-A INPUT -s 201.234.147.64/26 -j ACCEPT
-A INPUT -s 201.234.147.160/27 -j ACCEPT
-A INPUT -s 201.234.147.192/26 -j ACCEPT
-A INPUT -s 201.234.148.0/24 -j ACCEPT
-A INPUT -s 201.234.150.0/24 -j ACCEPT
-A INPUT -s 201.234.151.0/25 -j ACCEPT
-A INPUT -s 201.234.152.0/25 -j ACCEPT
-A INPUT -s 201.234.152.192/26 -j ACCEPT
-A INPUT -s 201.234.153.0/24 -j ACCEPT
-A INPUT -s 201.234.154.0/23 -j ACCEPT
-A INPUT -s 201.234.156.0/23 -j ACCEPT
-A INPUT -s 201.234.158.0/27 -j ACCEPT
-A INPUT -s 201.234.158.32/28 -j ACCEPT
-A INPUT -s 201.234.158.48/29 -j ACCEPT
-A INPUT -s 201.234.158.56/30 -j ACCEPT
-A INPUT -s 201.234.158.64/29 -j ACCEPT
-A INPUT -s 201.234.158.72/30 -j ACCEPT
-A INPUT -s 201.234.158.80/28 -j ACCEPT
-A INPUT -s 201.234.158.96/27 -j ACCEPT
-A INPUT -s 201.234.158.128/30 -j ACCEPT
-A INPUT -s 201.234.158.140/30 -j ACCEPT
-A INPUT -s 201.234.158.144/28 -j ACCEPT
-A INPUT -s 201.234.158.160/30 -j ACCEPT
-A INPUT -s 201.234.158.168/29 -j ACCEPT
-A INPUT -s 201.234.158.224/27 -j ACCEPT
-A INPUT -s 201.234.159.0/28 -j ACCEPT
-A INPUT -s 201.234.159.16/29 -j ACCEPT
-A INPUT -s 201.234.159.32/29 -j ACCEPT
-A INPUT -s 201.234.159.40/30 -j ACCEPT
-A INPUT -s 201.234.159.48/28 -j ACCEPT
-A INPUT -s 201.234.159.64/27 -j ACCEPT
-A INPUT -s 201.234.159.96/28 -j ACCEPT
-A INPUT -s 201.234.159.112/29 -j ACCEPT
-A INPUT -s 201.234.159.120/30 -j ACCEPT
-A INPUT -s 201.234.159.128/28 -j ACCEPT
-A INPUT -s 201.234.159.144/29 -j ACCEPT
-A INPUT -s 201.234.159.160/27 -j ACCEPT
-A INPUT -s 201.234.159.192/28 -j ACCEPT
-A INPUT -s 201.234.159.208/30 -j ACCEPT
-A INPUT -s 201.234.159.216/30 -j ACCEPT
-A INPUT -s 201.234.159.232/29 -j ACCEPT
-A INPUT -s 201.234.159.240/28 -j ACCEPT
-A INPUT -s 201.234.160.0/21 -j ACCEPT
-A INPUT -s 201.234.169.0/24 -j ACCEPT
-A INPUT -s 201.234.170.0/23 -j ACCEPT
-A INPUT -s 201.234.172.16/28 -j ACCEPT
-A INPUT -s 201.234.172.32/27 -j ACCEPT
-A INPUT -s 201.234.172.64/26 -j ACCEPT
-A INPUT -s 201.234.172.128/25 -j ACCEPT
-A INPUT -s 201.234.173.0/24 -j ACCEPT
-A INPUT -s 201.234.174.0/23 -j ACCEPT
-A INPUT -s 201.234.248.0/23 -j ACCEPT
-A INPUT -s 201.234.250.0/25 -j ACCEPT
-A INPUT -s 201.234.250.128/28 -j ACCEPT
-A INPUT -s 201.234.250.160/27 -j ACCEPT
-A INPUT -s 201.234.250.192/26 -j ACCEPT
-A INPUT -s 201.234.251.0/24 -j ACCEPT
-A INPUT -s 201.234.252.0/23 -j ACCEPT
-A INPUT -s 201.234.254.0/28 -j ACCEPT
-A INPUT -s 201.234.254.16/29 -j ACCEPT
-A INPUT -s 201.234.254.32/29 -j ACCEPT
-A INPUT -s 201.234.254.40/30 -j ACCEPT
-A INPUT -s 201.234.254.48/30 -j ACCEPT
-A INPUT -s 201.234.254.56/29 -j ACCEPT
-A INPUT -s 201.234.254.68/30 -j ACCEPT
-A INPUT -s 201.234.254.72/29 -j ACCEPT
-A INPUT -s 201.234.254.84/30 -j ACCEPT
-A INPUT -s 201.234.254.88/29 -j ACCEPT
-A INPUT -s 201.234.254.100/30 -j ACCEPT
-A INPUT -s 201.234.254.104/29 -j ACCEPT
-A INPUT -s 201.234.254.112/28 -j ACCEPT
-A INPUT -s 201.234.254.128/28 -j ACCEPT
-A INPUT -s 201.234.254.144/29 -j ACCEPT
-A INPUT -s 201.234.254.152/30 -j ACCEPT
-A INPUT -s 201.234.254.160/27 -j ACCEPT
-A INPUT -s 201.234.254.192/27 -j ACCEPT
-A INPUT -s 201.234.254.224/28 -j ACCEPT
-A INPUT -s 201.234.254.240/29 -j ACCEPT
-A INPUT -s 201.234.254.252/30 -j ACCEPT
-A INPUT -s 201.234.255.0/25 -j ACCEPT
-A INPUT -s 201.235.0.0/16 -j ACCEPT
-A INPUT -s 201.250.0.0/15 -j ACCEPT
-A INPUT -s 201.252.0.0/14 -j ACCEPT
-A INPUT -s 203.100.157.214/32 -j ACCEPT
-A INPUT -s 203.100.157.218/32 -j ACCEPT
-A INPUT -s 203.100.158.29/32 -j ACCEPT
-A INPUT -s 203.100.158.30/32 -j ACCEPT
-A INPUT -s 203.100.159.97/32 -j ACCEPT
-A INPUT -s 203.100.159.98/32 -j ACCEPT
-A INPUT -s 203.100.159.121/32 -j ACCEPT
-A INPUT -s 203.100.159.122/32 -j ACCEPT
-A INPUT -s 203.192.142.141/32 -j ACCEPT
-A INPUT -s 203.192.142.142/32 -j ACCEPT
-A INPUT -s 203.192.178.49/32 -j ACCEPT
-A INPUT -s 203.192.178.50/32 -j ACCEPT
-A INPUT -s 204.245.37.85/32 -j ACCEPT
-A INPUT -s 204.245.37.86/32 -j ACCEPT
-A INPUT -s 204.245.37.161/32 -j ACCEPT
-A INPUT -s 204.245.37.162/32 -j ACCEPT
-A INPUT -s 204.245.37.169/32 -j ACCEPT
-A INPUT -s 204.245.37.170/32 -j ACCEPT
-A INPUT -s 204.245.39.249/32 -j ACCEPT
-A INPUT -s 204.245.39.250/32 -j ACCEPT
-A INPUT -s 204.246.200.229/32 -j ACCEPT
-A INPUT -s 204.246.200.230/32 -j ACCEPT
-A INPUT -s 204.246.205.85/32 -j ACCEPT
-A INPUT -s 204.246.205.86/32 -j ACCEPT
-A INPUT -s 205.218.16.48/28 -j ACCEPT
-A INPUT -s 205.248.144.192/26 -j ACCEPT
-A INPUT -s 206.49.184.0/21 -j ACCEPT
-A INPUT -s 206.57.3.117/32 -j ACCEPT
-A INPUT -s 206.57.3.118/32 -j ACCEPT
-A INPUT -s 206.73.49.48/28 -j ACCEPT
-A INPUT -s 206.73.102.0/24 -j ACCEPT
-A INPUT -s 206.73.107.192/27 -j ACCEPT
-A INPUT -s 206.73.112.240/29 -j ACCEPT
-A INPUT -s 206.165.75.101/32 -j ACCEPT
-A INPUT -s 206.165.75.102/32 -j ACCEPT
-A INPUT -s 206.182.131.176/28 -j ACCEPT
-A INPUT -s 206.182.170.64/27 -j ACCEPT
-A INPUT -s 206.221.80.0/20 -j ACCEPT
-A INPUT -s 206.221.219.248/29 -j ACCEPT
-A INPUT -s 206.246.65.0/24 -j ACCEPT
-A INPUT -s 207.136.166.241/32 -j ACCEPT
-A INPUT -s 207.136.166.242/32 -j ACCEPT
-A INPUT -s 207.138.94.41/32 -j ACCEPT
-A INPUT -s 207.138.94.42/32 -j ACCEPT
-A INPUT -s 207.138.122.33/32 -j ACCEPT
-A INPUT -s 207.138.122.34/32 -j ACCEPT
-A INPUT -s 207.138.122.37/32 -j ACCEPT
-A INPUT -s 207.138.122.38/32 -j ACCEPT
-A INPUT -s 207.138.122.85/32 -j ACCEPT
-A INPUT -s 207.138.122.89/32 -j ACCEPT
-A INPUT -s 207.138.122.90/32 -j ACCEPT
-A INPUT -s 207.209.55.0/25 -j ACCEPT
-A INPUT -s 207.209.88.144/28 -j ACCEPT
-A INPUT -s 207.209.88.192/26 -j ACCEPT
-A INPUT -s 207.218.80.189/32 -j ACCEPT
-A INPUT -s 207.218.80.190/32 -j ACCEPT
-A INPUT -s 207.248.74.0/23 -j ACCEPT
-A INPUT -s 207.248.76.0/23 -j ACCEPT
-A INPUT -s 207.248.85.0/24 -j ACCEPT
-A INPUT -s 207.248.92.0/22 -j ACCEPT
-A INPUT -s 207.248.124.0/22 -j ACCEPT
-A INPUT -s 208.47.213.128/25 -j ACCEPT
-A INPUT -s 208.48.23.233/32 -j ACCEPT
-A INPUT -s 208.48.23.234/32 -j ACCEPT
-A INPUT -s 208.48.238.149/32 -j ACCEPT
-A INPUT -s 208.48.238.150/32 -j ACCEPT
-A INPUT -s 208.48.250.81/32 -j ACCEPT
-A INPUT -s 208.48.250.82/32 -j ACCEPT
-A INPUT -s 208.48.251.207/32 -j ACCEPT
-A INPUT -s 208.49.33.37/32 -j ACCEPT
-A INPUT -s 208.49.33.38/32 -j ACCEPT
-A INPUT -s 208.50.21.53/32 -j ACCEPT
-A INPUT -s 208.50.21.54/32 -j ACCEPT
-A INPUT -s 208.50.25.65/32 -j ACCEPT
-A INPUT -s 208.50.25.66/32 -j ACCEPT
-A INPUT -s 208.50.25.97/32 -j ACCEPT
-A INPUT -s 208.50.25.98/32 -j ACCEPT
-A INPUT -s 208.50.237.45/32 -j ACCEPT
-A INPUT -s 208.50.237.46/32 -j ACCEPT
-A INPUT -s 208.50.254.149/32 -j ACCEPT
-A INPUT -s 208.50.254.150/32 -j ACCEPT
-A INPUT -s 208.51.32.97/32 -j ACCEPT
-A INPUT -s 208.51.32.99/32 -j ACCEPT
-A INPUT -s 208.51.42.185/32 -j ACCEPT
-A INPUT -s 208.51.42.186/32 -j ACCEPT
-A INPUT -s 208.51.117.233/32 -j ACCEPT
-A INPUT -s 208.51.117.234/32 -j ACCEPT
-A INPUT -s 208.51.239.77/32 -j ACCEPT
-A INPUT -s 208.51.239.78/32 -j ACCEPT
-A INPUT -s 208.51.239.213/32 -j ACCEPT
-A INPUT -s 208.51.239.214/32 -j ACCEPT
-A INPUT -s 208.69.231.76/30 -j ACCEPT
-A INPUT -s 208.83.140.216/29 -j ACCEPT
-A INPUT -s 208.87.0.72/29 -j ACCEPT
-A INPUT -s 208.87.0.152/29 -j ACCEPT
-A INPUT -s 208.87.1.204/30 -j ACCEPT
-A INPUT -s 208.178.63.201/32 -j ACCEPT
-A INPUT -s 208.178.63.202/32 -j ACCEPT
-A INPUT -s 208.178.184.217/32 -j ACCEPT
-A INPUT -s 208.178.184.218/32 -j ACCEPT
-A INPUT -s 208.178.194.201/32 -j ACCEPT
-A INPUT -s 208.178.194.202/32 -j ACCEPT
-A INPUT -s 208.178.195.205/32 -j ACCEPT
-A INPUT -s 208.178.195.206/32 -j ACCEPT
-A INPUT -s 208.178.195.209/32 -j ACCEPT
-A INPUT -s 208.178.195.210/32 -j ACCEPT
-A INPUT -s 208.178.195.213/32 -j ACCEPT
-A INPUT -s 208.178.195.214/32 -j ACCEPT
-A INPUT -s 208.178.244.25/32 -j ACCEPT
-A INPUT -s 208.178.244.26/32 -j ACCEPT
-A INPUT -s 208.178.244.97/32 -j ACCEPT
-A INPUT -s 208.178.244.98/32 -j ACCEPT
-A INPUT -s 208.178.244.125/32 -j ACCEPT
-A INPUT -s 208.178.244.126/32 -j ACCEPT
-A INPUT -s 208.178.244.213/32 -j ACCEPT
-A INPUT -s 208.178.244.214/32 -j ACCEPT
-A INPUT -s 209.13.0.0/16 -j ACCEPT
-A INPUT -s 209.28.6.32/27 -j ACCEPT
-A INPUT -s 209.88.23.0/24 -j ACCEPT
-A INPUT -s 209.93.209.192/26 -j ACCEPT
-A INPUT -s 209.99.224.0/20 -j ACCEPT
-A INPUT -s 209.130.131.181/32 -j ACCEPT
-A INPUT -s 209.130.131.182/32 -j ACCEPT
-A INPUT -s 209.130.131.201/32 -j ACCEPT
-A INPUT -s 209.130.131.202/31 -j ACCEPT
-A INPUT -s 209.130.131.204/32 -j ACCEPT
-A INPUT -s 209.130.131.209/32 -j ACCEPT
-A INPUT -s 209.130.131.210/32 -j ACCEPT
-A INPUT -s 209.130.131.213/32 -j ACCEPT
-A INPUT -s 209.130.131.214/32 -j ACCEPT
-A INPUT -s 209.130.173.53/32 -j ACCEPT
-A INPUT -s 209.130.173.54/32 -j ACCEPT
-A INPUT -s 209.177.146.64/26 -j ACCEPT
-A INPUT -s 209.197.228.96/28 -j ACCEPT
-A INPUT -s 209.197.229.0/25 -j ACCEPT
-A INPUT -s 209.197.229.128/26 -j ACCEPT
-A INPUT -s 209.197.229.192/27 -j ACCEPT
-A INPUT -s 209.197.230.0/29 -j ACCEPT
-A INPUT -s 209.197.236.176/29 -j ACCEPT
-A INPUT -s 209.197.237.192/28 -j ACCEPT
-A INPUT -s 209.197.239.0/29 -j ACCEPT
-A INPUT -s 209.197.243.0/24 -j ACCEPT
-A INPUT -s 209.197.246.0/24 -j ACCEPT
-A INPUT -s 209.208.12.48/28 -j ACCEPT
-A INPUT -s 209.225.11.64/26 -j ACCEPT
-A INPUT -s 209.225.49.0/24 -j ACCEPT
-A INPUT -s 212.21.40.48/29 -j ACCEPT
-A INPUT -s 212.21.40.120/29 -j ACCEPT
-A INPUT -s 212.21.44.0/29 -j ACCEPT
-A INPUT -s 212.21.63.0/28 -j ACCEPT
-A INPUT -s 212.21.63.128/25 -j ACCEPT
-A INPUT -s 212.24.99.16/28 -j ACCEPT
-A INPUT -s 212.24.99.240/28 -j ACCEPT
-A INPUT -s 212.24.100.64/26 -j ACCEPT
-A INPUT -s 212.63.178.36/30 -j ACCEPT
-A INPUT -s 212.63.178.188/30 -j ACCEPT
-A INPUT -s 212.63.178.192/30 -j ACCEPT
-A INPUT -s 212.63.178.236/30 -j ACCEPT
-A INPUT -s 212.63.178.248/30 -j ACCEPT
-A INPUT -s 212.63.179.76/32 -j ACCEPT
-A INPUT -s 212.63.179.92/30 -j ACCEPT
-A INPUT -s 212.63.184.64/30 -j ACCEPT
-A INPUT -s 212.63.184.84/30 -j ACCEPT
-A INPUT -s 212.63.184.100/30 -j ACCEPT
-A INPUT -s 212.63.184.128/30 -j ACCEPT
-A INPUT -s 212.63.184.152/30 -j ACCEPT
-A INPUT -s 212.63.186.14/32 -j ACCEPT
-A INPUT -s 212.63.186.23/32 -j ACCEPT
-A INPUT -s 212.63.186.54/32 -j ACCEPT
-A INPUT -s 212.63.186.62/32 -j ACCEPT
-A INPUT -s 212.63.186.84/32 -j ACCEPT
-A INPUT -s 212.63.186.87/32 -j ACCEPT
-A INPUT -s 212.63.186.168/32 -j ACCEPT
-A INPUT -s 212.63.187.68/30 -j ACCEPT
-A INPUT -s 212.63.187.156/30 -j ACCEPT
-A INPUT -s 212.63.187.172/30 -j ACCEPT
-A INPUT -s 212.63.187.212/30 -j ACCEPT
-A INPUT -s 212.63.188.29/32 -j ACCEPT
-A INPUT -s 212.63.189.20/30 -j ACCEPT
-A INPUT -s 212.63.189.72/30 -j ACCEPT
-A INPUT -s 212.63.189.124/30 -j ACCEPT
-A INPUT -s 212.63.190.76/30 -j ACCEPT
-A INPUT -s 212.63.190.200/29 -j ACCEPT
-A INPUT -s 212.63.190.212/30 -j ACCEPT
-A INPUT -s 213.140.32.168/32 -j ACCEPT
-A INPUT -s 213.140.32.190/32 -j ACCEPT
-A INPUT -s 213.140.32.206/32 -j ACCEPT
-A INPUT -s 213.140.32.208/32 -j ACCEPT
-A INPUT -s 213.140.32.212/31 -j ACCEPT
-A INPUT -s 213.140.32.223/32 -j ACCEPT
-A INPUT -s 213.140.33.31/32 -j ACCEPT
-A INPUT -s 213.140.33.32/32 -j ACCEPT
-A INPUT -s 213.140.33.53/32 -j ACCEPT
-A INPUT -s 213.140.33.54/32 -j ACCEPT
-A INPUT -s 213.140.33.156/32 -j ACCEPT
-A INPUT -s 213.140.33.167/32 -j ACCEPT
-A INPUT -s 213.140.35.21/32 -j ACCEPT
-A INPUT -s 213.140.35.22/32 -j ACCEPT
-A INPUT -s 213.140.36.129/32 -j ACCEPT
-A INPUT -s 213.140.36.130/32 -j ACCEPT
-A INPUT -s 213.140.36.209/32 -j ACCEPT
-A INPUT -s 213.140.36.217/32 -j ACCEPT
-A INPUT -s 213.140.36.218/32 -j ACCEPT
-A INPUT -s 213.140.38.73/32 -j ACCEPT
-A INPUT -s 213.140.38.81/32 -j ACCEPT
-A INPUT -s 213.140.38.169/32 -j ACCEPT
-A INPUT -s 213.140.38.170/32 -j ACCEPT
-A INPUT -s 213.140.42.134/32 -j ACCEPT
-A INPUT -s 213.140.42.168/32 -j ACCEPT
-A INPUT -s 213.140.42.190/32 -j ACCEPT
-A INPUT -s 213.140.42.206/32 -j ACCEPT
-A INPUT -s 213.140.42.208/32 -j ACCEPT
-A INPUT -s 213.140.42.212/31 -j ACCEPT
-A INPUT -s 213.140.42.223/32 -j ACCEPT
-A INPUT -s 213.140.43.6/31 -j ACCEPT
-A INPUT -s 213.140.43.97/32 -j ACCEPT
-A INPUT -s 213.140.47.241/32 -j ACCEPT
-A INPUT -s 213.140.47.242/32 -j ACCEPT
-A INPUT -s 213.140.54.168/32 -j ACCEPT
-A INPUT -s 213.140.54.190/32 -j ACCEPT
-A INPUT -s 213.140.54.206/32 -j ACCEPT
-A INPUT -s 213.140.54.208/32 -j ACCEPT
-A INPUT -s 213.140.54.212/31 -j ACCEPT
-A INPUT -s 213.140.54.223/32 -j ACCEPT
-A INPUT -s 216.7.169.184/29 -j ACCEPT
-A INPUT -s 216.22.100.0/24 -j ACCEPT
-A INPUT -s 216.22.217.32/27 -j ACCEPT
-A INPUT -s 216.33.196.0/23 -j ACCEPT
-A INPUT -s 216.35.213.224/27 -j ACCEPT
-A INPUT -s 216.59.32.0/24 -j ACCEPT
-A INPUT -s 216.72.144.0/21 -j ACCEPT
-A INPUT -s 216.107.56.0/24 -j ACCEPT
-A INPUT -s 216.119.136.32/29 -j ACCEPT
-A INPUT -s 216.119.137.48/29 -j ACCEPT
-A INPUT -s 216.151.175.124/30 -j ACCEPT
-A INPUT -s 216.182.209.96/29 -j ACCEPT
-A INPUT -s 216.194.128.0/22 -j ACCEPT
-A INPUT -s 216.194.134.0/24 -j ACCEPT
-A INPUT -s 216.239.33.0/29 -j ACCEPT
-A INPUT -s 216.244.192.0/18 -j ACCEPT
-A INPUT -s 217.146.15.0/24 -j ACCEPT
-A INPUT -s 217.146.28.0/24 -j ACCEPT
-A INPUT -s 200.41.40.192/27 -j ACCEPT
-A INPUT -s 200.41.40.224/30 -j ACCEPT
-A INPUT -s 200.41.40.232/30 -j ACCEPT
-A INPUT -s 200.41.40.240/28 -j ACCEPT
-A INPUT -s 200.41.41.0/24 -j ACCEPT
-A INPUT -s 200.41.42.0/27 -j ACCEPT
-A INPUT -s 200.41.42.32/29 -j ACCEPT
-A INPUT -s 200.41.42.48/28 -j ACCEPT
-A INPUT -s 200.41.42.64/28 -j ACCEPT
-A INPUT -s 200.41.42.80/29 -j ACCEPT
-A INPUT -s 200.41.42.104/29 -j ACCEPT
-A INPUT -s 200.41.42.112/28 -j ACCEPT
-A INPUT -s 200.41.42.128/27 -j ACCEPT
-A INPUT -s 200.41.42.176/28 -j ACCEPT
-A INPUT -s 200.41.42.192/28 -j ACCEPT
-A INPUT -s 200.41.43.0/24 -j ACCEPT
-A INPUT -s 200.41.44.0/26 -j ACCEPT
-A INPUT -s 200.41.44.64/27 -j ACCEPT
-A INPUT -s 200.41.44.160/27 -j ACCEPT
-A INPUT -s 200.41.44.192/28 -j ACCEPT
-A INPUT -s 200.41.44.216/29 -j ACCEPT
-A INPUT -s 200.41.44.224/27 -j ACCEPT
-A INPUT -s 200.41.45.64/26 -j ACCEPT
-A INPUT -s 200.41.45.128/25 -j ACCEPT
-A INPUT -s 200.41.46.0/24 -j ACCEPT
-A INPUT -s 200.41.47.0/26 -j ACCEPT
-A INPUT -s 200.41.47.64/27 -j ACCEPT
-A INPUT -s 200.41.47.96/28 -j ACCEPT
-A INPUT -s 200.41.47.128/25 -j ACCEPT
-A INPUT -s 200.41.48.0/25 -j ACCEPT
-A INPUT -s 200.41.58.0/23 -j ACCEPT
-A INPUT -s 200.41.60.0/25 -j ACCEPT
-A INPUT -s 200.41.60.128/26 -j ACCEPT
-A INPUT -s 200.41.60.192/27 -j ACCEPT
-A INPUT -s 200.41.61.0/27 -j ACCEPT
-A INPUT -s 200.41.61.48/28 -j ACCEPT
-A INPUT -s 200.41.61.64/26 -j ACCEPT
-A INPUT -s 200.41.61.132/30 -j ACCEPT
-A INPUT -s 200.41.61.136/29 -j ACCEPT
-A INPUT -s 200.41.61.144/28 -j ACCEPT
-A INPUT -s 200.41.61.160/27 -j ACCEPT
-A INPUT -s 200.41.61.208/28 -j ACCEPT
-A INPUT -s 200.41.61.232/29 -j ACCEPT
-A INPUT -s 200.41.61.240/28 -j ACCEPT
-A INPUT -s 200.41.62.0/28 -j ACCEPT
-A INPUT -s 200.41.62.16/29 -j ACCEPT
-A INPUT -s 200.41.62.40/29 -j ACCEPT
-A INPUT -s 200.41.62.48/28 -j ACCEPT
-A INPUT -s 200.41.62.72/29 -j ACCEPT
-A INPUT -s 200.41.62.88/29 -j ACCEPT
-A INPUT -s 200.41.62.96/27 -j ACCEPT
-A INPUT -s 200.41.62.136/29 -j ACCEPT
-A INPUT -s 200.41.62.144/28 -j ACCEPT
-A INPUT -s 200.41.62.160/29 -j ACCEPT
-A INPUT -s 200.41.62.184/29 -j ACCEPT
-A INPUT -s 200.41.62.192/27 -j ACCEPT
-A INPUT -s 200.41.62.224/28 -j ACCEPT
-A INPUT -s 200.41.62.248/29 -j ACCEPT
-A INPUT -s 200.41.63.0/29 -j ACCEPT
-A INPUT -s 200.41.63.32/28 -j ACCEPT
-A INPUT -s 200.41.63.68/30 -j ACCEPT
-A INPUT -s 200.41.63.72/29 -j ACCEPT
-A INPUT -s 200.41.63.92/30 -j ACCEPT
-A INPUT -s 200.41.63.104/29 -j ACCEPT
-A INPUT -s 200.41.63.112/28 -j ACCEPT
-A INPUT -s 200.41.63.132/30 -j ACCEPT
-A INPUT -s 200.41.63.136/29 -j ACCEPT
-A INPUT -s 200.41.63.144/28 -j ACCEPT
-A INPUT -s 200.41.63.168/30 -j ACCEPT
-A INPUT -s 200.41.63.176/30 -j ACCEPT
-A INPUT -s 200.41.63.184/29 -j ACCEPT
-A INPUT -s 200.41.63.192/29 -j ACCEPT
-A INPUT -s 200.41.63.204/30 -j ACCEPT
-A INPUT -s 200.41.63.216/29 -j ACCEPT
-A INPUT -s 200.41.63.224/28 -j ACCEPT
-A INPUT -s 200.41.63.248/29 -j ACCEPT
-A INPUT -s 200.41.65.32/28 -j ACCEPT
-A INPUT -s 200.41.65.64/26 -j ACCEPT
-A INPUT -s 200.41.65.128/25 -j ACCEPT
-A INPUT -s 200.41.66.0/24 -j ACCEPT
-A INPUT -s 200.41.67.8/29 -j ACCEPT
-A INPUT -s 200.41.67.16/28 -j ACCEPT
-A INPUT -s 200.41.67.32/27 -j ACCEPT
-A INPUT -s 200.41.67.64/27 -j ACCEPT
-A INPUT -s 200.41.67.96/28 -j ACCEPT
-A INPUT -s 200.41.67.120/29 -j ACCEPT
-A INPUT -s 200.41.67.128/27 -j ACCEPT
-A INPUT -s 200.41.67.160/29 -j ACCEPT
-A INPUT -s 200.41.67.184/29 -j ACCEPT
-A INPUT -s 200.41.67.192/29 -j ACCEPT
-A INPUT -s 200.41.67.208/28 -j ACCEPT
-A INPUT -s 200.41.67.224/29 -j ACCEPT
-A INPUT -s 200.41.67.248/29 -j ACCEPT
-A INPUT -s 200.41.68.0/29 -j ACCEPT
-A INPUT -s 200.41.68.8/30 -j ACCEPT
-A INPUT -s 200.41.68.20/30 -j ACCEPT
-A INPUT -s 200.41.68.24/29 -j ACCEPT
-A INPUT -s 200.41.68.32/27 -j ACCEPT
-A INPUT -s 200.41.68.64/28 -j ACCEPT
-A INPUT -s 200.41.68.80/29 -j ACCEPT
-A INPUT -s 200.41.68.88/30 -j ACCEPT
-A INPUT -s 200.41.68.96/27 -j ACCEPT
-A INPUT -s 200.41.68.128/27 -j ACCEPT
-A INPUT -s 200.41.68.164/30 -j ACCEPT
-A INPUT -s 200.41.68.168/29 -j ACCEPT
-A INPUT -s 200.41.68.180/30 -j ACCEPT
-A INPUT -s 200.41.68.184/29 -j ACCEPT
-A INPUT -s 200.41.68.192/29 -j ACCEPT
-A INPUT -s 200.41.68.208/29 -j ACCEPT
-A INPUT -s 200.41.68.224/27 -j ACCEPT
-A INPUT -s 200.41.69.0/29 -j ACCEPT
-A INPUT -s 200.41.69.24/29 -j ACCEPT
-A INPUT -s 200.41.69.32/27 -j ACCEPT
-A INPUT -s 200.41.69.72/29 -j ACCEPT
-A INPUT -s 200.41.69.80/28 -j ACCEPT
-A INPUT -s 200.41.69.96/28 -j ACCEPT
-A INPUT -s 200.41.69.112/29 -j ACCEPT
-A INPUT -s 200.41.69.136/29 -j ACCEPT
-A INPUT -s 200.41.69.152/29 -j ACCEPT
-A INPUT -s 200.41.69.160/28 -j ACCEPT
-A INPUT -s 200.41.69.192/27 -j ACCEPT
-A INPUT -s 200.41.69.224/28 -j ACCEPT
-A INPUT -s 200.41.69.248/29 -j ACCEPT
-A INPUT -s 200.41.70.0/23 -j ACCEPT
-A INPUT -s 200.41.72.0/24 -j ACCEPT
-A INPUT -s 200.41.90.112/28 -j ACCEPT
-A INPUT -s 200.41.91.111/32 -j ACCEPT
-A INPUT -s 200.41.112.0/24 -j ACCEPT
-A INPUT -s 200.41.113.48/29 -j ACCEPT
-A INPUT -s 200.41.113.64/26 -j ACCEPT
-A INPUT -s 200.41.113.128/25 -j ACCEPT
-A INPUT -s 200.41.120.0/22 -j ACCEPT
-A INPUT -s 200.41.124.0/25 -j ACCEPT
-A INPUT -s 200.41.125.0/24 -j ACCEPT
-A INPUT -s 200.41.126.0/25 -j ACCEPT
-A INPUT -s 200.41.126.128/28 -j ACCEPT
-A INPUT -s 200.41.126.160/28 -j ACCEPT
-A INPUT -s 200.41.126.176/29 -j ACCEPT
-A INPUT -s 200.41.126.208/28 -j ACCEPT
-A INPUT -s 200.41.126.232/29 -j ACCEPT
-A INPUT -s 200.41.126.240/28 -j ACCEPT
-A INPUT -s 200.41.127.16/28 -j ACCEPT
-A INPUT -s 200.41.127.32/28 -j ACCEPT
-A INPUT -s 200.41.127.64/26 -j ACCEPT
-A INPUT -s 200.41.127.128/25 -j ACCEPT
-A INPUT -s 200.41.128.0/17 -j ACCEPT
-A INPUT -s 200.42.0.0/17 -j ACCEPT
-A INPUT -s 200.42.128.0/19 -j ACCEPT
-A INPUT -s 200.43.0.0/21 -j ACCEPT
-A INPUT -s 200.43.8.0/23 -j ACCEPT
-A INPUT -s 200.43.10.0/24 -j ACCEPT
-A INPUT -s 200.43.12.0/22 -j ACCEPT
-A INPUT -s 200.43.16.0/20 -j ACCEPT
-A INPUT -s 200.43.32.0/19 -j ACCEPT
-A INPUT -s 200.43.64.0/18 -j ACCEPT
-A INPUT -s 200.43.128.0/17 -j ACCEPT
-A INPUT -s 200.45.0.0/16 -j ACCEPT
-A INPUT -s 200.47.2.0/23 -j ACCEPT
-A INPUT -s 200.47.10.0/23 -j ACCEPT
-A INPUT -s 200.47.12.0/24 -j ACCEPT
-A INPUT -s 200.47.24.0/23 -j ACCEPT
-A INPUT -s 200.47.26.0/24 -j ACCEPT
-A INPUT -s 200.47.29.0/24 -j ACCEPT
-A INPUT -s 200.47.30.0/23 -j ACCEPT
-A INPUT -s 200.47.32.0/24 -j ACCEPT
-A INPUT -s 200.47.35.0/24 -j ACCEPT
-A INPUT -s 200.47.36.0/24 -j ACCEPT
-A INPUT -s 200.47.43.0/24 -j ACCEPT
-A INPUT -s 200.47.45.0/24 -j ACCEPT
-A INPUT -s 200.47.46.0/23 -j ACCEPT
-A INPUT -s 200.47.63.0/24 -j ACCEPT
-A INPUT -s 200.47.79.0/24 -j ACCEPT
-A INPUT -s 200.47.81.0/24 -j ACCEPT
-A INPUT -s 200.47.86.0/24 -j ACCEPT
-A INPUT -s 200.47.97.0/24 -j ACCEPT
-A INPUT -s 200.47.99.0/24 -j ACCEPT
-A INPUT -s 200.47.103.0/24 -j ACCEPT
-A INPUT -s 200.47.118.0/24 -j ACCEPT
-A INPUT -s 200.47.123.0/24 -j ACCEPT
-A INPUT -s 200.47.128.0/19 -j ACCEPT
-A INPUT -s 200.47.160.0/21 -j ACCEPT
-A INPUT -s 200.47.168.0/22 -j ACCEPT
-A INPUT -s 200.47.176.0/20 -j ACCEPT
-A INPUT -s 200.47.192.0/20 -j ACCEPT
-A INPUT -s 200.47.208.0/21 -j ACCEPT
-A INPUT -s 200.47.220.0/22 -j ACCEPT
-A INPUT -s 200.47.224.0/19 -j ACCEPT
-A INPUT -s 200.49.0.0/24 -j ACCEPT
-A INPUT -s 200.49.2.0/24 -j ACCEPT
-A INPUT -s 200.49.3.0/25 -j ACCEPT
-A INPUT -s 200.49.3.128/26 -j ACCEPT
-A INPUT -s 200.49.3.192/27 -j ACCEPT
-A INPUT -s 200.49.3.224/28 -j ACCEPT
-A INPUT -s 200.49.4.0/23 -j ACCEPT
-A INPUT -s 200.49.6.0/26 -j ACCEPT
-A INPUT -s 200.49.6.64/28 -j ACCEPT
-A INPUT -s 200.49.6.96/27 -j ACCEPT
-A INPUT -s 200.49.6.144/28 -j ACCEPT
-A INPUT -s 200.49.6.160/27 -j ACCEPT
-A INPUT -s 200.49.6.192/26 -j ACCEPT
-A INPUT -s 200.49.7.0/26 -j ACCEPT
-A INPUT -s 200.49.7.64/28 -j ACCEPT
-A INPUT -s 200.49.7.112/28 -j ACCEPT
-A INPUT -s 200.49.7.128/27 -j ACCEPT
-A INPUT -s 200.49.7.192/26 -j ACCEPT
-A INPUT -s 200.49.8.0/26 -j ACCEPT
-A INPUT -s 200.49.8.64/28 -j ACCEPT
-A INPUT -s 200.49.8.176/28 -j ACCEPT
-A INPUT -s 200.49.8.192/26 -j ACCEPT
-A INPUT -s 200.49.9.0/28 -j ACCEPT
-A INPUT -s 200.49.9.16/29 -j ACCEPT
-A INPUT -s 200.49.9.32/28 -j ACCEPT
-A INPUT -s 200.49.9.48/29 -j ACCEPT
-A INPUT -s 200.49.9.60/30 -j ACCEPT
-A INPUT -s 200.49.9.64/30 -j ACCEPT
-A INPUT -s 200.49.9.72/29 -j ACCEPT
-A INPUT -s 200.49.9.84/30 -j ACCEPT
-A INPUT -s 200.49.9.88/29 -j ACCEPT
-A INPUT -s 200.49.9.100/30 -j ACCEPT
-A INPUT -s 200.49.9.104/29 -j ACCEPT
-A INPUT -s 200.49.9.112/28 -j ACCEPT
-A INPUT -s 200.49.9.128/27 -j ACCEPT
-A INPUT -s 200.49.9.160/28 -j ACCEPT
-A INPUT -s 200.49.9.176/29 -j ACCEPT
-A INPUT -s 200.49.9.184/30 -j ACCEPT
-A INPUT -s 200.49.9.200/29 -j ACCEPT
-A INPUT -s 200.49.9.208/28 -j ACCEPT
-A INPUT -s 200.49.9.224/27 -j ACCEPT
-A INPUT -s 200.49.10.0/26 -j ACCEPT
-A INPUT -s 200.49.10.96/27 -j ACCEPT
-A INPUT -s 200.49.10.128/26 -j ACCEPT
-A INPUT -s 200.49.10.224/27 -j ACCEPT
-A INPUT -s 200.49.11.0/25 -j ACCEPT
-A INPUT -s 200.49.11.128/26 -j ACCEPT
-A INPUT -s 200.49.11.192/27 -j ACCEPT
-A INPUT -s 200.49.12.0/24 -j ACCEPT
-A INPUT -s 200.49.13.0/26 -j ACCEPT
-A INPUT -s 200.49.13.64/28 -j ACCEPT
-A INPUT -s 200.49.13.96/27 -j ACCEPT
-A INPUT -s 200.49.13.128/25 -j ACCEPT
-A INPUT -s 200.49.14.0/24 -j ACCEPT
-A INPUT -s 200.49.15.0/27 -j ACCEPT
-A INPUT -s 200.49.15.32/29 -j ACCEPT
-A INPUT -s 200.49.15.48/28 -j ACCEPT
-A INPUT -s 200.49.15.64/26 -j ACCEPT
-A INPUT -s 200.49.15.128/28 -j ACCEPT
-A INPUT -s 200.49.15.160/27 -j ACCEPT
-A INPUT -s 200.49.15.224/27 -j ACCEPT
-A INPUT -s 200.49.24.0/21 -j ACCEPT
-A INPUT -s 200.49.64.0/18 -j ACCEPT
-A INPUT -s 200.49.128.0/19 -j ACCEPT
-A INPUT -s 200.49.192.0/19 -j ACCEPT
-A INPUT -s 200.49.224.0/20 -j ACCEPT
-A INPUT -s 200.50.160.0/19 -j ACCEPT
-A INPUT -s 200.50.240.0/20 -j ACCEPT
-A INPUT -s 200.51.0.0/16 -j ACCEPT
-A INPUT -s 200.55.0.16/28 -j ACCEPT
-A INPUT -s 200.55.0.32/28 -j ACCEPT
-A INPUT -s 200.55.0.52/30 -j ACCEPT
-A INPUT -s 200.55.0.56/29 -j ACCEPT
-A INPUT -s 200.55.0.64/29 -j ACCEPT
-A INPUT -s 200.55.0.72/30 -j ACCEPT
-A INPUT -s 200.55.0.88/29 -j ACCEPT
-A INPUT -s 200.55.0.101/32 -j ACCEPT
-A INPUT -s 200.55.0.104/29 -j ACCEPT
-A INPUT -s 200.55.0.112/30 -j ACCEPT
-A INPUT -s 200.55.0.128/30 -j ACCEPT
-A INPUT -s 200.55.0.136/29 -j ACCEPT
-A INPUT -s 200.55.0.144/29 -j ACCEPT
-A INPUT -s 200.55.0.156/30 -j ACCEPT
-A INPUT -s 200.55.0.164/30 -j ACCEPT
-A INPUT -s 200.55.0.168/29 -j ACCEPT
-A INPUT -s 200.55.0.176/28 -j ACCEPT
-A INPUT -s 200.55.0.192/27 -j ACCEPT
-A INPUT -s 200.55.0.224/28 -j ACCEPT
-A INPUT -s 200.55.0.240/30 -j ACCEPT
-A INPUT -s 200.55.1.16/28 -j ACCEPT
-A INPUT -s 200.55.1.32/27 -j ACCEPT
-A INPUT -s 200.55.1.96/27 -j ACCEPT
-A INPUT -s 200.55.1.128/25 -j ACCEPT
-A INPUT -s 200.55.2.0/25 -j ACCEPT
-A INPUT -s 200.55.2.128/29 -j ACCEPT
-A INPUT -s 200.55.2.136/30 -j ACCEPT
-A INPUT -s 200.55.2.140/32 -j ACCEPT
-A INPUT -s 200.55.2.143/32 -j ACCEPT
-A INPUT -s 200.55.2.145/32 -j ACCEPT
-A INPUT -s 200.55.2.146/31 -j ACCEPT
-A INPUT -s 200.55.2.148/30 -j ACCEPT
-A INPUT -s 200.55.2.152/29 -j ACCEPT
-A INPUT -s 200.55.2.160/27 -j ACCEPT
-A INPUT -s 200.55.2.193/32 -j ACCEPT
-A INPUT -s 200.55.2.194/31 -j ACCEPT
-A INPUT -s 200.55.2.196/30 -j ACCEPT
-A INPUT -s 200.55.2.224/27 -j ACCEPT
-A INPUT -s 200.55.3.0/27 -j ACCEPT
-A INPUT -s 200.55.3.32/29 -j ACCEPT
-A INPUT -s 200.55.3.56/29 -j ACCEPT
-A INPUT -s 200.55.3.80/28 -j ACCEPT
-A INPUT -s 200.55.3.96/29 -j ACCEPT
-A INPUT -s 200.55.3.112/28 -j ACCEPT
-A INPUT -s 200.55.3.128/27 -j ACCEPT
-A INPUT -s 200.55.3.242/32 -j ACCEPT
-A INPUT -s 200.55.3.248/29 -j ACCEPT
-A INPUT -s 200.55.4.0/23 -j ACCEPT
-A INPUT -s 200.55.6.128/28 -j ACCEPT
-A INPUT -s 200.55.7.8/29 -j ACCEPT
-A INPUT -s 200.55.7.16/29 -j ACCEPT
-A INPUT -s 200.55.7.32/28 -j ACCEPT
-A INPUT -s 200.55.7.56/29 -j ACCEPT
-A INPUT -s 200.55.7.64/26 -j ACCEPT
-A INPUT -s 200.55.7.128/27 -j ACCEPT
-A INPUT -s 200.55.7.160/28 -j ACCEPT
-A INPUT -s 200.55.7.184/29 -j ACCEPT
-A INPUT -s 200.55.7.192/28 -j ACCEPT
-A INPUT -s 200.55.7.208/29 -j ACCEPT
-A INPUT -s 200.55.7.224/29 -j ACCEPT
-A INPUT -s 200.55.7.240/29 -j ACCEPT
-A INPUT -s 200.55.8.0/26 -j ACCEPT
-A INPUT -s 200.55.8.64/29 -j ACCEPT
-A INPUT -s 200.55.8.88/30 -j ACCEPT
-A INPUT -s 200.55.8.100/30 -j ACCEPT
-A INPUT -s 200.55.8.104/29 -j ACCEPT
-A INPUT -s 200.55.8.112/28 -j ACCEPT
-A INPUT -s 200.55.8.128/29 -j ACCEPT
-A INPUT -s 200.55.8.140/30 -j ACCEPT
-A INPUT -s 200.55.8.144/28 -j ACCEPT
-A INPUT -s 200.55.8.160/27 -j ACCEPT
-A INPUT -s 200.55.8.200/29 -j ACCEPT
-A INPUT -s 200.55.8.208/28 -j ACCEPT
-A INPUT -s 200.55.8.224/28 -j ACCEPT
-A INPUT -s 200.55.8.240/30 -j ACCEPT
-A INPUT -s 200.55.8.248/29 -j ACCEPT
-A INPUT -s 200.55.9.0/28 -j ACCEPT
-A INPUT -s 200.55.9.32/28 -j ACCEPT
-A INPUT -s 200.55.9.64/28 -j ACCEPT
-A INPUT -s 200.55.9.88/29 -j ACCEPT
-A INPUT -s 200.55.9.96/29 -j ACCEPT
-A INPUT -s 200.55.9.112/28 -j ACCEPT
-A INPUT -s 200.55.9.128/26 -j ACCEPT
-A INPUT -s 200.55.9.192/29 -j ACCEPT
-A INPUT -s 200.55.9.232/29 -j ACCEPT
-A INPUT -s 200.55.9.240/28 -j ACCEPT
-A INPUT -s 200.55.10.16/28 -j ACCEPT
-A INPUT -s 200.55.10.48/28 -j ACCEPT
-A INPUT -s 200.55.10.64/26 -j ACCEPT
-A INPUT -s 200.55.10.128/25 -j ACCEPT
-A INPUT -s 200.55.11.32/27 -j ACCEPT
-A INPUT -s 200.55.11.64/26 -j ACCEPT
-A INPUT -s 200.55.11.128/28 -j ACCEPT
-A INPUT -s 200.55.11.144/29 -j ACCEPT
-A INPUT -s 200.55.11.160/27 -j ACCEPT
-A INPUT -s 200.55.11.192/26 -j ACCEPT
-A INPUT -s 200.55.12.0/24 -j ACCEPT
-A INPUT -s 200.55.13.0/28 -j ACCEPT
-A INPUT -s 200.55.13.16/29 -j ACCEPT
-A INPUT -s 200.55.13.32/28 -j ACCEPT
-A INPUT -s 200.55.13.52/30 -j ACCEPT
-A INPUT -s 200.55.13.56/29 -j ACCEPT
-A INPUT -s 200.55.13.68/30 -j ACCEPT
-A INPUT -s 200.55.13.72/29 -j ACCEPT
-A INPUT -s 200.55.13.80/28 -j ACCEPT
-A INPUT -s 200.55.13.96/27 -j ACCEPT
-A INPUT -s 200.55.13.128/29 -j ACCEPT
-A INPUT -s 200.55.13.136/30 -j ACCEPT
-A INPUT -s 200.55.13.144/29 -j ACCEPT
-A INPUT -s 200.55.13.152/30 -j ACCEPT
-A INPUT -s 200.55.13.164/30 -j ACCEPT
-A INPUT -s 200.55.13.168/29 -j ACCEPT
-A INPUT -s 200.55.13.176/30 -j ACCEPT
-A INPUT -s 200.55.13.184/30 -j ACCEPT
-A INPUT -s 200.55.13.192/28 -j ACCEPT
-A INPUT -s 200.55.13.216/29 -j ACCEPT
-A INPUT -s 200.55.13.224/29 -j ACCEPT
-A INPUT -s 200.55.13.236/30 -j ACCEPT
-A INPUT -s 200.55.13.240/28 -j ACCEPT
-A INPUT -s 200.55.14.0/27 -j ACCEPT
-A INPUT -s 200.55.14.32/29 -j ACCEPT
-A INPUT -s 200.55.14.64/28 -j ACCEPT
-A INPUT -s 200.55.14.96/29 -j ACCEPT
-A INPUT -s 200.55.14.128/28 -j ACCEPT
-A INPUT -s 200.55.14.160/27 -j ACCEPT
-A INPUT -s 200.55.14.200/29 -j ACCEPT
-A INPUT -s 200.55.14.208/28 -j ACCEPT
-A INPUT -s 200.55.14.232/29 -j ACCEPT
-A INPUT -s 200.55.14.240/28 -j ACCEPT
-A INPUT -s 200.55.16.0/29 -j ACCEPT
-A INPUT -s 200.55.16.16/28 -j ACCEPT
-A INPUT -s 200.55.16.32/27 -j ACCEPT
-A INPUT -s 200.55.16.64/26 -j ACCEPT
-A INPUT -s 200.55.16.128/28 -j ACCEPT
-A INPUT -s 200.55.16.144/30 -j ACCEPT
-A INPUT -s 200.55.16.148/31 -j ACCEPT
-A INPUT -s 200.55.16.151/32 -j ACCEPT
-A INPUT -s 200.55.16.152/29 -j ACCEPT
-A INPUT -s 200.55.16.160/27 -j ACCEPT
-A INPUT -s 200.55.16.192/27 -j ACCEPT
-A INPUT -s 200.55.16.224/28 -j ACCEPT
-A INPUT -s 200.55.17.0/29 -j ACCEPT
-A INPUT -s 200.55.17.24/29 -j ACCEPT
-A INPUT -s 200.55.17.32/27 -j ACCEPT
-A INPUT -s 200.55.17.88/29 -j ACCEPT
-A INPUT -s 200.55.17.96/27 -j ACCEPT
-A INPUT -s 200.55.17.128/29 -j ACCEPT
-A INPUT -s 200.55.17.192/26 -j ACCEPT
-A INPUT -s 200.55.18.0/23 -j ACCEPT
-A INPUT -s 200.55.20.0/24 -j ACCEPT
-A INPUT -s 200.55.21.0/27 -j ACCEPT
-A INPUT -s 200.55.21.32/28 -j ACCEPT
-A INPUT -s 200.55.21.80/28 -j ACCEPT
-A INPUT -s 200.55.21.96/27 -j ACCEPT
-A INPUT -s 200.55.21.144/28 -j ACCEPT
-A INPUT -s 200.55.21.160/27 -j ACCEPT
-A INPUT -s 200.55.21.192/28 -j ACCEPT
-A INPUT -s 200.55.21.224/28 -j ACCEPT
-A INPUT -s 200.55.22.0/24 -j ACCEPT
-A INPUT -s 200.55.24.0/25 -j ACCEPT
-A INPUT -s 200.55.25.0/24 -j ACCEPT
-A INPUT -s 200.55.26.0/24 -j ACCEPT
-A INPUT -s 200.55.28.0/25 -j ACCEPT
-A INPUT -s 200.55.28.128/29 -j ACCEPT
-A INPUT -s 200.55.29.0/24 -j ACCEPT
-A INPUT -s 200.55.30.0/23 -j ACCEPT
-A INPUT -s 200.55.32.0/22 -j ACCEPT
-A INPUT -s 200.55.36.0/26 -j ACCEPT
-A INPUT -s 200.55.36.80/28 -j ACCEPT
-A INPUT -s 200.55.36.128/26 -j ACCEPT
-A INPUT -s 200.55.36.192/27 -j ACCEPT
-A INPUT -s 200.55.36.224/28 -j ACCEPT
-A INPUT -s 200.55.37.0/26 -j ACCEPT
-A INPUT -s 200.55.37.64/27 -j ACCEPT
-A INPUT -s 200.55.37.96/29 -j ACCEPT
-A INPUT -s 200.55.37.112/28 -j ACCEPT
-A INPUT -s 200.55.37.128/26 -j ACCEPT
-A INPUT -s 200.55.37.192/28 -j ACCEPT
-A INPUT -s 200.55.37.248/29 -j ACCEPT
-A INPUT -s 200.55.38.0/27 -j ACCEPT
-A INPUT -s 200.55.38.32/29 -j ACCEPT
-A INPUT -s 200.55.38.48/28 -j ACCEPT
-A INPUT -s 200.55.38.64/28 -j ACCEPT
-A INPUT -s 200.55.38.88/29 -j ACCEPT
-A INPUT -s 200.55.38.96/27 -j ACCEPT
-A INPUT -s 200.55.38.136/29 -j ACCEPT
-A INPUT -s 200.55.38.152/29 -j ACCEPT
-A INPUT -s 200.55.38.160/28 -j ACCEPT
-A INPUT -s 200.55.38.184/29 -j ACCEPT
-A INPUT -s 200.55.38.192/26 -j ACCEPT
-A INPUT -s 200.55.39.0/28 -j ACCEPT
-A INPUT -s 200.55.39.48/28 -j ACCEPT
-A INPUT -s 200.55.39.68/32 -j ACCEPT
-A INPUT -s 200.55.39.70/32 -j ACCEPT
-A INPUT -s 200.55.39.80/28 -j ACCEPT
-A INPUT -s 200.55.39.96/27 -j ACCEPT
-A INPUT -s 200.55.39.128/28 -j ACCEPT
-A INPUT -s 200.55.39.160/27 -j ACCEPT
-A INPUT -s 200.55.39.192/26 -j ACCEPT
-A INPUT -s 200.55.40.0/22 -j ACCEPT
-A INPUT -s 200.55.44.0/23 -j ACCEPT
-A INPUT -s 200.55.46.0/24 -j ACCEPT
-A INPUT -s 200.55.47.0/26 -j ACCEPT
-A INPUT -s 200.55.47.64/27 -j ACCEPT
-A INPUT -s 200.55.47.112/28 -j ACCEPT
-A INPUT -s 200.55.47.144/28 -j ACCEPT
-A INPUT -s 200.55.47.160/27 -j ACCEPT
-A INPUT -s 200.55.47.192/26 -j ACCEPT
-A INPUT -s 200.55.48.0/23 -j ACCEPT
-A INPUT -s 200.55.50.96/27 -j ACCEPT
-A INPUT -s 200.55.50.128/25 -j ACCEPT
-A INPUT -s 200.55.51.0/25 -j ACCEPT
-A INPUT -s 200.55.51.128/27 -j ACCEPT
-A INPUT -s 200.55.51.160/28 -j ACCEPT
-A INPUT -s 200.55.51.224/27 -j ACCEPT
-A INPUT -s 200.55.52.0/23 -j ACCEPT
-A INPUT -s 200.55.54.8/29 -j ACCEPT
-A INPUT -s 200.55.54.16/29 -j ACCEPT
-A INPUT -s 200.55.54.32/27 -j ACCEPT
-A INPUT -s 200.55.54.64/27 -j ACCEPT
-A INPUT -s 200.55.54.96/28 -j ACCEPT
-A INPUT -s 200.55.54.112/29 -j ACCEPT
-A INPUT -s 200.55.54.136/29 -j ACCEPT
-A INPUT -s 200.55.54.144/29 -j ACCEPT
-A INPUT -s 200.55.54.168/29 -j ACCEPT
-A INPUT -s 200.55.54.192/29 -j ACCEPT
-A INPUT -s 200.55.54.208/28 -j ACCEPT
-A INPUT -s 200.55.54.232/29 -j ACCEPT
-A INPUT -s 200.55.54.240/28 -j ACCEPT
-A INPUT -s 200.55.55.0/24 -j ACCEPT
-A INPUT -s 200.55.56.0/27 -j ACCEPT
-A INPUT -s 200.55.56.32/29 -j ACCEPT
-A INPUT -s 200.55.56.40/30 -j ACCEPT
-A INPUT -s 200.55.56.52/30 -j ACCEPT
-A INPUT -s 200.55.56.56/29 -j ACCEPT
-A INPUT -s 200.55.56.64/27 -j ACCEPT
-A INPUT -s 200.55.56.96/30 -j ACCEPT
-A INPUT -s 200.55.56.104/29 -j ACCEPT
-A INPUT -s 200.55.56.112/28 -j ACCEPT
-A INPUT -s 200.55.56.128/28 -j ACCEPT
-A INPUT -s 200.55.56.148/30 -j ACCEPT
-A INPUT -s 200.55.56.152/30 -j ACCEPT
-A INPUT -s 200.55.56.160/27 -j ACCEPT
-A INPUT -s 200.55.56.192/28 -j ACCEPT
-A INPUT -s 200.55.56.208/29 -j ACCEPT
-A INPUT -s 200.55.56.220/30 -j ACCEPT
-A INPUT -s 200.55.56.224/27 -j ACCEPT
-A INPUT -s 200.55.57.0/26 -j ACCEPT
-A INPUT -s 200.55.57.64/29 -j ACCEPT
-A INPUT -s 200.55.57.80/28 -j ACCEPT
-A INPUT -s 200.55.57.96/29 -j ACCEPT
-A INPUT -s 200.55.57.112/28 -j ACCEPT
-A INPUT -s 200.55.57.128/28 -j ACCEPT
-A INPUT -s 200.55.57.144/29 -j ACCEPT
-A INPUT -s 200.55.57.160/27 -j ACCEPT
-A INPUT -s 200.55.57.192/26 -j ACCEPT
-A INPUT -s 200.55.58.0/28 -j ACCEPT
-A INPUT -s 200.55.58.48/28 -j ACCEPT
-A INPUT -s 200.55.58.64/27 -j ACCEPT
-A INPUT -s 200.55.58.128/27 -j ACCEPT
-A INPUT -s 200.55.58.160/28 -j ACCEPT
-A INPUT -s 200.55.58.208/28 -j ACCEPT
-A INPUT -s 200.55.58.224/27 -j ACCEPT
-A INPUT -s 200.55.59.0/24 -j ACCEPT
-A INPUT -s 200.55.60.0/23 -j ACCEPT
-A INPUT -s 200.55.62.0/28 -j ACCEPT
-A INPUT -s 200.55.62.48/28 -j ACCEPT
-A INPUT -s 200.55.62.64/26 -j ACCEPT
-A INPUT -s 200.55.62.128/25 -j ACCEPT
-A INPUT -s 200.55.63.236/30 -j ACCEPT
-A INPUT -s 200.55.64.0/18 -j ACCEPT
-A INPUT -s 200.55.223.136/29 -j ACCEPT
-A INPUT -s 200.55.223.144/28 -j ACCEPT
-A INPUT -s 200.55.241.0/24 -j ACCEPT
-A INPUT -s 200.55.242.0/24 -j ACCEPT
-A INPUT -s 200.55.243.0/26 -j ACCEPT
-A INPUT -s 200.55.243.64/27 -j ACCEPT
-A INPUT -s 200.55.243.96/28 -j ACCEPT
-A INPUT -s 200.55.243.112/29 -j ACCEPT
-A INPUT -s 200.55.243.128/25 -j ACCEPT
-A INPUT -s 200.55.244.0/22 -j ACCEPT
-A INPUT -s 200.58.96.0/24 -j ACCEPT
-A INPUT -s 200.58.97.0/25 -j ACCEPT
-A INPUT -s 200.58.97.128/26 -j ACCEPT
-A INPUT -s 200.58.97.200/29 -j ACCEPT
-A INPUT -s 200.58.97.208/28 -j ACCEPT
-A INPUT -s 200.58.97.224/27 -j ACCEPT
-A INPUT -s 200.58.98.0/23 -j ACCEPT
-A INPUT -s 200.58.100.0/22 -j ACCEPT
-A INPUT -s 200.58.104.0/21 -j ACCEPT
-A INPUT -s 200.58.112.0/25 -j ACCEPT
-A INPUT -s 200.58.112.144/28 -j ACCEPT
-A INPUT -s 200.58.112.160/27 -j ACCEPT
-A INPUT -s 200.58.112.192/26 -j ACCEPT
-A INPUT -s 200.58.113.0/24 -j ACCEPT
-A INPUT -s 200.58.114.0/27 -j ACCEPT
-A INPUT -s 200.58.114.32/29 -j ACCEPT
-A INPUT -s 200.58.114.40/30 -j ACCEPT
-A INPUT -s 200.58.114.45/32 -j ACCEPT
-A INPUT -s 200.58.114.46/31 -j ACCEPT
-A INPUT -s 200.58.114.48/28 -j ACCEPT
-A INPUT -s 200.58.114.64/26 -j ACCEPT
-A INPUT -s 200.58.114.128/25 -j ACCEPT
-A INPUT -s 200.58.115.0/24 -j ACCEPT
-A INPUT -s 200.58.116.0/22 -j ACCEPT
-A INPUT -s 200.58.120.0/21 -j ACCEPT
-A INPUT -s 200.59.0.0/20 -j ACCEPT
-A INPUT -s 200.59.32.0/19 -j ACCEPT
-A INPUT -s 200.59.64.0/18 -j ACCEPT
-A INPUT -s 200.59.128.0/19 -j ACCEPT
-A INPUT -s 200.59.160.0/20 -j ACCEPT
-A INPUT -s 200.59.176.0/21 -j ACCEPT
-A INPUT -s 200.59.192.0/20 -j ACCEPT
-A INPUT -s 200.59.224.0/19 -j ACCEPT
-A INPUT -s 200.61.0.0/18 -j ACCEPT
-A INPUT -s 200.61.64.0/20 -j ACCEPT
-A INPUT -s 200.61.80.0/23 -j ACCEPT
-A INPUT -s 200.61.82.0/26 -j ACCEPT
-A INPUT -s 200.61.82.128/25 -j ACCEPT
-A INPUT -s 200.61.83.0/25 -j ACCEPT
-A INPUT -s 200.61.83.192/26 -j ACCEPT
-A INPUT -s 200.61.84.0/23 -j ACCEPT
-A INPUT -s 200.61.86.0/24 -j ACCEPT
-A INPUT -s 200.61.87.0/25 -j ACCEPT
-A INPUT -s 200.61.87.128/26 -j ACCEPT
-A INPUT -s 200.61.87.192/27 -j ACCEPT
-A INPUT -s 200.61.87.224/29 -j ACCEPT
-A INPUT -s 200.61.88.0/24 -j ACCEPT
-A INPUT -s 200.61.89.64/26 -j ACCEPT
-A INPUT -s 200.61.89.128/25 -j ACCEPT
-A INPUT -s 200.61.90.0/23 -j ACCEPT
-A INPUT -s 200.61.92.0/22 -j ACCEPT
-A INPUT -s 200.61.96.0/19 -j ACCEPT
-A INPUT -s 200.61.128.0/18 -j ACCEPT
-A INPUT -s 200.61.192.0/19 -j ACCEPT
-A INPUT -s 200.61.240.0/21 -j ACCEPT
-A INPUT -s 200.61.248.0/22 -j ACCEPT
-A INPUT -s 200.61.254.0/23 -j ACCEPT
-A INPUT -s 200.62.54.0/23 -j ACCEPT
-A INPUT -s 200.63.0.0/19 -j ACCEPT
-A INPUT -s 200.63.32.0/21 -j ACCEPT
-A INPUT -s 200.63.48.0/21 -j ACCEPT
-A INPUT -s 200.63.64.0/19 -j ACCEPT
-A INPUT -s 200.63.108.0/22 -j ACCEPT
-A INPUT -s 200.63.112.0/20 -j ACCEPT
-A INPUT -s 200.63.128.0/18 -j ACCEPT
-A INPUT -s 200.68.64.0/18 -j ACCEPT
-A INPUT -s 200.68.192.0/18 -j ACCEPT
-A INPUT -s 200.69.0.0/22 -j ACCEPT
-A INPUT -s 200.69.4.0/23 -j ACCEPT
-A INPUT -s 200.69.6.16/28 -j ACCEPT
-A INPUT -s 200.69.6.32/27 -j ACCEPT
-A INPUT -s 200.69.6.64/26 -j ACCEPT
-A INPUT -s 200.69.6.128/25 -j ACCEPT
-A INPUT -s 200.69.7.0/24 -j ACCEPT
-A INPUT -s 200.69.8.0/21 -j ACCEPT
-A INPUT -s 200.69.16.0/20 -j ACCEPT
-A INPUT -s 200.69.32.0/19 -j ACCEPT
-A INPUT -s 200.69.64.0/20 -j ACCEPT
-A INPUT -s 200.69.80.0/21 -j ACCEPT
-A INPUT -s 200.69.88.0/22 -j ACCEPT
-A INPUT -s 200.69.92.0/23 -j ACCEPT
-A INPUT -s 200.69.95.0/24 -j ACCEPT
-A INPUT -s 200.69.128.0/20 -j ACCEPT
-A INPUT -s 200.69.144.0/24 -j ACCEPT
-A INPUT -s 200.69.145.0/25 -j ACCEPT
-A INPUT -s 200.69.145.128/26 -j ACCEPT
-A INPUT -s 200.69.145.192/27 -j ACCEPT
-A INPUT -s 200.69.145.240/28 -j ACCEPT
-A INPUT -s 200.69.146.0/23 -j ACCEPT
-A INPUT -s 200.69.148.0/22 -j ACCEPT
-A INPUT -s 200.69.152.0/21 -j ACCEPT
-A INPUT -s 200.69.192.0/18 -j ACCEPT
-A INPUT -s 200.70.0.0/16 -j ACCEPT
-A INPUT -s 200.71.88.0/21 -j ACCEPT
-A INPUT -s 200.71.224.0/20 -j ACCEPT
-A INPUT -s 200.73.71.0/24 -j ACCEPT
-A INPUT -s 200.73.76.0/24 -j ACCEPT
-A INPUT -s 200.73.128.0/18 -j ACCEPT
-A INPUT -s 200.80.7.0/26 -j ACCEPT
-A INPUT -s 200.80.7.64/27 -j ACCEPT
-A INPUT -s 200.80.7.96/29 -j ACCEPT
-A INPUT -s 200.80.7.112/28 -j ACCEPT
-A INPUT -s 200.80.7.128/26 -j ACCEPT
-A INPUT -s 200.80.7.192/28 -j ACCEPT
-A INPUT -s 200.80.7.248/29 -j ACCEPT
-A INPUT -s 200.80.8.0/23 -j ACCEPT
-A INPUT -s 200.80.10.0/25 -j ACCEPT
-A INPUT -s 200.80.13.0/24 -j ACCEPT
-A INPUT -s 200.80.16.32/29 -j ACCEPT
-A INPUT -s 200.80.16.48/29 -j ACCEPT
-A INPUT -s 200.80.16.128/28 -j ACCEPT
-A INPUT -s 200.80.16.144/29 -j ACCEPT
-A INPUT -s 200.80.16.176/28 -j ACCEPT
-A INPUT -s 200.80.16.192/27 -j ACCEPT
-A INPUT -s 200.80.16.224/28 -j ACCEPT
-A INPUT -s 200.80.17.192/26 -j ACCEPT
-A INPUT -s 200.80.18.16/28 -j ACCEPT
-A INPUT -s 200.80.18.48/28 -j ACCEPT
-A INPUT -s 200.80.18.144/28 -j ACCEPT
-A INPUT -s 200.80.18.160/27 -j ACCEPT
-A INPUT -s 200.80.20.0/25 -j ACCEPT
-A INPUT -s 200.80.20.128/26 -j ACCEPT
-A INPUT -s 200.80.24.96/27 -j ACCEPT
-A INPUT -s 200.80.24.128/28 -j ACCEPT
-A INPUT -s 200.80.24.208/29 -j ACCEPT
-A INPUT -s 200.80.25.0/25 -j ACCEPT
-A INPUT -s 200.80.25.152/29 -j ACCEPT
-A INPUT -s 200.80.26.0/26 -j ACCEPT
-A INPUT -s 200.80.26.128/25 -j ACCEPT
-A INPUT -s 200.80.28.0/28 -j ACCEPT
-A INPUT -s 200.80.28.32/27 -j ACCEPT
-A INPUT -s 200.80.28.64/27 -j ACCEPT
-A INPUT -s 200.80.28.96/29 -j ACCEPT
-A INPUT -s 200.80.28.160/28 -j ACCEPT
-A INPUT -s 200.80.30.32/29 -j ACCEPT
-A INPUT -s 200.80.30.48/28 -j ACCEPT
-A INPUT -s 200.80.30.112/29 -j ACCEPT
-A INPUT -s 200.80.30.128/25 -j ACCEPT
-A INPUT -s 200.80.31.56/29 -j ACCEPT
-A INPUT -s 200.80.31.224/29 -j ACCEPT
-A INPUT -s 200.80.32.120/29 -j ACCEPT
-A INPUT -s 200.80.32.128/28 -j ACCEPT
-A INPUT -s 200.80.32.160/28 -j ACCEPT
-A INPUT -s 200.80.32.192/26 -j ACCEPT
-A INPUT -s 200.80.35.0/25 -j ACCEPT
-A INPUT -s 200.80.35.128/27 -j ACCEPT
-A INPUT -s 200.80.35.176/28 -j ACCEPT
-A INPUT -s 200.80.35.192/27 -j ACCEPT
-A INPUT -s 200.80.36.0/22 -j ACCEPT
-A INPUT -s 200.80.40.0/25 -j ACCEPT
-A INPUT -s 200.80.40.168/29 -j ACCEPT
-A INPUT -s 200.80.40.192/27 -j ACCEPT
-A INPUT -s 200.80.41.0/25 -j ACCEPT
-A INPUT -s 200.80.41.144/28 -j ACCEPT
-A INPUT -s 200.80.41.192/28 -j ACCEPT
-A INPUT -s 200.80.44.0/24 -j ACCEPT
-A INPUT -s 200.80.46.0/24 -j ACCEPT
-A INPUT -s 200.80.50.0/27 -j ACCEPT
-A INPUT -s 200.80.50.112/28 -j ACCEPT
-A INPUT -s 200.80.59.0/25 -j ACCEPT
-A INPUT -s 200.80.64.0/20 -j ACCEPT
-A INPUT -s 200.80.80.0/22 -j ACCEPT
-A INPUT -s 200.80.128.0/17 -j ACCEPT
-A INPUT -s 200.81.0.0/19 -j ACCEPT
-A INPUT -s 200.81.32.0/20 -j ACCEPT
-A INPUT -s 200.81.64.0/20 -j ACCEPT
-A INPUT -s 200.81.80.0/24 -j ACCEPT
-A INPUT -s 200.81.81.128/25 -j ACCEPT
-A INPUT -s 200.81.82.0/23 -j ACCEPT
-A INPUT -s 200.81.84.0/22 -j ACCEPT
-A INPUT -s 200.81.88.0/21 -j ACCEPT
-A INPUT -s 200.81.96.0/20 -j ACCEPT
-A INPUT -s 200.81.112.15/32 -j ACCEPT
-A INPUT -s 200.81.112.31/32 -j ACCEPT
-A INPUT -s 200.81.112.47/32 -j ACCEPT
-A INPUT -s 200.81.112.63/32 -j ACCEPT
-A INPUT -s 200.81.112.79/32 -j ACCEPT
-A INPUT -s 200.81.112.95/32 -j ACCEPT
-A INPUT -s 200.81.112.111/32 -j ACCEPT
-A INPUT -s 200.81.112.127/32 -j ACCEPT
-A INPUT -s 200.81.112.128/30 -j ACCEPT
-A INPUT -s 200.81.112.135/32 -j ACCEPT
-A INPUT -s 200.81.112.139/32 -j ACCEPT
-A INPUT -s 200.81.112.143/32 -j ACCEPT
-A INPUT -s 200.81.112.144/30 -j ACCEPT
-A INPUT -s 200.81.112.151/32 -j ACCEPT
-A INPUT -s 200.81.112.155/32 -j ACCEPT
-A INPUT -s 200.81.112.159/32 -j ACCEPT
-A INPUT -s 200.81.112.163/32 -j ACCEPT
-A INPUT -s 200.81.112.164/30 -j ACCEPT
-A INPUT -s 200.81.112.168/29 -j ACCEPT
-A INPUT -s 200.81.112.191/32 -j ACCEPT
-A INPUT -s 200.81.112.207/32 -j ACCEPT
-A INPUT -s 200.81.112.223/32 -j ACCEPT
-A INPUT -s 200.81.112.239/32 -j ACCEPT
-A INPUT -s 200.81.112.255/32 -j ACCEPT
-A INPUT -s 200.81.113.0/24 -j ACCEPT
-A INPUT -s 200.81.114.0/28 -j ACCEPT
-A INPUT -s 200.81.114.19/32 -j ACCEPT
-A INPUT -s 200.81.114.23/32 -j ACCEPT
-A INPUT -s 200.81.114.27/32 -j ACCEPT
-A INPUT -s 200.81.114.28/30 -j ACCEPT
-A INPUT -s 200.81.114.32/27 -j ACCEPT
-A INPUT -s 200.81.114.67/32 -j ACCEPT
-A INPUT -s 200.81.114.71/32 -j ACCEPT
-A INPUT -s 200.81.114.72/29 -j ACCEPT
-A INPUT -s 200.81.114.80/28 -j ACCEPT
-A INPUT -s 200.81.114.96/27 -j ACCEPT
-A INPUT -s 200.81.114.131/32 -j ACCEPT
-A INPUT -s 200.81.114.135/32 -j ACCEPT
-A INPUT -s 200.81.114.139/32 -j ACCEPT
-A INPUT -s 200.81.114.143/32 -j ACCEPT
-A INPUT -s 200.81.114.147/32 -j ACCEPT
-A INPUT -s 200.81.114.148/30 -j ACCEPT
-A INPUT -s 200.81.114.155/32 -j ACCEPT
-A INPUT -s 200.81.114.159/32 -j ACCEPT
-A INPUT -s 200.81.114.163/32 -j ACCEPT
-A INPUT -s 200.81.114.167/32 -j ACCEPT
-A INPUT -s 200.81.114.171/32 -j ACCEPT
-A INPUT -s 200.81.114.175/32 -j ACCEPT
-A INPUT -s 200.81.114.179/32 -j ACCEPT
-A INPUT -s 200.81.114.183/32 -j ACCEPT
-A INPUT -s 200.81.114.187/32 -j ACCEPT
-A INPUT -s 200.81.114.191/32 -j ACCEPT
-A INPUT -s 200.81.114.195/32 -j ACCEPT
-A INPUT -s 200.81.114.199/32 -j ACCEPT
-A INPUT -s 200.81.114.200/30 -j ACCEPT
-A INPUT -s 200.81.114.207/32 -j ACCEPT
-A INPUT -s 200.81.114.211/32 -j ACCEPT
-A INPUT -s 200.81.114.215/32 -j ACCEPT
-A INPUT -s 200.81.114.219/32 -j ACCEPT
-A INPUT -s 200.81.114.220/30 -j ACCEPT
-A INPUT -s 200.81.114.227/32 -j ACCEPT
-A INPUT -s 200.81.114.231/32 -j ACCEPT
-A INPUT -s 200.81.114.235/32 -j ACCEPT
-A INPUT -s 200.81.114.239/32 -j ACCEPT
-A INPUT -s 200.81.114.240/29 -j ACCEPT
-A INPUT -s 200.81.114.248/30 -j ACCEPT
-A INPUT -s 200.81.114.255/32 -j ACCEPT
-A INPUT -s 200.81.115.15/32 -j ACCEPT
-A INPUT -s 200.81.115.31/32 -j ACCEPT
-A INPUT -s 200.81.115.47/32 -j ACCEPT
-A INPUT -s 200.81.115.63/32 -j ACCEPT
-A INPUT -s 200.81.115.79/32 -j ACCEPT
-A INPUT -s 200.81.115.95/32 -j ACCEPT
-A INPUT -s 200.81.115.111/32 -j ACCEPT
-A INPUT -s 200.81.115.127/32 -j ACCEPT
-A INPUT -s 200.81.115.143/32 -j ACCEPT
-A INPUT -s 200.81.115.159/32 -j ACCEPT
-A INPUT -s 200.81.115.175/32 -j ACCEPT
-A INPUT -s 200.81.115.191/32 -j ACCEPT
-A INPUT -s 200.81.115.207/32 -j ACCEPT
-A INPUT -s 200.81.115.223/32 -j ACCEPT
-A INPUT -s 200.81.115.239/32 -j ACCEPT
-A INPUT -s 200.81.115.255/32 -j ACCEPT
-A INPUT -s 200.81.116.0/30 -j ACCEPT
-A INPUT -s 200.81.116.64/30 -j ACCEPT
-A INPUT -s 200.81.116.76/30 -j ACCEPT
-A INPUT -s 200.81.116.132/30 -j ACCEPT
-A INPUT -s 200.81.116.140/30 -j ACCEPT
-A INPUT -s 200.81.116.180/30 -j ACCEPT
-A INPUT -s 200.81.116.228/30 -j ACCEPT
-A INPUT -s 200.81.116.236/30 -j ACCEPT
-A INPUT -s 200.81.117.0/28 -j ACCEPT
-A INPUT -s 200.81.117.28/30 -j ACCEPT
-A INPUT -s 200.81.117.80/28 -j ACCEPT
-A INPUT -s 200.81.117.96/27 -j ACCEPT
-A INPUT -s 200.81.117.160/30 -j ACCEPT
-A INPUT -s 200.81.117.172/30 -j ACCEPT
-A INPUT -s 200.81.117.188/30 -j ACCEPT
-A INPUT -s 200.81.117.192/30 -j ACCEPT
-A INPUT -s 200.81.117.200/29 -j ACCEPT
-A INPUT -s 200.81.117.212/30 -j ACCEPT
-A INPUT -s 200.81.117.220/30 -j ACCEPT
-A INPUT -s 200.81.117.228/30 -j ACCEPT
-A INPUT -s 200.81.117.248/29 -j ACCEPT
-A INPUT -s 200.81.118.80/29 -j ACCEPT
-A INPUT -s 200.81.118.112/30 -j ACCEPT
-A INPUT -s 200.81.118.132/30 -j ACCEPT
-A INPUT -s 200.81.118.136/29 -j ACCEPT
-A INPUT -s 200.81.118.148/30 -j ACCEPT
-A INPUT -s 200.81.118.152/29 -j ACCEPT
-A INPUT -s 200.81.118.164/30 -j ACCEPT
-A INPUT -s 200.81.118.168/29 -j ACCEPT
-A INPUT -s 200.81.118.176/30 -j ACCEPT
-A INPUT -s 200.81.118.212/30 -j ACCEPT
-A INPUT -s 200.81.119.8/29 -j ACCEPT
-A INPUT -s 200.81.119.24/29 -j ACCEPT
-A INPUT -s 200.81.119.104/29 -j ACCEPT
-A INPUT -s 200.81.119.200/29 -j ACCEPT
-A INPUT -s 200.81.119.216/29 -j ACCEPT
-A INPUT -s 200.81.120.0/21 -j ACCEPT
-A INPUT -s 200.81.128.0/20 -j ACCEPT
-A INPUT -s 200.81.152.0/21 -j ACCEPT
-A INPUT -s 200.81.160.0/19 -j ACCEPT
-A INPUT -s 200.81.192.0/18 -j ACCEPT
-A INPUT -s 200.82.0.0/17 -j ACCEPT
-A INPUT -s 200.85.88.0/21 -j ACCEPT
-A INPUT -s 200.85.96.0/19 -j ACCEPT
-A INPUT -s 200.85.152.0/22 -j ACCEPT
-A INPUT -s 200.85.156.0/23 -j ACCEPT
-A INPUT -s 200.85.158.0/24 -j ACCEPT
-A INPUT -s 200.85.176.0/20 -j ACCEPT
-A INPUT -s 200.89.128.0/18 -j ACCEPT
-A INPUT -s 200.91.32.0/21 -j ACCEPT
-A INPUT -s 200.91.48.0/20 -j ACCEPT
-A INPUT -s 200.105.0.0/22 -j ACCEPT
-A INPUT -s 200.105.4.0/23 -j ACCEPT
-A INPUT -s 200.105.7.0/24 -j ACCEPT
-A INPUT -s 200.105.8.0/21 -j ACCEPT
-A INPUT -s 200.105.16.0/20 -j ACCEPT
-A INPUT -s 200.105.32.0/20 -j ACCEPT
-A INPUT -s 200.105.48.0/23 -j ACCEPT
-A INPUT -s 200.105.51.0/24 -j ACCEPT
-A INPUT -s 200.105.53.0/24 -j ACCEPT
-A INPUT -s 200.105.54.0/23 -j ACCEPT
-A INPUT -s 200.105.56.0/21 -j ACCEPT
-A INPUT -s 200.105.64.0/19 -j ACCEPT
-A INPUT -s 200.105.104.0/21 -j ACCEPT
-A INPUT -s 200.105.120.0/21 -j ACCEPT
-A INPUT -s 200.106.240.0/22 -j ACCEPT
-A INPUT -s 200.106.248.0/21 -j ACCEPT
-A INPUT -s 200.107.81.0/24 -j ACCEPT
-A INPUT -s 200.107.88.0/21 -j ACCEPT
-A INPUT -s 200.107.96.0/20 -j ACCEPT
-A INPUT -s 200.107.200.0/21 -j ACCEPT
-A INPUT -s 200.107.224.0/21 -j ACCEPT
-A INPUT -s 200.108.64.0/19 -j ACCEPT
-A INPUT -s 200.108.112.0/21 -j ACCEPT
-A INPUT -s 200.108.120.0/27 -j ACCEPT
-A INPUT -s 200.108.120.40/29 -j ACCEPT
-A INPUT -s 200.108.120.80/28 -j ACCEPT
-A INPUT -s 200.108.120.208/28 -j ACCEPT
-A INPUT -s 200.108.120.224/27 -j ACCEPT
-A INPUT -s 200.108.121.0/28 -j ACCEPT
-A INPUT -s 200.108.122.0/27 -j ACCEPT
-A INPUT -s 200.108.123.112/28 -j ACCEPT
-A INPUT -s 200.108.123.128/27 -j ACCEPT
-A INPUT -s 200.108.123.176/28 -j ACCEPT
-A INPUT -s 200.108.123.192/26 -j ACCEPT
-A INPUT -s 200.108.124.0/26 -j ACCEPT
-A INPUT -s 200.108.124.64/28 -j ACCEPT
-A INPUT -s 200.108.125.144/28 -j ACCEPT
-A INPUT -s 200.108.125.192/28 -j ACCEPT
-A INPUT -s 200.108.126.0/24 -j ACCEPT
-A INPUT -s 200.108.127.0/27 -j ACCEPT
-A INPUT -s 200.108.127.32/28 -j ACCEPT
-A INPUT -s 200.108.127.176/28 -j ACCEPT
-A INPUT -s 200.108.127.240/28 -j ACCEPT
-A INPUT -s 200.108.144.0/20 -j ACCEPT
-A INPUT -s 200.110.128.0/21 -j ACCEPT
-A INPUT -s 200.110.136.0/22 -j ACCEPT
-A INPUT -s 200.110.140.0/23 -j ACCEPT
-A INPUT -s 200.110.142.0/24 -j ACCEPT
-A INPUT -s 200.110.145.0/27 -j ACCEPT
-A INPUT -s 200.110.146.0/27 -j ACCEPT
-A INPUT -s 200.110.146.64/28 -j ACCEPT
-A INPUT -s 200.110.146.80/29 -j ACCEPT
-A INPUT -s 200.110.147.224/27 -j ACCEPT
-A INPUT -s 200.110.149.64/26 -j ACCEPT
-A INPUT -s 200.110.149.224/27 -j ACCEPT
-A INPUT -s 200.110.156.0/24 -j ACCEPT
-A INPUT -s 200.110.159.0/24 -j ACCEPT
-A INPUT -s 200.110.160.0/21 -j ACCEPT
-A INPUT -s 200.110.176.0/20 -j ACCEPT
-A INPUT -s 200.110.192.0/21 -j ACCEPT
-A INPUT -s 200.110.208.0/20 -j ACCEPT
-A INPUT -s 200.110.224.0/21 -j ACCEPT
-A INPUT -s 200.112.128.0/18 -j ACCEPT
-A INPUT -s 200.114.80.0/21 -j ACCEPT
-A INPUT -s 200.114.96.0/20 -j ACCEPT
-A INPUT -s 200.114.120.0/21 -j ACCEPT
-A INPUT -s 200.114.128.0/17 -j ACCEPT
-A INPUT -s 200.115.0.0/20 -j ACCEPT
-A INPUT -s 200.115.24.0/21 -j ACCEPT
-A INPUT -s 200.115.48.0/20 -j ACCEPT
-A INPUT -s 200.115.80.0/20 -j ACCEPT
-A INPUT -s 200.115.185.0/24 -j ACCEPT
-A INPUT -s 200.115.186.0/23 -j ACCEPT
-A INPUT -s 200.115.192.0/18 -j ACCEPT
-A INPUT -s 200.117.0.0/16 -j ACCEPT
-A INPUT -s 200.122.0.0/17 -j ACCEPT
-A INPUT -s 200.123.32.0/19 -j ACCEPT
-A INPUT -s 200.123.64.0/18 -j ACCEPT
-A INPUT -s 200.123.128.0/18 -j ACCEPT
-A INPUT -s 200.123.192.0/24 -j ACCEPT
-A INPUT -s 200.123.193.0/26 -j ACCEPT
-A INPUT -s 200.123.193.64/28 -j ACCEPT
-A INPUT -s 200.123.193.128/25 -j ACCEPT
-A INPUT -s 200.123.194.0/25 -j ACCEPT
-A INPUT -s 200.123.195.0/25 -j ACCEPT
-A INPUT -s 200.123.196.127/32 -j ACCEPT
-A INPUT -s 200.123.196.128/25 -j ACCEPT
-A INPUT -s 200.123.197.0/27 -j ACCEPT
-A INPUT -s 200.123.197.64/26 -j ACCEPT
-A INPUT -s 200.123.198.0/25 -j ACCEPT
-A INPUT -s 200.123.199.0/24 -j ACCEPT
-A INPUT -s 200.123.206.0/23 -j ACCEPT
-A INPUT -s 200.123.216.0/21 -j ACCEPT
-A INPUT -s 200.123.240.0/20 -j ACCEPT
-A INPUT -s 200.124.96.0/20 -j ACCEPT
-A INPUT -s 200.124.112.0/21 -j ACCEPT
-A INPUT -s 200.124.122.0/23 -j ACCEPT
-A INPUT -s 200.124.126.0/24 -j ACCEPT
-A INPUT -s 200.124.176.0/21 -j ACCEPT
-A INPUT -s 200.124.184.0/22 -j ACCEPT
-A INPUT -s 200.125.64.0/18 -j ACCEPT
-A INPUT -s 200.126.62.0/23 -j ACCEPT
-A INPUT -s 200.126.128.0/17 -j ACCEPT
-A INPUT -s 200.127.0.0/16 -j ACCEPT
-A INPUT -s 200.186.35.195/32 -j ACCEPT
-A INPUT -s 200.186.35.196/30 -j ACCEPT
-A INPUT -s 200.186.181.43/32 -j ACCEPT
-A INPUT -s 200.186.181.44/30 -j ACCEPT
-A INPUT -s 200.186.181.48/28 -j ACCEPT
-A INPUT -s 200.186.181.64/26 -j ACCEPT
-A INPUT -s 200.186.181.128/25 -j ACCEPT
-A INPUT -s 200.225.100.0/22 -j ACCEPT
-A INPUT -s 200.229.148.0/22 -j ACCEPT
-A INPUT -s 200.229.252.0/22 -j ACCEPT
-A INPUT -s 201.131.47.0/24 -j ACCEPT
-A INPUT -s 201.131.74.0/23 -j ACCEPT
-A INPUT -s 201.139.80.0/22 -j ACCEPT
-A INPUT -s 201.140.224.0/22 -j ACCEPT
-A INPUT -s 201.158.120.0/21 -j ACCEPT
-A INPUT -s 201.159.8.0/21 -j ACCEPT
-A INPUT -s 201.159.56.0/21 -j ACCEPT
-A INPUT -s 201.159.216.0/22 -j ACCEPT
-A INPUT -s 201.176.0.0/14 -j ACCEPT
-A INPUT -s 201.180.0.0/15 -j ACCEPT
-A INPUT -s 201.212.0.0/15 -j ACCEPT
-A INPUT -s 201.216.192.0/18 -j ACCEPT
-A INPUT -s 201.217.224.0/20 -j ACCEPT
-A INPUT -s 201.217.244.0/22 -j ACCEPT
-A INPUT -s 201.219.64.0/19 -j ACCEPT
-A INPUT -s 201.219.96.0/20 -j ACCEPT
-A INPUT -s 201.219.160.0/19 -j ACCEPT
-A INPUT -s 201.220.16.0/21 -j ACCEPT
-A INPUT -s 201.220.24.0/24 -j ACCEPT
-A INPUT -s 201.220.28.0/24 -j ACCEPT
-A INPUT -s 201.220.144.0/20 -j ACCEPT
-A INPUT -s 201.220.160.0/19 -j ACCEPT
-A INPUT -s 201.221.96.0/20 -j ACCEPT
-A INPUT -s 201.221.120.0/24 -j ACCEPT
-A INPUT -s 201.222.16.0/22 -j ACCEPT
-A INPUT -s 201.222.56.0/22 -j ACCEPT
-A INPUT -s 201.231.0.0/16 -j ACCEPT
-A INPUT -s 201.234.0.0/21 -j ACCEPT
-A INPUT -s 201.234.8.0/26 -j ACCEPT
-A INPUT -s 201.234.8.64/27 -j ACCEPT
-A INPUT -s 201.234.8.96/28 -j ACCEPT
-A INPUT -s 201.234.8.128/27 -j ACCEPT
-A INPUT -s 201.234.8.176/28 -j ACCEPT
-A INPUT -s 201.234.8.192/26 -j ACCEPT
-A INPUT -s 201.234.9.0/24 -j ACCEPT
-A INPUT -s 201.234.10.0/23 -j ACCEPT
-A INPUT -s 201.234.12.0/24 -j ACCEPT
-A INPUT -s 201.234.13.0/28 -j ACCEPT
-A INPUT -s 201.234.13.32/27 -j ACCEPT
-A INPUT -s 201.234.13.64/26 -j ACCEPT
-A INPUT -s 201.234.13.128/25 -j ACCEPT
-A INPUT -s 201.234.14.0/23 -j ACCEPT
-A INPUT -s 201.234.16.0/26 -j ACCEPT
-A INPUT -s 201.234.16.128/25 -j ACCEPT
-A INPUT -s 201.234.17.0/25 -j ACCEPT
-A INPUT -s 201.234.17.128/28 -j ACCEPT
-A INPUT -s 201.234.17.160/27 -j ACCEPT
-A INPUT -s 201.234.17.192/26 -j ACCEPT
-A INPUT -s 201.234.18.0/23 -j ACCEPT
-A INPUT -s 201.234.20.0/25 -j ACCEPT
-A INPUT -s 201.234.21.0/24 -j ACCEPT
-A INPUT -s 201.234.22.0/27 -j ACCEPT
-A INPUT -s 201.234.22.48/28 -j ACCEPT
-A INPUT -s 201.234.22.64/26 -j ACCEPT
-A INPUT -s 201.234.22.128/27 -j ACCEPT
-A INPUT -s 201.234.22.160/28 -j ACCEPT
-A INPUT -s 201.234.22.208/28 -j ACCEPT
-A INPUT -s 201.234.23.0/24 -j ACCEPT
-A INPUT -s 201.234.24.0/23 -j ACCEPT
-A INPUT -s 201.234.26.0/27 -j ACCEPT
-A INPUT -s 201.234.26.64/27 -j ACCEPT
-A INPUT -s 201.234.26.96/28 -j ACCEPT
-A INPUT -s 201.234.26.128/26 -j ACCEPT
-A INPUT -s 201.234.26.192/27 -j ACCEPT
-A INPUT -s 201.234.26.240/28 -j ACCEPT
-A INPUT -s 201.234.27.0/27 -j ACCEPT
-A INPUT -s 201.234.27.64/27 -j ACCEPT
-A INPUT -s 201.234.27.128/28 -j ACCEPT
-A INPUT -s 201.234.27.160/27 -j ACCEPT
-A INPUT -s 201.234.27.192/26 -j ACCEPT
-A INPUT -s 201.234.28.0/24 -j ACCEPT
-A INPUT -s 201.234.29.48/28 -j ACCEPT
-A INPUT -s 201.234.29.128/25 -j ACCEPT
-A INPUT -s 201.234.30.0/26 -j ACCEPT
-A INPUT -s 201.234.30.96/27 -j ACCEPT
-A INPUT -s 201.234.30.128/25 -j ACCEPT
-A INPUT -s 201.234.31.128/25 -j ACCEPT
-A INPUT -s 201.234.32.0/22 -j ACCEPT
-A INPUT -s 201.234.36.8/32 -j ACCEPT
-A INPUT -s 201.234.36.16/28 -j ACCEPT
-A INPUT -s 201.234.36.32/28 -j ACCEPT
-A INPUT -s 201.234.36.64/26 -j ACCEPT
-A INPUT -s 201.234.36.144/28 -j ACCEPT
-A INPUT -s 201.234.36.160/27 -j ACCEPT
-A INPUT -s 201.234.36.192/28 -j ACCEPT
-A INPUT -s 201.234.36.224/27 -j ACCEPT
-A INPUT -s 201.234.37.0/26 -j ACCEPT
-A INPUT -s 201.234.37.96/27 -j ACCEPT
-A INPUT -s 201.234.37.128/28 -j ACCEPT
-A INPUT -s 201.234.37.176/28 -j ACCEPT
-A INPUT -s 201.234.37.192/26 -j ACCEPT
-A INPUT -s 201.234.39.0/24 -j ACCEPT
-A INPUT -s 201.234.40.0/24 -j ACCEPT
-A INPUT -s 201.234.41.0/26 -j ACCEPT
-A INPUT -s 201.234.41.64/27 -j ACCEPT
-A INPUT -s 201.234.41.96/28 -j ACCEPT
-A INPUT -s 201.234.41.128/26 -j ACCEPT
-A INPUT -s 201.234.41.192/27 -j ACCEPT
-A INPUT -s 201.234.41.224/28 -j ACCEPT
-A INPUT -s 201.234.41.240/30 -j ACCEPT
-A INPUT -s 201.234.42.0/23 -j ACCEPT
-A INPUT -s 201.234.44.0/22 -j ACCEPT
-A INPUT -s 201.234.88.0/22 -j ACCEPT
-A INPUT -s 201.234.92.240/28 -j ACCEPT
-A INPUT -s 201.234.93.128/25 -j ACCEPT
-A INPUT -s 201.234.94.32/27 -j ACCEPT
-A INPUT -s 201.234.94.80/28 -j ACCEPT
-A INPUT -s 201.234.94.96/27 -j ACCEPT
-A INPUT -s 201.234.94.128/28 -j ACCEPT
-A INPUT -s 201.234.94.160/27 -j ACCEPT
-A INPUT -s 201.234.94.192/27 -j ACCEPT
-A INPUT -s 201.234.94.224/28 -j ACCEPT
-A INPUT -s 201.234.95.0/25 -j ACCEPT
-A INPUT -s 201.234.95.128/28 -j ACCEPT
-A INPUT -s 201.234.95.160/27 -j ACCEPT
-A INPUT -s 201.234.95.192/26 -j ACCEPT
-A INPUT -s 201.234.96.0/22 -j ACCEPT
-A INPUT -s 201.234.100.128/25 -j ACCEPT
-A INPUT -s 201.234.101.0/24 -j ACCEPT
-A INPUT -s 201.234.102.0/24 -j ACCEPT
-A INPUT -s 201.234.104.0/24 -j ACCEPT
-A INPUT -s 201.234.105.0/29 -j ACCEPT
-A INPUT -s 201.234.105.8/30 -j ACCEPT
-A INPUT -s 201.234.105.24/29 -j ACCEPT
-A INPUT -s 201.234.105.32/27 -j ACCEPT
-A INPUT -s 201.234.105.68/30 -j ACCEPT
-A INPUT -s 201.234.105.72/29 -j ACCEPT
-A INPUT -s 201.234.105.80/28 -j ACCEPT
-A INPUT -s 201.234.105.96/29 -j ACCEPT
-A INPUT -s 201.234.105.112/28 -j ACCEPT
-A INPUT -s 201.234.105.128/25 -j ACCEPT
-A INPUT -s 201.234.106.0/26 -j ACCEPT
-A INPUT -s 201.234.106.64/27 -j ACCEPT
-A INPUT -s 201.234.106.96/28 -j ACCEPT
-A INPUT -s 201.234.106.128/26 -j ACCEPT
-A INPUT -s 201.234.107.0/29 -j ACCEPT
-A INPUT -s 201.234.107.32/27 -j ACCEPT
-A INPUT -s 201.234.107.80/28 -j ACCEPT
-A INPUT -s 201.234.107.96/27 -j ACCEPT
-A INPUT -s 201.234.107.128/26 -j ACCEPT
-A INPUT -s 201.234.107.192/27 -j ACCEPT
-A INPUT -s 201.234.107.240/28 -j ACCEPT
-A INPUT -s 201.234.108.0/22 -j ACCEPT
-A INPUT -s 201.234.128.0/28 -j ACCEPT
-A INPUT -s 201.234.128.20/30 -j ACCEPT
-A INPUT -s 201.234.128.24/30 -j ACCEPT
-A INPUT -s 201.234.128.32/27 -j ACCEPT
-A INPUT -s 201.234.128.64/28 -j ACCEPT
-A INPUT -s 201.234.128.88/30 -j ACCEPT
-A INPUT -s 201.234.128.96/28 -j ACCEPT
-A INPUT -s 201.234.128.120/29 -j ACCEPT
-A INPUT -s 201.234.128.136/30 -j ACCEPT
-A INPUT -s 201.234.128.144/30 -j ACCEPT
-A INPUT -s 201.234.128.152/29 -j ACCEPT
-A INPUT -s 201.234.128.160/30 -j ACCEPT
-A INPUT -s 201.234.128.168/29 -j ACCEPT
-A INPUT -s 201.234.128.176/29 -j ACCEPT
-A INPUT -s 201.234.128.192/27 -j ACCEPT
-A INPUT -s 201.234.128.232/30 -j ACCEPT
-A INPUT -s 201.234.128.240/28 -j ACCEPT
-A INPUT -s 201.234.129.0/29 -j ACCEPT
-A INPUT -s 201.234.129.16/28 -j ACCEPT
-A INPUT -s 201.234.129.40/29 -j ACCEPT
-A INPUT -s 201.234.129.48/28 -j ACCEPT
-A INPUT -s 201.234.129.72/29 -j ACCEPT
-A INPUT -s 201.234.129.80/28 -j ACCEPT
-A INPUT -s 201.234.129.96/29 -j ACCEPT
-A INPUT -s 201.234.129.112/28 -j ACCEPT
-A INPUT -s 201.234.129.136/29 -j ACCEPT
-A INPUT -s 201.234.129.144/28 -j ACCEPT
-A INPUT -s 201.234.129.160/27 -j ACCEPT
-A INPUT -s 201.234.129.192/26 -j ACCEPT
-A INPUT -s 201.234.130.8/29 -j ACCEPT
-A INPUT -s 201.234.130.16/28 -j ACCEPT
-A INPUT -s 201.234.130.32/27 -j ACCEPT
-A INPUT -s 201.234.130.64/28 -j ACCEPT
-A INPUT -s 201.234.130.88/29 -j ACCEPT
-A INPUT -s 201.234.130.96/29 -j ACCEPT
-A INPUT -s 201.234.130.120/29 -j ACCEPT
-A INPUT -s 201.234.130.128/25 -j ACCEPT
-A INPUT -s 201.234.131.0/27 -j ACCEPT
-A INPUT -s 201.234.131.64/26 -j ACCEPT
-A INPUT -s 201.234.131.128/27 -j ACCEPT
-A INPUT -s 201.234.131.192/26 -j ACCEPT
-A INPUT -s 201.234.132.0/22 -j ACCEPT
-A INPUT -s 201.234.136.0/24 -j ACCEPT
-A INPUT -s 201.234.137.128/26 -j ACCEPT
-A INPUT -s 201.234.137.192/28 -j ACCEPT
-A INPUT -s 201.234.137.232/29 -j ACCEPT
-A INPUT -s 201.234.137.240/28 -j ACCEPT
-A INPUT -s 201.234.138.0/26 -j ACCEPT
-A INPUT -s 201.234.138.72/29 -j ACCEPT
-A INPUT -s 201.234.138.80/28 -j ACCEPT
-A INPUT -s 201.234.138.104/29 -j ACCEPT
-A INPUT -s 201.234.138.128/27 -j ACCEPT
-A INPUT -s 201.234.138.160/28 -j ACCEPT
-A INPUT -s 201.234.138.184/29 -j ACCEPT
-A INPUT -s 201.234.138.192/29 -j ACCEPT
-A INPUT -s 201.234.138.224/28 -j ACCEPT
-A INPUT -s 201.234.138.240/29 -j ACCEPT
-A INPUT -s 201.234.139.4/30 -j ACCEPT
-A INPUT -s 201.234.139.8/29 -j ACCEPT
-A INPUT -s 201.234.139.16/28 -j ACCEPT
-A INPUT -s 201.234.139.32/27 -j ACCEPT
-A INPUT -s 201.234.139.64/26 -j ACCEPT
-A INPUT -s 201.234.139.128/25 -j ACCEPT
-A INPUT -s 201.234.140.0/24 -j ACCEPT
-A INPUT -s 201.234.143.0/24 -j ACCEPT
-A INPUT -s 201.234.144.0/29 -j ACCEPT
-A INPUT -s 201.234.144.17/32 -j ACCEPT
-A INPUT -s 201.234.144.21/32 -j ACCEPT
-A INPUT -s 201.234.144.30/32 -j ACCEPT
-A INPUT -s 201.234.144.32/28 -j ACCEPT
-A INPUT -s 201.234.144.52/31 -j ACCEPT
-A INPUT -s 201.234.144.55/32 -j ACCEPT
-A INPUT -s 201.234.144.56/29 -j ACCEPT
-A INPUT -s 201.234.144.64/30 -j ACCEPT
-A INPUT -s 201.234.144.76/30 -j ACCEPT
-A INPUT -s 201.234.144.80/28 -j ACCEPT
-A INPUT -s 201.234.144.96/27 -j ACCEPT
-A INPUT -s 201.234.144.128/27 -j ACCEPT
-A INPUT -s 201.234.144.160/28 -j ACCEPT
-A INPUT -s 201.234.144.176/29 -j ACCEPT
-A INPUT -s 201.234.144.189/32 -j ACCEPT
-A INPUT -s 201.234.144.192/28 -j ACCEPT
-A INPUT -s 201.234.144.208/29 -j ACCEPT
-A INPUT -s 201.234.144.216/30 -j ACCEPT
-A INPUT -s 201.234.144.224/30 -j ACCEPT
-A INPUT -s 201.234.144.233/32 -j ACCEPT
-A INPUT -s 201.234.144.240/28 -j ACCEPT
-A INPUT -s 201.234.145.8/29 -j ACCEPT
-A INPUT -s 201.234.145.24/29 -j ACCEPT
-A INPUT -s 201.234.145.40/29 -j ACCEPT
-A INPUT -s 201.234.145.48/28 -j ACCEPT
-A INPUT -s 201.234.145.64/26 -j ACCEPT
-A INPUT -s 201.234.145.128/27 -j ACCEPT
-A INPUT -s 201.234.145.160/29 -j ACCEPT
-A INPUT -s 201.234.145.176/28 -j ACCEPT
-A INPUT -s 201.234.145.192/28 -j ACCEPT
-A INPUT -s 201.234.145.224/28 -j ACCEPT
-A INPUT -s 201.234.145.240/29 -j ACCEPT
-A INPUT -s 201.234.146.0/26 -j ACCEPT
-A INPUT -s 201.234.146.80/28 -j ACCEPT
-A INPUT -s 201.234.146.96/27 -j ACCEPT
-A INPUT -s 201.234.146.128/27 -j ACCEPT
-A INPUT -s 186.96.9.0/24 -j ACCEPT
-A INPUT -s 186.96.10.0/24 -j ACCEPT
-A INPUT -s 186.96.11.128/25 -j ACCEPT
-A INPUT -s 186.96.12.0/24 -j ACCEPT
-A INPUT -s 186.96.13.0/25 -j ACCEPT
-A INPUT -s 186.96.14.0/23 -j ACCEPT
-A INPUT -s 186.96.16.0/25 -j ACCEPT
-A INPUT -s 186.96.17.0/24 -j ACCEPT
-A INPUT -s 186.96.18.0/24 -j ACCEPT
-A INPUT -s 186.96.19.128/25 -j ACCEPT
-A INPUT -s 186.96.20.0/24 -j ACCEPT
-A INPUT -s 186.96.21.128/25 -j ACCEPT
-A INPUT -s 186.96.22.0/23 -j ACCEPT
-A INPUT -s 186.96.24.0/23 -j ACCEPT
-A INPUT -s 186.96.26.0/25 -j ACCEPT
-A INPUT -s 186.96.27.0/25 -j ACCEPT
-A INPUT -s 186.96.28.0/23 -j ACCEPT
-A INPUT -s 186.96.30.128/25 -j ACCEPT
-A INPUT -s 186.96.31.0/24 -j ACCEPT
-A INPUT -s 186.96.32.0/25 -j ACCEPT
-A INPUT -s 186.96.33.128/25 -j ACCEPT
-A INPUT -s 186.96.34.0/24 -j ACCEPT
-A INPUT -s 186.96.35.128/25 -j ACCEPT
-A INPUT -s 186.96.36.0/22 -j ACCEPT
-A INPUT -s 186.96.40.0/25 -j ACCEPT
-A INPUT -s 186.96.41.0/24 -j ACCEPT
-A INPUT -s 186.96.42.0/23 -j ACCEPT
-A INPUT -s 186.96.44.0/22 -j ACCEPT
-A INPUT -s 186.96.48.0/20 -j ACCEPT
-A INPUT -s 186.96.128.0/18 -j ACCEPT
-A INPUT -s 186.96.192.0/19 -j ACCEPT
-A INPUT -s 186.96.224.0/20 -j ACCEPT
-A INPUT -s 186.96.240.0/21 -j ACCEPT
-A INPUT -s 186.96.248.0/22 -j ACCEPT
-A INPUT -s 186.100.0.0/16 -j ACCEPT
-A INPUT -s 186.108.0.0/14 -j ACCEPT
-A INPUT -s 186.121.128.0/18 -j ACCEPT
-A INPUT -s 186.122.0.0/15 -j ACCEPT
-A INPUT -s 186.124.0.0/17 -j ACCEPT
-A INPUT -s 186.124.128.0/18 -j ACCEPT
-A INPUT -s 186.124.192.0/20 -j ACCEPT
-A INPUT -s 186.124.208.0/21 -j ACCEPT
-A INPUT -s 186.124.216.0/22 -j ACCEPT
-A INPUT -s 186.124.220.0/26 -j ACCEPT
-A INPUT -s 186.124.220.64/27 -j ACCEPT
-A INPUT -s 186.124.220.96/29 -j ACCEPT
-A INPUT -s 186.124.220.112/28 -j ACCEPT
-A INPUT -s 186.124.220.128/25 -j ACCEPT
-A INPUT -s 186.124.221.0/24 -j ACCEPT
-A INPUT -s 186.124.222.0/23 -j ACCEPT
-A INPUT -s 186.124.224.0/19 -j ACCEPT
-A INPUT -s 186.125.0.0/17 -j ACCEPT
-A INPUT -s 186.125.128.0/19 -j ACCEPT
-A INPUT -s 186.125.160.0/20 -j ACCEPT
-A INPUT -s 186.125.176.0/21 -j ACCEPT
-A INPUT -s 186.125.184.0/22 -j ACCEPT
-A INPUT -s 186.125.188.0/23 -j ACCEPT
-A INPUT -s 186.125.190.0/25 -j ACCEPT
-A INPUT -s 186.125.190.128/27 -j ACCEPT
-A INPUT -s 186.125.190.168/29 -j ACCEPT
-A INPUT -s 186.125.190.176/28 -j ACCEPT
-A INPUT -s 186.125.190.192/26 -j ACCEPT
-A INPUT -s 186.125.191.0/24 -j ACCEPT
-A INPUT -s 186.125.192.0/20 -j ACCEPT
-A INPUT -s 186.125.208.0/23 -j ACCEPT
-A INPUT -s 186.125.210.0/25 -j ACCEPT
-A INPUT -s 186.125.210.128/26 -j ACCEPT
-A INPUT -s 186.125.210.192/27 -j ACCEPT
-A INPUT -s 186.125.210.224/29 -j ACCEPT
-A INPUT -s 186.125.210.240/28 -j ACCEPT
-A INPUT -s 186.125.211.0/24 -j ACCEPT
-A INPUT -s 186.125.212.0/22 -j ACCEPT
-A INPUT -s 186.125.216.0/21 -j ACCEPT
-A INPUT -s 186.125.224.0/19 -j ACCEPT
-A INPUT -s 186.126.0.0/15 -j ACCEPT
-A INPUT -s 186.128.0.0/12 -j ACCEPT
-A INPUT -s 186.148.64.0/20 -j ACCEPT
-A INPUT -s 186.148.80.0/21 -j ACCEPT
-A INPUT -s 186.148.112.0/20 -j ACCEPT
-A INPUT -s 186.148.128.0/19 -j ACCEPT
-A INPUT -s 186.148.200.0/21 -j ACCEPT
-A INPUT -s 186.148.224.0/22 -j ACCEPT
-A INPUT -s 186.148.229.0/24 -j ACCEPT
-A INPUT -s 186.148.231.255/32 -j ACCEPT
-A INPUT -s 186.148.232.0/21 -j ACCEPT
-A INPUT -s 186.148.240.0/20 -j ACCEPT
-A INPUT -s 186.152.0.0/15 -j ACCEPT
-A INPUT -s 186.157.0.0/16 -j ACCEPT
-A INPUT -s 186.158.0.0/16 -j ACCEPT
-A INPUT -s 186.159.120.0/21 -j ACCEPT
-A INPUT -s 186.177.192.0/18 -j ACCEPT
-A INPUT -s 186.182.0.0/16 -j ACCEPT
-A INPUT -s 186.183.0.0/17 -j ACCEPT
-A INPUT -s 186.189.0.0/16 -j ACCEPT
-A INPUT -s 186.190.128.0/18 -j ACCEPT
-A INPUT -s 186.190.192.0/20 -j ACCEPT
-A INPUT -s 186.191.0.0/16 -j ACCEPT
-A INPUT -s 186.250.152.0/22 -j ACCEPT
-A INPUT -s 190.0.96.0/19 -j ACCEPT
-A INPUT -s 190.0.160.0/19 -j ACCEPT
-A INPUT -s 190.0.232.0/21 -j ACCEPT
-A INPUT -s 190.1.0.0/18 -j ACCEPT
-A INPUT -s 190.1.96.0/19 -j ACCEPT
-A INPUT -s 190.2.0.0/18 -j ACCEPT
-A INPUT -s 190.2.80.0/21 -j ACCEPT
-A INPUT -s 190.2.96.0/19 -j ACCEPT
-A INPUT -s 190.2.240.0/20 -j ACCEPT
-A INPUT -s 190.3.0.0/17 -j ACCEPT
-A INPUT -s 190.3.128.0/19 -j ACCEPT
-A INPUT -s 190.4.112.0/20 -j ACCEPT
-A INPUT -s 190.5.0.0/19 -j ACCEPT
-A INPUT -s 190.5.160.0/19 -j ACCEPT
-A INPUT -s 190.5.216.0/21 -j ACCEPT
-A INPUT -s 190.6.96.0/20 -j ACCEPT
-A INPUT -s 190.6.112.0/21 -j ACCEPT
-A INPUT -s 190.6.208.0/20 -j ACCEPT
-A INPUT -s 190.6.240.0/20 -j ACCEPT
-A INPUT -s 190.7.0.0/20 -j ACCEPT
-A INPUT -s 190.7.16.0/21 -j ACCEPT
-A INPUT -s 190.7.24.0/22 -j ACCEPT
-A INPUT -s 190.7.28.0/25 -j ACCEPT
-A INPUT -s 190.7.28.128/26 -j ACCEPT
-A INPUT -s 190.7.28.192/28 -j ACCEPT
-A INPUT -s 190.7.28.224/27 -j ACCEPT
-A INPUT -s 190.7.29.0/24 -j ACCEPT
-A INPUT -s 190.7.30.0/23 -j ACCEPT
-A INPUT -s 190.7.32.0/20 -j ACCEPT
-A INPUT -s 190.7.48.0/21 -j ACCEPT
-A INPUT -s 190.7.56.0/23 -j ACCEPT
-A INPUT -s 190.7.58.0/26 -j ACCEPT
-A INPUT -s 190.7.58.64/27 -j ACCEPT
-A INPUT -s 190.7.58.96/28 -j ACCEPT
-A INPUT -s 190.7.58.112/31 -j ACCEPT
-A INPUT -s 190.7.58.114/32 -j ACCEPT
-A INPUT -s 190.7.58.116/32 -j ACCEPT
-A INPUT -s 190.7.58.118/31 -j ACCEPT
-A INPUT -s 190.7.58.120/29 -j ACCEPT
-A INPUT -s 190.7.58.128/25 -j ACCEPT
-A INPUT -s 190.7.59.0/24 -j ACCEPT
-A INPUT -s 190.7.60.0/22 -j ACCEPT
-A INPUT -s 190.7.224.0/19 -j ACCEPT
-A INPUT -s 190.8.0.0/19 -j ACCEPT
-A INPUT -s 190.8.48.0/20 -j ACCEPT
-A INPUT -s 190.8.184.0/21 -j ACCEPT
-A INPUT -s 190.9.0.0/19 -j ACCEPT
-A INPUT -s 190.11.32.0/19 -j ACCEPT
-A INPUT -s 190.11.96.0/19 -j ACCEPT
-A INPUT -s 190.11.128.0/18 -j ACCEPT
-A INPUT -s 190.11.192.0/20 -j ACCEPT
-A INPUT -s 190.12.96.0/19 -j ACCEPT
-A INPUT -s 190.12.160.0/19 -j ACCEPT
-A INPUT -s 190.12.192.0/20 -j ACCEPT
-A INPUT -s 190.12.208.0/24 -j ACCEPT
-A INPUT -s 190.12.209.0/25 -j ACCEPT
-A INPUT -s 190.12.210.0/23 -j ACCEPT
-A INPUT -s 190.12.212.0/24 -j ACCEPT
-A INPUT -s 190.12.213.0/25 -j ACCEPT
-A INPUT -s 190.12.214.0/23 -j ACCEPT
-A INPUT -s 190.12.216.0/23 -j ACCEPT
-A INPUT -s 190.12.218.0/25 -j ACCEPT
-A INPUT -s 190.12.219.0/24 -j ACCEPT
-A INPUT -s 190.12.220.0/22 -j ACCEPT
-A INPUT -s 190.12.224.0/23 -j ACCEPT
-A INPUT -s 190.12.227.0/24 -j ACCEPT
-A INPUT -s 190.12.228.128/25 -j ACCEPT
-A INPUT -s 190.12.229.128/25 -j ACCEPT
-A INPUT -s 190.12.230.0/23 -j ACCEPT
-A INPUT -s 190.12.232.0/24 -j ACCEPT
-A INPUT -s 190.12.233.128/25 -j ACCEPT
-A INPUT -s 190.12.234.0/24 -j ACCEPT
-A INPUT -s 190.12.235.0/25 -j ACCEPT
-A INPUT -s 190.12.236.0/24 -j ACCEPT
-A INPUT -s 190.12.237.0/25 -j ACCEPT
-A INPUT -s 190.12.238.0/23 -j ACCEPT
-A INPUT -s 190.12.240.0/20 -j ACCEPT
-A INPUT -s 190.13.88.0/21 -j ACCEPT
-A INPUT -s 190.13.112.0/22 -j ACCEPT
-A INPUT -s 190.13.208.0/20 -j ACCEPT
-A INPUT -s 190.13.224.0/19 -j ACCEPT
-A INPUT -s 190.14.0.0/19 -j ACCEPT
-A INPUT -s 190.14.32.0/22 -j ACCEPT
-A INPUT -s 190.14.40.0/21 -j ACCEPT
-A INPUT -s 190.14.144.0/21 -j ACCEPT
-A INPUT -s 190.14.156.0/22 -j ACCEPT
-A INPUT -s 190.14.160.0/19 -j ACCEPT
-A INPUT -s 190.15.80.0/20 -j ACCEPT
-A INPUT -s 190.15.192.0/18 -j ACCEPT
-A INPUT -s 190.16.0.0/14 -j ACCEPT
-A INPUT -s 190.30.0.0/17 -j ACCEPT
-A INPUT -s 190.30.128.0/18 -j ACCEPT
-A INPUT -s 190.30.192.0/20 -j ACCEPT
-A INPUT -s 190.30.208.0/21 -j ACCEPT
-A INPUT -s 190.30.216.0/22 -j ACCEPT
-A INPUT -s 190.30.220.0/23 -j ACCEPT
-A INPUT -s 190.30.222.0/25 -j ACCEPT
-A INPUT -s 190.30.222.128/26 -j ACCEPT
-A INPUT -s 190.30.222.192/27 -j ACCEPT
-A INPUT -s 190.30.222.232/29 -j ACCEPT
-A INPUT -s 190.30.222.240/28 -j ACCEPT
-A INPUT -s 190.30.223.0/24 -j ACCEPT
-A INPUT -s 190.30.224.0/19 -j ACCEPT
-A INPUT -s 190.31.0.0/16 -j ACCEPT
-A INPUT -s 190.48.0.0/14 -j ACCEPT
-A INPUT -s 190.52.32.0/20 -j ACCEPT
-A INPUT -s 190.52.56.0/21 -j ACCEPT
-A INPUT -s 190.52.80.0/20 -j ACCEPT
-A INPUT -s 190.52.208.0/20 -j ACCEPT
-A INPUT -s 190.55.0.0/16 -j ACCEPT
-A INPUT -s 190.57.192.0/19 -j ACCEPT
-A INPUT -s 190.57.224.0/21 -j ACCEPT
-A INPUT -s 190.57.232.0/22 -j ACCEPT
-A INPUT -s 190.57.236.0/23 -j ACCEPT
-A INPUT -s 190.57.238.0/24 -j ACCEPT
-A INPUT -s 190.57.239.0/29 -j ACCEPT
-A INPUT -s 190.57.239.16/28 -j ACCEPT
-A INPUT -s 190.57.239.32/27 -j ACCEPT
-A INPUT -s 190.57.239.64/26 -j ACCEPT
-A INPUT -s 190.57.239.128/25 -j ACCEPT
-A INPUT -s 190.57.240.0/20 -j ACCEPT
-A INPUT -s 190.60.135.0/24 -j ACCEPT
-A INPUT -s 190.60.174.0/23 -j ACCEPT
-A INPUT -s 190.61.5.0/24 -j ACCEPT
-A INPUT -s 190.61.200.0/21 -j ACCEPT
-A INPUT -s 190.61.208.0/23 -j ACCEPT
-A INPUT -s 190.61.246.0/24 -j ACCEPT
-A INPUT -s 190.61.250.0/23 -j ACCEPT
-A INPUT -s 190.92.96.0/20 -j ACCEPT
-A INPUT -s 190.92.128.0/21 -j ACCEPT
-A INPUT -s 190.92.176.0/22 -j ACCEPT
-A INPUT -s 190.92.216.0/21 -j ACCEPT
-A INPUT -s 190.92.224.0/19 -j ACCEPT
-A INPUT -s 190.93.40.0/22 -j ACCEPT
-A INPUT -s 190.93.48.0/20 -j ACCEPT
-A INPUT -s 190.93.192.0/19 -j ACCEPT
-A INPUT -s 190.94.160.0/20 -j ACCEPT
-A INPUT -s 190.94.176.0/26 -j ACCEPT
-A INPUT -s 190.94.176.64/28 -j ACCEPT
-A INPUT -s 190.94.176.80/29 -j ACCEPT
-A INPUT -s 190.94.176.96/27 -j ACCEPT
-A INPUT -s 190.94.176.128/25 -j ACCEPT
-A INPUT -s 190.94.177.0/24 -j ACCEPT
-A INPUT -s 190.94.178.0/23 -j ACCEPT
-A INPUT -s 190.94.180.0/22 -j ACCEPT
-A INPUT -s 190.94.184.0/21 -j ACCEPT
-A INPUT -s 190.96.112.0/20 -j ACCEPT
-A INPUT -s 190.97.0.0/18 -j ACCEPT
-A INPUT -s 190.97.120.0/21 -j ACCEPT
-A INPUT -s 190.98.128.0/24 -j ACCEPT
-A INPUT -s 190.98.130.0/26 -j ACCEPT
-A INPUT -s 190.98.130.128/25 -j ACCEPT
-A INPUT -s 190.98.131.255/32 -j ACCEPT
-A INPUT -s 190.98.132.255/32 -j ACCEPT
-A INPUT -s 190.98.133.0/24 -j ACCEPT
-A INPUT -s 190.98.134.0/24 -j ACCEPT
-A INPUT -s 190.98.135.255/32 -j ACCEPT
-A INPUT -s 190.98.140.255/32 -j ACCEPT
-A INPUT -s 190.98.141.8/29 -j ACCEPT
-A INPUT -s 190.98.141.16/28 -j ACCEPT
-A INPUT -s 190.98.141.32/27 -j ACCEPT
-A INPUT -s 190.98.141.64/26 -j ACCEPT
-A INPUT -s 190.98.141.255/32 -j ACCEPT
-A INPUT -s 190.98.143.255/32 -j ACCEPT
-A INPUT -s 190.98.144.0/20 -j ACCEPT
-A INPUT -s 190.98.160.0/22 -j ACCEPT
-A INPUT -s 190.98.165.255/32 -j ACCEPT
-A INPUT -s 190.98.166.255/32 -j ACCEPT
-A INPUT -s 190.98.167.0/24 -j ACCEPT
-A INPUT -s 190.98.169.255/32 -j ACCEPT
-A INPUT -s 190.98.170.0/23 -j ACCEPT
-A INPUT -s 190.98.172.0/22 -j ACCEPT
-A INPUT -s 190.98.176.0/22 -j ACCEPT
-A INPUT -s 190.98.180.0/23 -j ACCEPT
-A INPUT -s 190.99.64.0/21 -j ACCEPT
-A INPUT -s 190.99.80.0/21 -j ACCEPT
-A INPUT -s 190.99.112.0/22 -j ACCEPT
-A INPUT -s 190.103.0.0/20 -j ACCEPT
-A INPUT -s 190.103.16.0/21 -j ACCEPT
-A INPUT -s 190.103.24.0/22 -j ACCEPT
-A INPUT -s 190.103.80.0/20 -j ACCEPT
-A INPUT -s 190.103.128.0/20 -j ACCEPT
-A INPUT -s 190.103.176.0/22 -j ACCEPT
-A INPUT -s 190.103.192.0/18 -j ACCEPT
-A INPUT -s 190.104.32.0/19 -j ACCEPT
-A INPUT -s 190.104.64.0/19 -j ACCEPT
-A INPUT -s 190.104.192.0/18 -j ACCEPT
-A INPUT -s 190.105.0.0/17 -j ACCEPT
-A INPUT -s 190.105.144.0/21 -j ACCEPT
-A INPUT -s 190.105.160.0/21 -j ACCEPT
-A INPUT -s 190.105.176.0/20 -j ACCEPT
-A INPUT -s 190.105.196.0/22 -j ACCEPT
-A INPUT -s 190.105.200.0/21 -j ACCEPT
-A INPUT -s 190.105.208.0/20 -j ACCEPT
-A INPUT -s 190.105.224.0/22 -j ACCEPT
-A INPUT -s 190.105.228.0/24 -j ACCEPT
-A INPUT -s 190.105.230.0/23 -j ACCEPT
-A INPUT -s 190.105.232.0/22 -j ACCEPT
-A INPUT -s 190.105.236.0/23 -j ACCEPT
-A INPUT -s 190.105.238.0/24 -j ACCEPT
-A INPUT -s 190.106.32.0/20 -j ACCEPT
-A INPUT -s 190.106.80.0/21 -j ACCEPT
-A INPUT -s 190.106.96.0/20 -j ACCEPT
-A INPUT -s 190.106.120.0/21 -j ACCEPT
-A INPUT -s 190.106.128.0/23 -j ACCEPT
-A INPUT -s 190.106.130.0/25 -j ACCEPT
-A INPUT -s 190.106.130.128/26 -j ACCEPT
-A INPUT -s 190.106.130.192/27 -j ACCEPT
-A INPUT -s 190.106.131.0/24 -j ACCEPT
-A INPUT -s 190.106.132.0/23 -j ACCEPT
-A INPUT -s 190.106.134.0/24 -j ACCEPT
-A INPUT -s 190.106.136.0/21 -j ACCEPT
-A INPUT -s 190.106.144.0/20 -j ACCEPT
-A INPUT -s 190.106.160.0/21 -j ACCEPT
-A INPUT -s 190.106.168.0/22 -j ACCEPT
-A INPUT -s 190.106.173.0/24 -j ACCEPT
-A INPUT -s 190.106.174.0/23 -j ACCEPT
-A INPUT -s 190.106.176.0/20 -j ACCEPT
-A INPUT -s 190.107.96.0/19 -j ACCEPT
-A INPUT -s 190.107.184.0/21 -j ACCEPT
-A INPUT -s 190.107.212.0/22 -j ACCEPT
-A INPUT -s 190.107.216.0/21 -j ACCEPT
-A INPUT -s 190.107.240.0/21 -j ACCEPT
-A INPUT -s 190.108.32.0/19 -j ACCEPT
-A INPUT -s 190.108.76.0/22 -j ACCEPT
-A INPUT -s 190.108.192.0/22 -j ACCEPT
-A INPUT -s 190.108.216.0/22 -j ACCEPT
-A INPUT -s 190.108.224.0/19 -j ACCEPT
-A INPUT -s 190.109.32.0/19 -j ACCEPT
-A INPUT -s 190.110.112.0/21 -j ACCEPT
-A INPUT -s 190.110.176.0/20 -j ACCEPT
-A INPUT -s 190.110.224.0/19 -j ACCEPT
-A INPUT -s 190.111.32.0/20 -j ACCEPT
-A INPUT -s 190.111.48.0/21 -j ACCEPT
-A INPUT -s 190.111.56.0/22 -j ACCEPT
-A INPUT -s 190.111.60.0/23 -j ACCEPT
-A INPUT -s 190.111.63.0/24 -j ACCEPT
-A INPUT -s 190.111.112.0/21 -j ACCEPT
-A INPUT -s 190.111.124.0/22 -j ACCEPT
-A INPUT -s 190.111.192.0/18 -j ACCEPT
-A INPUT -s 190.112.0.0/19 -j ACCEPT
-A INPUT -s 190.112.32.0/20 -j ACCEPT
-A INPUT -s 190.112.56.0/21 -j ACCEPT
-A INPUT -s 190.112.64.0/18 -j ACCEPT
-A INPUT -s 190.112.176.0/20 -j ACCEPT
-A INPUT -s 190.112.196.0/22 -j ACCEPT
-A INPUT -s 190.112.216.0/22 -j ACCEPT
-A INPUT -s 190.113.128.0/18 -j ACCEPT
-A INPUT -s 190.113.224.0/20 -j ACCEPT
-A INPUT -s 190.114.64.0/18 -j ACCEPT
-A INPUT -s 190.114.128.0/18 -j ACCEPT
-A INPUT -s 190.114.192.0/19 -j ACCEPT
-A INPUT -s 190.114.232.0/21 -j ACCEPT
-A INPUT -s 190.115.32.0/19 -j ACCEPT
-A INPUT -s 190.115.112.0/20 -j ACCEPT
-A INPUT -s 190.115.192.0/19 -j ACCEPT
-A INPUT -s 190.120.48.0/20 -j ACCEPT
-A INPUT -s 190.120.96.0/19 -j ACCEPT
-A INPUT -s 190.120.144.0/20 -j ACCEPT
-A INPUT -s 190.120.176.0/20 -j ACCEPT
-A INPUT -s 190.120.244.0/22 -j ACCEPT
-A INPUT -s 190.121.176.0/20 -j ACCEPT
-A INPUT -s 190.122.0.0/18 -j ACCEPT
-A INPUT -s 190.122.64.0/19 -j ACCEPT
-A INPUT -s 190.122.128.0/19 -j ACCEPT
-A INPUT -s 190.122.180.0/22 -j ACCEPT
-A INPUT -s 190.122.192.0/20 -j ACCEPT
-A INPUT -s 190.122.208.0/21 -j ACCEPT
-A INPUT -s 190.122.224.0/19 -j ACCEPT
-A INPUT -s 190.123.80.0/20 -j ACCEPT
-A INPUT -s 190.123.96.0/20 -j ACCEPT
-A INPUT -s 190.123.112.0/21 -j ACCEPT
-A INPUT -s 190.123.120.0/22 -j ACCEPT
-A INPUT -s 190.123.144.0/20 -j ACCEPT
-A INPUT -s 190.123.240.0/20 -j ACCEPT
-A INPUT -s 190.124.0.0/20 -j ACCEPT
-A INPUT -s 190.124.56.0/21 -j ACCEPT
-A INPUT -s 190.124.128.0/19 -j ACCEPT
-A INPUT -s 190.124.168.0/21 -j ACCEPT
-A INPUT -s 190.124.192.0/20 -j ACCEPT
-A INPUT -s 190.124.208.0/21 -j ACCEPT
-A INPUT -s 190.124.224.0/20 -j ACCEPT
-A INPUT -s 190.124.240.0/22 -j ACCEPT
-A INPUT -s 190.124.252.0/22 -j ACCEPT
-A INPUT -s 190.136.0.0/16 -j ACCEPT
-A INPUT -s 190.137.0.0/17 -j ACCEPT
-A INPUT -s 190.137.128.0/19 -j ACCEPT
-A INPUT -s 190.137.160.0/24 -j ACCEPT
-A INPUT -s 190.137.162.0/23 -j ACCEPT
-A INPUT -s 190.137.164.0/22 -j ACCEPT
-A INPUT -s 190.137.168.0/21 -j ACCEPT
-A INPUT -s 190.137.176.0/20 -j ACCEPT
-A INPUT -s 190.137.192.0/18 -j ACCEPT
-A INPUT -s 190.138.0.0/16 -j ACCEPT
-A INPUT -s 190.139.0.0/18 -j ACCEPT
-A INPUT -s 190.139.64.0/19 -j ACCEPT
-A INPUT -s 190.139.96.0/21 -j ACCEPT
-A INPUT -s 190.139.104.0/25 -j ACCEPT
-A INPUT -s 190.139.104.128/26 -j ACCEPT
-A INPUT -s 190.139.104.200/29 -j ACCEPT
-A INPUT -s 190.139.104.208/28 -j ACCEPT
-A INPUT -s 190.139.104.224/27 -j ACCEPT
-A INPUT -s 190.139.105.0/24 -j ACCEPT
-A INPUT -s 190.139.106.0/23 -j ACCEPT
-A INPUT -s 190.139.108.0/22 -j ACCEPT
-A INPUT -s 190.139.112.0/20 -j ACCEPT
-A INPUT -s 190.139.128.0/17 -j ACCEPT
-A INPUT -s 190.151.136.0/21 -j ACCEPT
-A INPUT -s 190.151.144.0/20 -j ACCEPT
-A INPUT -s 190.151.160.0/20 -j ACCEPT
-A INPUT -s 190.172.0.0/14 -j ACCEPT
-A INPUT -s 190.176.0.0/14 -j ACCEPT
-A INPUT -s 190.180.144.0/22 -j ACCEPT
-A INPUT -s 190.180.152.0/21 -j ACCEPT
-A INPUT -s 190.181.64.0/18 -j ACCEPT
-A INPUT -s 190.182.128.0/17 -j ACCEPT
-A INPUT -s 190.183.0.0/16 -j ACCEPT
-A INPUT -s 190.184.192.0/22 -j ACCEPT
-A INPUT -s 190.184.208.0/21 -j ACCEPT
-A INPUT -s 190.184.220.0/22 -j ACCEPT
-A INPUT -s 190.184.224.0/19 -j ACCEPT
-A INPUT -s 190.185.100.0/22 -j ACCEPT
-A INPUT -s 190.185.104.0/22 -j ACCEPT
-A INPUT -s 190.185.128.0/17 -j ACCEPT
-A INPUT -s 190.188.0.0/14 -j ACCEPT
-A INPUT -s 190.192.0.0/14 -j ACCEPT
-A INPUT -s 190.196.224.0/20 -j ACCEPT
-A INPUT -s 190.196.248.0/21 -j ACCEPT
-A INPUT -s 190.197.128.0/17 -j ACCEPT
-A INPUT -s 190.210.0.0/16 -j ACCEPT
-A INPUT -s 190.211.64.0/20 -j ACCEPT
-A INPUT -s 190.211.80.0/21 -j ACCEPT
-A INPUT -s 190.211.88.0/22 -j ACCEPT
-A INPUT -s 190.211.128.0/21 -j ACCEPT
-A INPUT -s 190.211.144.0/20 -j ACCEPT
-A INPUT -s 190.211.192.0/19 -j ACCEPT
-A INPUT -s 190.211.244.0/22 -j ACCEPT
-A INPUT -s 190.216.0.0/22 -j ACCEPT
-A INPUT -s 190.216.4.0/25 -j ACCEPT
-A INPUT -s 190.216.4.128/26 -j ACCEPT
-A INPUT -s 190.216.4.192/27 -j ACCEPT
-A INPUT -s 190.216.4.240/28 -j ACCEPT
-A INPUT -s 190.216.5.0/24 -j ACCEPT
-A INPUT -s 190.216.6.0/27 -j ACCEPT
-A INPUT -s 190.216.6.32/28 -j ACCEPT
-A INPUT -s 190.216.6.64/26 -j ACCEPT
-A INPUT -s 190.216.6.128/26 -j ACCEPT
-A INPUT -s 190.216.6.192/27 -j ACCEPT
-A INPUT -s 190.216.6.224/28 -j ACCEPT
-A INPUT -s 190.216.7.0/26 -j ACCEPT
-A INPUT -s 190.216.7.64/28 -j ACCEPT
-A INPUT -s 190.216.7.96/27 -j ACCEPT
-A INPUT -s 190.216.7.128/27 -j ACCEPT
-A INPUT -s 190.216.7.160/28 -j ACCEPT
-A INPUT -s 190.216.7.176/29 -j ACCEPT
-A INPUT -s 190.216.7.192/26 -j ACCEPT
-A INPUT -s 190.216.8.0/22 -j ACCEPT
-A INPUT -s 190.216.12.0/24 -j ACCEPT
-A INPUT -s 190.216.13.0/30 -j ACCEPT
-A INPUT -s 190.216.13.8/29 -j ACCEPT
-A INPUT -s 190.216.13.16/28 -j ACCEPT
-A INPUT -s 190.216.13.32/27 -j ACCEPT
-A INPUT -s 190.216.13.64/26 -j ACCEPT
-A INPUT -s 190.216.13.128/25 -j ACCEPT
-A INPUT -s 190.216.14.0/24 -j ACCEPT
-A INPUT -s 190.216.15.0/25 -j ACCEPT
-A INPUT -s 190.216.16.0/29 -j ACCEPT
-A INPUT -s 190.216.16.8/30 -j ACCEPT
-A INPUT -s 190.216.16.16/28 -j ACCEPT
-A INPUT -s 190.216.16.32/27 -j ACCEPT
-A INPUT -s 190.216.16.64/27 -j ACCEPT
-A INPUT -s 190.216.16.96/29 -j ACCEPT
-A INPUT -s 190.216.16.104/30 -j ACCEPT
-A INPUT -s 190.216.16.112/28 -j ACCEPT
-A INPUT -s 190.216.18.0/24 -j ACCEPT
-A INPUT -s 190.216.19.0/28 -j ACCEPT
-A INPUT -s 190.216.19.48/28 -j ACCEPT
-A INPUT -s 190.216.19.64/28 -j ACCEPT
-A INPUT -s 190.216.19.112/28 -j ACCEPT
-A INPUT -s 190.216.19.128/25 -j ACCEPT
-A INPUT -s 190.216.20.0/22 -j ACCEPT
-A INPUT -s 190.216.24.0/23 -j ACCEPT
-A INPUT -s 190.216.26.0/26 -j ACCEPT
-A INPUT -s 190.216.26.64/28 -j ACCEPT
-A INPUT -s 190.216.26.96/27 -j ACCEPT
-A INPUT -s 190.216.26.128/25 -j ACCEPT
-A INPUT -s 190.216.27.0/24 -j ACCEPT
-A INPUT -s 190.216.28.8/29 -j ACCEPT
-A INPUT -s 190.216.28.16/28 -j ACCEPT
-A INPUT -s 190.216.28.32/27 -j ACCEPT
-A INPUT -s 190.216.28.64/26 -j ACCEPT
-A INPUT -s 190.216.28.128/25 -j ACCEPT
-A INPUT -s 190.216.29.0/27 -j ACCEPT
-A INPUT -s 190.216.29.32/28 -j ACCEPT
-A INPUT -s 190.216.29.96/27 -j ACCEPT
-A INPUT -s 190.216.29.128/27 -j ACCEPT
-A INPUT -s 190.216.29.176/28 -j ACCEPT
-A INPUT -s 190.216.29.192/26 -j ACCEPT
-A INPUT -s 190.216.30.0/26 -j ACCEPT
-A INPUT -s 190.216.30.80/30 -j ACCEPT
-A INPUT -s 190.216.30.88/29 -j ACCEPT
-A INPUT -s 190.216.30.96/27 -j ACCEPT
-A INPUT -s 190.216.30.128/28 -j ACCEPT
-A INPUT -s 190.216.30.144/30 -j ACCEPT
-A INPUT -s 190.216.30.152/29 -j ACCEPT
-A INPUT -s 190.216.30.160/27 -j ACCEPT
-A INPUT -s 190.216.30.192/26 -j ACCEPT
-A INPUT -s 190.216.31.0/24 -j ACCEPT
-A INPUT -s 190.216.32.0/23 -j ACCEPT
-A INPUT -s 190.216.34.0/27 -j ACCEPT
-A INPUT -s 190.216.34.32/28 -j ACCEPT
-A INPUT -s 190.216.34.48/29 -j ACCEPT
-A INPUT -s 190.216.34.56/30 -j ACCEPT
-A INPUT -s 190.216.34.64/30 -j ACCEPT
-A INPUT -s 190.216.34.72/29 -j ACCEPT
-A INPUT -s 190.216.34.80/28 -j ACCEPT
-A INPUT -s 190.216.34.96/27 -j ACCEPT
-A INPUT -s 190.216.34.128/25 -j ACCEPT
-A INPUT -s 190.216.35.0/24 -j ACCEPT
-A INPUT -s 190.216.36.0/22 -j ACCEPT
-A INPUT -s 190.216.40.0/26 -j ACCEPT
-A INPUT -s 190.216.40.80/28 -j ACCEPT
-A INPUT -s 190.216.40.96/27 -j ACCEPT
-A INPUT -s 190.216.40.128/25 -j ACCEPT
-A INPUT -s 190.216.41.0/28 -j ACCEPT
-A INPUT -s 190.216.41.16/29 -j ACCEPT
-A INPUT -s 190.216.41.30/32 -j ACCEPT
-A INPUT -s 190.216.41.32/27 -j ACCEPT
-A INPUT -s 190.216.41.64/27 -j ACCEPT
-A INPUT -s 190.216.41.96/30 -j ACCEPT
-A INPUT -s 190.216.41.104/29 -j ACCEPT
-A INPUT -s 190.216.41.112/29 -j ACCEPT
-A INPUT -s 190.216.41.124/30 -j ACCEPT
-A INPUT -s 190.216.41.128/30 -j ACCEPT
-A INPUT -s 190.216.41.136/30 -j ACCEPT
-A INPUT -s 190.216.41.148/30 -j ACCEPT
-A INPUT -s 190.216.41.152/29 -j ACCEPT
-A INPUT -s 190.216.41.160/29 -j ACCEPT
-A INPUT -s 190.216.41.168/30 -j ACCEPT
-A INPUT -s 190.216.41.176/30 -j ACCEPT
-A INPUT -s 190.216.41.184/29 -j ACCEPT
-A INPUT -s 190.216.41.196/30 -j ACCEPT
-A INPUT -s 190.216.41.200/30 -j ACCEPT
-A INPUT -s 190.216.41.208/29 -j ACCEPT
-A INPUT -s 190.216.41.220/30 -j ACCEPT
-A INPUT -s 190.216.41.224/28 -j ACCEPT
-A INPUT -s 190.216.41.240/30 -j ACCEPT
-A INPUT -s 190.216.41.245/32 -j ACCEPT
-A INPUT -s 190.216.41.246/32 -j ACCEPT
-A INPUT -s 190.216.41.249/32 -j ACCEPT
-A INPUT -s 190.216.41.250/32 -j ACCEPT
-A INPUT -s 190.216.41.254/32 -j ACCEPT
-A INPUT -s 190.216.42.0/23 -j ACCEPT
-A INPUT -s 190.216.44.0/22 -j ACCEPT
-A INPUT -s 190.216.48.0/25 -j ACCEPT
-A INPUT -s 190.216.48.128/28 -j ACCEPT
-A INPUT -s 190.216.48.160/27 -j ACCEPT
-A INPUT -s 190.216.48.192/26 -j ACCEPT
-A INPUT -s 190.216.49.0/25 -j ACCEPT
-A INPUT -s 190.216.49.192/26 -j ACCEPT
-A INPUT -s 190.216.50.0/27 -j ACCEPT
-A INPUT -s 190.216.50.32/28 -j ACCEPT
-A INPUT -s 190.216.50.48/29 -j ACCEPT
-A INPUT -s 190.216.50.64/28 -j ACCEPT
-A INPUT -s 190.216.50.104/29 -j ACCEPT
-A INPUT -s 190.216.50.120/29 -j ACCEPT
-A INPUT -s 190.216.50.128/25 -j ACCEPT
-A INPUT -s 190.216.51.0/25 -j ACCEPT
-A INPUT -s 190.216.51.128/27 -j ACCEPT
-A INPUT -s 190.216.51.192/26 -j ACCEPT
-A INPUT -s 190.216.53.0/27 -j ACCEPT
-A INPUT -s 190.216.53.48/28 -j ACCEPT
-A INPUT -s 190.216.53.64/26 -j ACCEPT
-A INPUT -s 190.216.53.128/25 -j ACCEPT
-A INPUT -s 190.216.54.0/27 -j ACCEPT
-A INPUT -s 190.216.54.32/28 -j ACCEPT
-A INPUT -s 190.216.54.48/30 -j ACCEPT
-A INPUT -s 190.216.54.56/29 -j ACCEPT
-A INPUT -s 190.216.54.64/27 -j ACCEPT
-A INPUT -s 190.216.54.96/28 -j ACCEPT
-A INPUT -s 190.216.54.120/29 -j ACCEPT
-A INPUT -s 190.216.54.132/30 -j ACCEPT
-A INPUT -s 190.216.54.140/30 -j ACCEPT
-A INPUT -s 190.216.54.144/28 -j ACCEPT
-A INPUT -s 190.216.54.160/28 -j ACCEPT
-A INPUT -s 190.216.54.176/29 -j ACCEPT
-A INPUT -s 190.216.54.184/30 -j ACCEPT
-A INPUT -s 190.216.54.192/26 -j ACCEPT
-A INPUT -s 190.216.55.0/24 -j ACCEPT
-A INPUT -s 190.216.56.0/24 -j ACCEPT
-A INPUT -s 190.216.58.0/23 -j ACCEPT
-A INPUT -s 190.216.62.0/24 -j ACCEPT
-A INPUT -s 190.216.64.16/28 -j ACCEPT
-A INPUT -s 190.216.64.36/30 -j ACCEPT
-A INPUT -s 190.216.64.40/29 -j ACCEPT
-A INPUT -s 190.216.64.48/28 -j ACCEPT
-A INPUT -s 190.216.64.64/29 -j ACCEPT
-A INPUT -s 190.216.64.76/30 -j ACCEPT
-A INPUT -s 190.216.64.80/28 -j ACCEPT
-A INPUT -s 190.216.64.96/29 -j ACCEPT
-A INPUT -s 190.216.64.104/30 -j ACCEPT
-A INPUT -s 190.216.64.112/29 -j ACCEPT
-A INPUT -s 190.216.64.120/30 -j ACCEPT
-A INPUT -s 190.216.64.128/27 -j ACCEPT
-A INPUT -s 190.216.64.160/29 -j ACCEPT
-A INPUT -s 190.216.64.172/30 -j ACCEPT
-A INPUT -s 190.216.64.176/28 -j ACCEPT
-A INPUT -s 190.216.64.192/28 -j ACCEPT
-A INPUT -s 190.216.64.208/30 -j ACCEPT
-A INPUT -s 190.216.64.216/29 -j ACCEPT
-A INPUT -s 190.216.64.224/27 -j ACCEPT
-A INPUT -s 190.216.65.0/29 -j ACCEPT
-A INPUT -s 190.216.65.16/30 -j ACCEPT
-A INPUT -s 190.216.65.24/29 -j ACCEPT
-A INPUT -s 190.216.65.32/29 -j ACCEPT
-A INPUT -s 190.216.65.44/30 -j ACCEPT
-A INPUT -s 190.216.65.48/28 -j ACCEPT
-A INPUT -s 190.216.65.64/26 -j ACCEPT
-A INPUT -s 190.216.65.128/25 -j ACCEPT
-A INPUT -s 190.216.66.16/29 -j ACCEPT
-A INPUT -s 190.216.66.32/27 -j ACCEPT
-A INPUT -s 190.216.66.64/27 -j ACCEPT
-A INPUT -s 190.216.66.96/29 -j ACCEPT
-A INPUT -s 190.216.66.120/29 -j ACCEPT
-A INPUT -s 190.216.66.128/26 -j ACCEPT
-A INPUT -s 190.216.66.192/27 -j ACCEPT
-A INPUT -s 190.216.66.224/28 -j ACCEPT
-A INPUT -s 190.216.66.240/29 -j ACCEPT
-A INPUT -s 190.216.67.0/26 -j ACCEPT
-A INPUT -s 190.216.67.64/28 -j ACCEPT
-A INPUT -s 190.216.67.88/29 -j ACCEPT
-A INPUT -s 190.216.67.96/27 -j ACCEPT
-A INPUT -s 190.216.67.128/25 -j ACCEPT
-A INPUT -s 190.216.68.64/26 -j ACCEPT
-A INPUT -s 190.216.68.144/28 -j ACCEPT
-A INPUT -s 190.216.68.160/27 -j ACCEPT
-A INPUT -s 190.216.68.192/26 -j ACCEPT
-A INPUT -s 190.216.69.16/28 -j ACCEPT
-A INPUT -s 190.216.69.32/28 -j ACCEPT
-A INPUT -s 190.216.69.48/29 -j ACCEPT
-A INPUT -s 190.216.69.128/28 -j ACCEPT
-A INPUT -s 190.216.69.160/27 -j ACCEPT
-A INPUT -s 190.216.69.192/26 -j ACCEPT
-A INPUT -s 190.216.70.0/23 -j ACCEPT
-A INPUT -s 190.216.72.0/24 -j ACCEPT
-A INPUT -s 190.216.73.0/25 -j ACCEPT
-A INPUT -s 190.216.73.128/26 -j ACCEPT
-A INPUT -s 190.216.73.192/27 -j ACCEPT
-A INPUT -s 190.216.73.224/28 -j ACCEPT
-A INPUT -s 190.216.74.0/24 -j ACCEPT
-A INPUT -s 190.216.76.0/23 -j ACCEPT
-A INPUT -s 190.216.78.0/24 -j ACCEPT
-A INPUT -s 190.216.79.4/30 -j ACCEPT
-A INPUT -s 190.216.79.8/29 -j ACCEPT
-A INPUT -s 190.216.79.16/28 -j ACCEPT
-A INPUT -s 190.216.79.32/27 -j ACCEPT
-A INPUT -s 190.216.79.64/26 -j ACCEPT
-A INPUT -s 190.216.79.128/25 -j ACCEPT
-A INPUT -s 190.216.82.24/29 -j ACCEPT
-A INPUT -s 190.216.82.32/27 -j ACCEPT
-A INPUT -s 190.216.82.64/26 -j ACCEPT
-A INPUT -s 190.216.82.128/25 -j ACCEPT
-A INPUT -s 190.216.83.0/24 -j ACCEPT
-A INPUT -s 190.216.84.8/29 -j ACCEPT
-A INPUT -s 190.216.84.16/28 -j ACCEPT
-A INPUT -s 190.216.84.32/27 -j ACCEPT
-A INPUT -s 190.216.84.64/26 -j ACCEPT
-A INPUT -s 190.216.84.128/25 -j ACCEPT
-A INPUT -s 190.216.87.0/24 -j ACCEPT
-A INPUT -s 190.216.90.0/24 -j ACCEPT
-A INPUT -s 190.216.92.0/24 -j ACCEPT
-A INPUT -s 190.216.94.0/24 -j ACCEPT
-A INPUT -s 190.217.8.0/21 -j ACCEPT
-A INPUT -s 190.217.16.0/20 -j ACCEPT
-A INPUT -s 190.217.32.0/19 -j ACCEPT
-A INPUT -s 190.217.64.0/18 -j ACCEPT
-A INPUT -s 190.220.0.0/17 -j ACCEPT
-A INPUT -s 190.220.128.0/20 -j ACCEPT
-A INPUT -s 190.220.144.0/21 -j ACCEPT
-A INPUT -s 190.220.152.0/25 -j ACCEPT
-A INPUT -s 190.220.152.144/28 -j ACCEPT
-A INPUT -s 190.220.152.160/27 -j ACCEPT
-A INPUT -s 190.220.152.192/26 -j ACCEPT
-A INPUT -s 190.220.153.0/24 -j ACCEPT
-A INPUT -s 190.220.154.0/23 -j ACCEPT
-A INPUT -s 190.220.156.0/22 -j ACCEPT
-A INPUT -s 190.220.160.0/19 -j ACCEPT
-A INPUT -s 190.220.192.0/18 -j ACCEPT
-A INPUT -s 190.221.0.0/16 -j ACCEPT
-A INPUT -s 190.224.0.0/13 -j ACCEPT
-A INPUT -s 190.244.0.0/14 -j ACCEPT
-A INPUT -s 191.80.0.0/14 -j ACCEPT
-A INPUT -s 191.84.0.0/15 -j ACCEPT
-A INPUT -s 191.97.24.0/21 -j ACCEPT
-A INPUT -s 191.97.32.0/20 -j ACCEPT
-A INPUT -s 191.97.68.0/22 -j ACCEPT
-A INPUT -s 191.97.72.0/21 -j ACCEPT
-A INPUT -s 191.97.96.0/22 -j ACCEPT
-A INPUT -s 191.97.108.0/22 -j ACCEPT
-A INPUT -s 191.97.112.0/21 -j ACCEPT
-A INPUT -s 191.97.128.0/17 -j ACCEPT
-A INPUT -s 191.98.216.0/21 -j ACCEPT
-A INPUT -s 191.102.16.0/20 -j ACCEPT
-A INPUT -s 191.102.40.0/21 -j ACCEPT
-A INPUT -s 191.102.244.0/22 -j ACCEPT
-A INPUT -s 191.102.248.0/21 -j ACCEPT
-A INPUT -s 191.103.0.0/18 -j ACCEPT
-A INPUT -s 191.103.96.0/20 -j ACCEPT
-A INPUT -s 192.100.157.0/24 -j ACCEPT
-A INPUT -s 192.100.186.0/23 -j ACCEPT
-A INPUT -s 192.100.254.0/24 -j ACCEPT
-A INPUT -s 192.198.8.0/21 -j ACCEPT
-A INPUT -s 192.231.120.0/23 -j ACCEPT
-A INPUT -s 194.117.99.56/30 -j ACCEPT
-A INPUT -s 194.117.101.218/31 -j ACCEPT
-A INPUT -s 194.117.108.44/30 -j ACCEPT
-A INPUT -s 194.117.111.100/30 -j ACCEPT
-A INPUT -s 194.117.112.64/30 -j ACCEPT
-A INPUT -s 194.117.113.4/30 -j ACCEPT
-A INPUT -s 194.117.115.192/30 -j ACCEPT
-A INPUT -s 194.117.116.136/30 -j ACCEPT
-A INPUT -s 195.22.220.0/25 -j ACCEPT
-A INPUT -s 195.22.220.128/29 -j ACCEPT
-A INPUT -s 195.22.220.136/32 -j ACCEPT
-A INPUT -s 195.22.220.138/32 -j ACCEPT
-A INPUT -s 195.22.220.140/32 -j ACCEPT
-A INPUT -s 195.22.220.142/32 -j ACCEPT
-A INPUT -s 195.22.220.144/28 -j ACCEPT
-A INPUT -s 195.22.220.160/28 -j ACCEPT
-A INPUT -s 195.22.220.176/29 -j ACCEPT
-A INPUT -s 195.22.220.184/30 -j ACCEPT
-A INPUT -s 195.22.220.188/32 -j ACCEPT
-A INPUT -s 195.22.220.190/32 -j ACCEPT
-A INPUT -s 195.22.220.192/32 -j ACCEPT
-A INPUT -s 195.22.220.194/31 -j ACCEPT
-A INPUT -s 195.22.220.196/32 -j ACCEPT
-A INPUT -s 195.22.220.198/31 -j ACCEPT
-A INPUT -s 195.22.220.200/29 -j ACCEPT
-A INPUT -s 195.22.220.208/29 -j ACCEPT
-A INPUT -s 195.22.220.216/32 -j ACCEPT
-A INPUT -s 195.22.220.218/32 -j ACCEPT
-A INPUT -s 195.22.220.220/30 -j ACCEPT
-A INPUT -s 195.22.220.224/30 -j ACCEPT
-A INPUT -s 195.22.220.228/32 -j ACCEPT
-A INPUT -s 195.22.220.230/32 -j ACCEPT
-A INPUT -s 195.22.220.232/32 -j ACCEPT
-A INPUT -s 195.22.220.234/32 -j ACCEPT
-A INPUT -s 195.22.220.236/30 -j ACCEPT
-A INPUT -s 195.22.220.240/28 -j ACCEPT
-A INPUT -s 195.112.164.12/30 -j ACCEPT
-A INPUT -s 195.112.164.128/29 -j ACCEPT
-A INPUT -s 195.112.164.156/30 -j ACCEPT
-A INPUT -s 195.112.164.180/30 -j ACCEPT
-A INPUT -s 195.112.172.100/30 -j ACCEPT
-A INPUT -s 195.112.172.160/30 -j ACCEPT
-A INPUT -s 195.112.173.0/30 -j ACCEPT
-A INPUT -s 195.112.174.152/29 -j ACCEPT
-A INPUT -s 195.112.184.91/32 -j ACCEPT
-A INPUT -s 195.112.184.105/32 -j ACCEPT
-A INPUT -s 195.112.184.134/32 -j ACCEPT
-A INPUT -s 195.112.185.26/32 -j ACCEPT
-A INPUT -s 195.112.185.48/32 -j ACCEPT
-A INPUT -s 195.112.185.68/32 -j ACCEPT
-A INPUT -s 195.112.185.143/32 -j ACCEPT
-A INPUT -s 195.112.185.144/31 -j ACCEPT
-A INPUT -s 195.112.185.148/32 -j ACCEPT
-A INPUT -s 195.112.185.152/31 -j ACCEPT
-A INPUT -s 195.112.185.156/32 -j ACCEPT
-A INPUT -s 195.112.185.176/32 -j ACCEPT
-A INPUT -s 195.112.185.224/32 -j ACCEPT
-A INPUT -s 195.112.185.243/32 -j ACCEPT
-A INPUT -s 195.112.185.252/32 -j ACCEPT
-A INPUT -s 195.112.186.52/30 -j ACCEPT
-A INPUT -s 195.112.187.104/30 -j ACCEPT
-A INPUT -s 195.112.187.148/30 -j ACCEPT
-A INPUT -s 195.112.187.180/30 -j ACCEPT
-A INPUT -s 195.112.187.244/30 -j ACCEPT
-A INPUT -s 195.112.188.44/30 -j ACCEPT
-A INPUT -s 195.112.188.116/30 -j ACCEPT
-A INPUT -s 195.112.188.152/30 -j ACCEPT
-A INPUT -s 195.112.188.228/30 -j ACCEPT
-A INPUT -s 195.112.188.232/30 -j ACCEPT
-A INPUT -s 195.112.189.0/30 -j ACCEPT
-A INPUT -s 195.112.189.44/30 -j ACCEPT
-A INPUT -s 195.112.189.124/30 -j ACCEPT
-A INPUT -s 195.112.189.164/30 -j ACCEPT
-A INPUT -s 195.112.189.188/30 -j ACCEPT
-A INPUT -s 195.138.240.128/27 -j ACCEPT
-A INPUT -s 195.138.243.0/27 -j ACCEPT
-A INPUT -s 195.143.91.112/32 -j ACCEPT
-A INPUT -s 196.22.8.0/24 -j ACCEPT
-A INPUT -s 196.32.64.0/19 -j ACCEPT
-A INPUT -s 198.12.32.0/19 -j ACCEPT
-A INPUT -s 198.50.16.0/21 -j ACCEPT
-A INPUT -s 199.87.187.192/26 -j ACCEPT
-A INPUT -s 199.248.144.0/24 -j ACCEPT
-A INPUT -s 199.255.25.32/27 -j ACCEPT
-A INPUT -s 200.0.17.0/24 -j ACCEPT
-A INPUT -s 200.0.19.0/24 -j ACCEPT
-A INPUT -s 200.0.79.0/24 -j ACCEPT
-A INPUT -s 200.0.80.0/24 -j ACCEPT
-A INPUT -s 200.0.96.0/22 -j ACCEPT
-A INPUT -s 200.0.175.0/24 -j ACCEPT
-A INPUT -s 200.0.181.0/24 -j ACCEPT
-A INPUT -s 200.0.182.0/23 -j ACCEPT
-A INPUT -s 200.0.184.0/23 -j ACCEPT
-A INPUT -s 200.0.186.0/24 -j ACCEPT
-A INPUT -s 200.0.188.0/22 -j ACCEPT
-A INPUT -s 200.0.192.0/23 -j ACCEPT
-A INPUT -s 200.0.194.0/27 -j ACCEPT
-A INPUT -s 200.0.194.56/29 -j ACCEPT
-A INPUT -s 200.0.194.64/26 -j ACCEPT
-A INPUT -s 200.0.194.128/28 -j ACCEPT
-A INPUT -s 200.0.194.144/29 -j ACCEPT
-A INPUT -s 200.0.194.152/30 -j ACCEPT
-A INPUT -s 200.0.194.160/27 -j ACCEPT
-A INPUT -s 200.0.194.196/30 -j ACCEPT
-A INPUT -s 200.0.194.200/29 -j ACCEPT
-A INPUT -s 200.0.194.208/28 -j ACCEPT
-A INPUT -s 200.0.194.224/30 -j ACCEPT
-A INPUT -s 200.0.194.240/28 -j ACCEPT
-A INPUT -s 200.0.195.0/24 -j ACCEPT
-A INPUT -s 200.0.196.0/25 -j ACCEPT
-A INPUT -s 200.0.196.128/26 -j ACCEPT
-A INPUT -s 200.0.196.224/27 -j ACCEPT
-A INPUT -s 200.0.197.0/28 -j ACCEPT
-A INPUT -s 200.0.197.24/29 -j ACCEPT
-A INPUT -s 200.0.197.64/30 -j ACCEPT
-A INPUT -s 200.0.197.72/30 -j ACCEPT
-A INPUT -s 200.0.197.92/30 -j ACCEPT
-A INPUT -s 200.0.197.96/27 -j ACCEPT
-A INPUT -s 200.0.197.128/30 -j ACCEPT
-A INPUT -s 200.0.197.136/29 -j ACCEPT
-A INPUT -s 200.0.197.144/30 -j ACCEPT
-A INPUT -s 200.0.197.160/30 -j ACCEPT
-A INPUT -s 200.0.197.168/29 -j ACCEPT
-A INPUT -s 200.0.197.176/30 -j ACCEPT
-A INPUT -s 200.0.197.196/30 -j ACCEPT
-A INPUT -s 200.0.197.200/30 -j ACCEPT
-A INPUT -s 200.0.197.212/30 -j ACCEPT
-A INPUT -s 200.0.197.248/29 -j ACCEPT
-A INPUT -s 200.0.198.0/23 -j ACCEPT
-A INPUT -s 200.0.200.0/24 -j ACCEPT
-A INPUT -s 200.0.208.0/21 -j ACCEPT
-A INPUT -s 200.0.224.0/19 -j ACCEPT
-A INPUT -s 200.1.7.0/24 -j ACCEPT
-A INPUT -s 200.1.32.0/19 -j ACCEPT
-A INPUT -s 200.1.113.0/24 -j ACCEPT
-A INPUT -s 200.1.116.0/23 -j ACCEPT
-A INPUT -s 200.1.118.0/24 -j ACCEPT
-A INPUT -s 200.1.224.0/19 -j ACCEPT
-A INPUT -s 200.2.120.0/21 -j ACCEPT
-A INPUT -s 200.3.32.0/19 -j ACCEPT
-A INPUT -s 200.3.64.0/19 -j ACCEPT
-A INPUT -s 200.3.96.0/20 -j ACCEPT
-A INPUT -s 200.3.112.0/23 -j ACCEPT
-A INPUT -s 200.3.115.0/24 -j ACCEPT
-A INPUT -s 200.3.116.0/25 -j ACCEPT
-A INPUT -s 200.3.116.224/28 -j ACCEPT
-A INPUT -s 200.3.117.0/28 -j ACCEPT
-A INPUT -s 200.3.117.17/32 -j ACCEPT
-A INPUT -s 200.3.117.18/31 -j ACCEPT
-A INPUT -s 200.3.117.20/30 -j ACCEPT
-A INPUT -s 200.3.117.24/29 -j ACCEPT
-A INPUT -s 200.3.117.32/27 -j ACCEPT
-A INPUT -s 200.3.117.64/26 -j ACCEPT
-A INPUT -s 200.3.117.128/25 -j ACCEPT
-A INPUT -s 200.3.118.0/26 -j ACCEPT
-A INPUT -s 200.3.118.64/28 -j ACCEPT
-A INPUT -s 200.3.118.112/28 -j ACCEPT
-A INPUT -s 200.3.118.128/25 -j ACCEPT
-A INPUT -s 200.3.119.0/26 -j ACCEPT
-A INPUT -s 200.3.119.64/27 -j ACCEPT
-A INPUT -s 200.3.120.0/21 -j ACCEPT
-A INPUT -s 200.3.168.0/21 -j ACCEPT
-A INPUT -s 200.3.184.0/21 -j ACCEPT
-A INPUT -s 200.3.195.0/24 -j ACCEPT
-A INPUT -s 200.3.216.0/21 -j ACCEPT
-A INPUT -s 200.3.243.0/24 -j ACCEPT
-A INPUT -s 200.4.59.0/24 -j ACCEPT
-A INPUT -s 200.4.68.0/23 -j ACCEPT
-A INPUT -s 200.5.10.0/24 -j ACCEPT
-A INPUT -s 200.5.64.0/18 -j ACCEPT
-A INPUT -s 200.5.192.0/18 -j ACCEPT
-A INPUT -s 200.7.15.0/24 -j ACCEPT
-A INPUT -s 200.7.128.0/20 -j ACCEPT
-A INPUT -s 200.7.144.0/22 -j ACCEPT
-A INPUT -s 200.7.152.0/21 -j ACCEPT
-A INPUT -s 200.7.176.0/21 -j ACCEPT
-A INPUT -s 200.9.75.0/24 -j ACCEPT
-A INPUT -s 200.9.147.0/24 -j ACCEPT
-A INPUT -s 200.9.157.0/24 -j ACCEPT
-A INPUT -s 200.9.194.0/24 -j ACCEPT
-A INPUT -s 200.9.208.0/24 -j ACCEPT
-A INPUT -s 200.9.212.0/23 -j ACCEPT
-A INPUT -s 200.9.219.0/24 -j ACCEPT
-A INPUT -s 200.9.227.0/24 -j ACCEPT
-A INPUT -s 200.9.235.0/24 -j ACCEPT
-A INPUT -s 200.9.236.0/23 -j ACCEPT
-A INPUT -s 200.9.242.0/23 -j ACCEPT
-A INPUT -s 200.9.244.0/23 -j ACCEPT
-A INPUT -s 200.9.246.0/24 -j ACCEPT
-A INPUT -s 200.9.253.0/24 -j ACCEPT
-A INPUT -s 200.9.254.0/24 -j ACCEPT
-A INPUT -s 200.10.96.0/19 -j ACCEPT
-A INPUT -s 200.10.128.0/23 -j ACCEPT
-A INPUT -s 200.10.139.0/24 -j ACCEPT
-A INPUT -s 200.10.140.0/24 -j ACCEPT
-A INPUT -s 200.10.161.0/24 -j ACCEPT
-A INPUT -s 200.10.186.0/24 -j ACCEPT
-A INPUT -s 200.10.196.0/24 -j ACCEPT
-A INPUT -s 200.10.199.0/24 -j ACCEPT
-A INPUT -s 200.10.201.0/24 -j ACCEPT
-A INPUT -s 200.10.202.0/24 -j ACCEPT
-A INPUT -s 200.10.204.0/24 -j ACCEPT
-A INPUT -s 200.10.207.0/24 -j ACCEPT
-A INPUT -s 200.10.219.0/24 -j ACCEPT
-A INPUT -s 200.11.29.0/24 -j ACCEPT
-A INPUT -s 200.11.112.0/21 -j ACCEPT
-A INPUT -s 200.12.133.0/24 -j ACCEPT
-A INPUT -s 200.12.134.0/23 -j ACCEPT
-A INPUT -s 200.12.136.0/23 -j ACCEPT
-A INPUT -s 200.12.138.0/24 -j ACCEPT
-A INPUT -s 200.12.154.0/24 -j ACCEPT
-A INPUT -s 200.12.192.0/24 -j ACCEPT
-A INPUT -s 200.12.200.0/21 -j ACCEPT
-A INPUT -s 200.12.216.0/24 -j ACCEPT
-A INPUT -s 200.12.217.0/25 -j ACCEPT
-A INPUT -s 200.12.217.128/28 -j ACCEPT
-A INPUT -s 200.12.217.144/29 -j ACCEPT
-A INPUT -s 200.12.217.160/27 -j ACCEPT
-A INPUT -s 200.12.217.192/26 -j ACCEPT
-A INPUT -s 200.12.218.0/23 -j ACCEPT
-A INPUT -s 200.12.220.0/22 -j ACCEPT
-A INPUT -s 200.13.41.0/24 -j ACCEPT
-A INPUT -s 200.13.42.0/23 -j ACCEPT
-A INPUT -s 200.13.44.0/22 -j ACCEPT
-A INPUT -s 200.13.83.0/24 -j ACCEPT
-A INPUT -s 200.14.37.0/24 -j ACCEPT
-A INPUT -s 200.14.38.0/23 -j ACCEPT
-A INPUT -s 200.14.74.0/23 -j ACCEPT
-A INPUT -s 200.14.116.0/24 -j ACCEPT
-A INPUT -s 200.16.16.0/20 -j ACCEPT
-A INPUT -s 200.16.64.0/23 -j ACCEPT
-A INPUT -s 200.16.72.0/22 -j ACCEPT
-A INPUT -s 200.16.76.0/23 -j ACCEPT
-A INPUT -s 200.16.78.0/24 -j ACCEPT
-A INPUT -s 200.16.80.0/21 -j ACCEPT
-A INPUT -s 200.16.89.0/24 -j ACCEPT
-A INPUT -s 200.16.96.0/20 -j ACCEPT
-A INPUT -s 200.16.116.0/24 -j ACCEPT
-A INPUT -s 200.16.120.0/21 -j ACCEPT
-A INPUT -s 200.16.128.0/17 -j ACCEPT
-A INPUT -s 200.24.240.0/20 -j ACCEPT
-A INPUT -s 200.26.0.0/17 -j ACCEPT
-A INPUT -s 200.26.184.0/21 -j ACCEPT
-A INPUT -s 200.29.248.0/21 -j ACCEPT
-A INPUT -s 200.31.0.200/30 -j ACCEPT
-A INPUT -s 200.31.1.32/27 -j ACCEPT
-A INPUT -s 200.31.1.64/26 -j ACCEPT
-A INPUT -s 200.31.1.128/25 -j ACCEPT
-A INPUT -s 200.31.2.0/24 -j ACCEPT
-A INPUT -s 200.31.11.128/25 -j ACCEPT
-A INPUT -s 200.31.22.128/29 -j ACCEPT
-A INPUT -s 200.31.215.96/29 -j ACCEPT
-A INPUT -s 200.31.224.0/19 -j ACCEPT
-A INPUT -s 200.32.0.0/18 -j ACCEPT
-A INPUT -s 200.32.84.0/25 -j ACCEPT
-A INPUT -s 200.32.84.192/27 -j ACCEPT
-A INPUT -s 200.32.85.0/27 -j ACCEPT
-A INPUT -s 200.32.85.32/28 -j ACCEPT
-A INPUT -s 200.32.85.64/26 -j ACCEPT
-A INPUT -s 200.32.85.128/26 -j ACCEPT
-A INPUT -s 200.32.85.192/27 -j ACCEPT
-A INPUT -s 200.32.85.224/28 -j ACCEPT
-A INPUT -s 200.32.86.0/27 -j ACCEPT
-A INPUT -s 200.32.86.32/28 -j ACCEPT
-A INPUT -s 200.32.86.48/29 -j ACCEPT
-A INPUT -s 200.32.86.72/29 -j ACCEPT
-A INPUT -s 200.32.86.80/29 -j ACCEPT
-A INPUT -s 200.32.86.96/29 -j ACCEPT
-A INPUT -s 200.32.86.112/28 -j ACCEPT
-A INPUT -s 200.32.86.128/28 -j ACCEPT
-A INPUT -s 200.32.86.160/27 -j ACCEPT
-A INPUT -s 200.32.86.192/26 -j ACCEPT
-A INPUT -s 200.32.87.0/28 -j ACCEPT
-A INPUT -s 200.32.87.32/27 -j ACCEPT
-A INPUT -s 200.32.87.64/26 -j ACCEPT
-A INPUT -s 200.32.87.128/27 -j ACCEPT
-A INPUT -s 200.32.87.160/28 -j ACCEPT
-A INPUT -s 200.32.87.192/26 -j ACCEPT
-A INPUT -s 200.32.88.0/25 -j ACCEPT
-A INPUT -s 200.32.88.128/28 -j ACCEPT
-A INPUT -s 200.32.88.152/29 -j ACCEPT
-A INPUT -s 200.32.89.0/24 -j ACCEPT
-A INPUT -s 200.32.90.0/24 -j ACCEPT
-A INPUT -s 200.32.91.0/25 -j ACCEPT
-A INPUT -s 200.32.91.160/27 -j ACCEPT
-A INPUT -s 200.32.91.192/26 -j ACCEPT
-A INPUT -s 200.32.92.128/25 -j ACCEPT
-A INPUT -s 200.32.93.0/25 -j ACCEPT
-A INPUT -s 200.32.93.160/27 -j ACCEPT
-A INPUT -s 200.32.93.192/26 -j ACCEPT
-A INPUT -s 200.32.94.0/23 -j ACCEPT
-A INPUT -s 200.32.96.0/23 -j ACCEPT
-A INPUT -s 200.32.98.8/29 -j ACCEPT
-A INPUT -s 200.32.98.16/29 -j ACCEPT
-A INPUT -s 200.32.98.48/28 -j ACCEPT
-A INPUT -s 200.32.98.64/28 -j ACCEPT
-A INPUT -s 200.32.98.80/29 -j ACCEPT
-A INPUT -s 200.32.98.96/27 -j ACCEPT
-A INPUT -s 200.32.98.128/29 -j ACCEPT
-A INPUT -s 200.32.98.144/29 -j ACCEPT
-A INPUT -s 200.32.98.160/29 -j ACCEPT
-A INPUT -s 200.32.98.176/28 -j ACCEPT
-A INPUT -s 200.32.98.192/29 -j ACCEPT
-A INPUT -s 200.32.98.208/28 -j ACCEPT
-A INPUT -s 200.32.98.224/29 -j ACCEPT
-A INPUT -s 200.32.98.240/28 -j ACCEPT
-A INPUT -s 200.32.99.0/25 -j ACCEPT
-A INPUT -s 200.32.99.128/27 -j ACCEPT
-A INPUT -s 200.32.99.208/28 -j ACCEPT
-A INPUT -s 200.32.99.224/27 -j ACCEPT
-A INPUT -s 200.32.100.0/26 -j ACCEPT
-A INPUT -s 200.32.100.80/28 -j ACCEPT
-A INPUT -s 200.32.100.96/27 -j ACCEPT
-A INPUT -s 200.32.100.128/28 -j ACCEPT
-A INPUT -s 200.32.100.176/28 -j ACCEPT
-A INPUT -s 200.32.100.192/27 -j ACCEPT
-A INPUT -s 200.32.100.240/28 -j ACCEPT
-A INPUT -s 200.32.101.0/27 -j ACCEPT
-A INPUT -s 200.32.101.48/28 -j ACCEPT
-A INPUT -s 200.32.101.64/26 -j ACCEPT
-A INPUT -s 200.32.101.128/27 -j ACCEPT
-A INPUT -s 200.32.101.176/28 -j ACCEPT
-A INPUT -s 200.32.101.192/28 -j ACCEPT
-A INPUT -s 200.32.101.224/27 -j ACCEPT
-A INPUT -s 200.32.102.0/23 -j ACCEPT
-A INPUT -s 200.32.104.32/27 -j ACCEPT
-A INPUT -s 200.32.104.64/26 -j ACCEPT
-A INPUT -s 200.32.104.128/25 -j ACCEPT
-A INPUT -s 200.32.105.0/25 -j ACCEPT
-A INPUT -s 200.32.105.128/26 -j ACCEPT
-A INPUT -s 200.32.106.32/28 -j ACCEPT
-A INPUT -s 200.32.106.128/25 -j ACCEPT
-A INPUT -s 200.32.107.0/24 -j ACCEPT
-A INPUT -s 200.32.108.128/25 -j ACCEPT
-A INPUT -s 200.32.109.0/24 -j ACCEPT
-A INPUT -s 200.32.110.0/25 -j ACCEPT
-A INPUT -s 200.32.110.160/27 -j ACCEPT
-A INPUT -s 200.32.110.224/27 -j ACCEPT
-A INPUT -s 200.32.111.0/24 -j ACCEPT
-A INPUT -s 200.32.112.0/28 -j ACCEPT
-A INPUT -s 200.32.112.32/27 -j ACCEPT
-A INPUT -s 200.32.112.64/26 -j ACCEPT
-A INPUT -s 200.32.112.144/28 -j ACCEPT
-A INPUT -s 200.32.112.176/28 -j ACCEPT
-A INPUT -s 200.32.112.192/27 -j ACCEPT
-A INPUT -s 200.32.112.224/28 -j ACCEPT
-A INPUT -s 200.32.113.128/25 -j ACCEPT
-A INPUT -s 200.32.114.128/25 -j ACCEPT
-A INPUT -s 200.32.115.128/25 -j ACCEPT
-A INPUT -s 200.32.116.0/24 -j ACCEPT
-A INPUT -s 200.32.118.0/24 -j ACCEPT
-A INPUT -s 200.32.119.0/25 -j ACCEPT
-A INPUT -s 200.32.119.128/26 -j ACCEPT
-A INPUT -s 200.32.120.0/24 -j ACCEPT
-A INPUT -s 200.32.121.0/27 -j ACCEPT
-A INPUT -s 200.32.121.32/29 -j ACCEPT
-A INPUT -s 200.32.121.64/26 -j ACCEPT
-A INPUT -s 200.32.121.128/25 -j ACCEPT
-A INPUT -s 200.32.122.0/25 -j ACCEPT
-A INPUT -s 200.32.122.192/26 -j ACCEPT
-A INPUT -s 200.32.123.0/24 -j ACCEPT
-A INPUT -s 200.32.124.128/25 -j ACCEPT
-A INPUT -s 200.32.125.0/24 -j ACCEPT
-A INPUT -s 200.32.126.4/30 -j ACCEPT
-A INPUT -s 200.32.126.8/29 -j ACCEPT
-A INPUT -s 200.32.126.16/28 -j ACCEPT
-A INPUT -s 200.32.126.32/29 -j ACCEPT
-A INPUT -s 200.32.126.44/30 -j ACCEPT
-A INPUT -s 200.32.126.56/29 -j ACCEPT
-A INPUT -s 200.32.126.64/30 -j ACCEPT
-A INPUT -s 200.32.126.72/29 -j ACCEPT
-A INPUT -s 200.32.126.80/29 -j ACCEPT
-A INPUT -s 200.32.126.92/30 -j ACCEPT
-A INPUT -s 200.32.126.96/27 -j ACCEPT
-A INPUT -s 200.32.126.128/26 -j ACCEPT
-A INPUT -s 200.32.126.192/27 -j ACCEPT
-A INPUT -s 200.32.126.224/29 -j ACCEPT
-A INPUT -s 200.32.126.240/28 -j ACCEPT
-A INPUT -s 200.32.127.0/29 -j ACCEPT
-A INPUT -s 200.32.127.12/30 -j ACCEPT
-A INPUT -s 200.32.127.16/30 -j ACCEPT
-A INPUT -s 200.32.127.24/30 -j ACCEPT
-A INPUT -s 200.32.127.36/30 -j ACCEPT
-A INPUT -s 200.32.127.44/30 -j ACCEPT
-A INPUT -s 200.32.127.56/29 -j ACCEPT
-A INPUT -s 200.32.127.64/28 -j ACCEPT
-A INPUT -s 200.32.127.80/29 -j ACCEPT
-A INPUT -s 200.32.127.104/30 -j ACCEPT
-A INPUT -s 200.32.127.112/28 -j ACCEPT
-A INPUT -s 200.32.127.128/29 -j ACCEPT
-A INPUT -s 200.32.127.140/30 -j ACCEPT
-A INPUT -s 200.32.127.144/28 -j ACCEPT
-A INPUT -s 200.32.127.160/27 -j ACCEPT
-A INPUT -s 200.32.127.196/30 -j ACCEPT
-A INPUT -s 200.32.127.200/30 -j ACCEPT
-A INPUT -s 200.32.127.212/30 -j ACCEPT
-A INPUT -s 200.32.127.216/29 -j ACCEPT
-A INPUT -s 200.32.127.224/30 -j ACCEPT
-A INPUT -s 200.32.127.232/29 -j ACCEPT
-A INPUT -s 200.32.127.240/30 -j ACCEPT
-A INPUT -s 200.32.127.248/29 -j ACCEPT
-A INPUT -s 200.32.128.0/19 -j ACCEPT
-A INPUT -s 200.33.4.0/24 -j ACCEPT
-A INPUT -s 200.33.28.0/24 -j ACCEPT
-A INPUT -s 200.33.67.0/24 -j ACCEPT
-A INPUT -s 200.34.215.0/24 -j ACCEPT
-A INPUT -s 200.41.8.0/24 -j ACCEPT
-A INPUT -s 200.41.14.128/25 -j ACCEPT
-A INPUT -s 200.41.15.0/24 -j ACCEPT
-A INPUT -s 200.41.17.0/24 -j ACCEPT
-A INPUT -s 200.41.18.0/26 -j ACCEPT
-A INPUT -s 200.41.18.128/25 -j ACCEPT
-A INPUT -s 200.41.19.0/24 -j ACCEPT
-A INPUT -s 200.41.20.128/25 -j ACCEPT
-A INPUT -s 200.41.22.0/24 -j ACCEPT
-A INPUT -s 200.41.23.0/26 -j ACCEPT
-A INPUT -s 200.41.23.192/26 -j ACCEPT
-A INPUT -s 200.41.24.16/28 -j ACCEPT
-A INPUT -s 200.41.24.32/27 -j ACCEPT
-A INPUT -s 200.41.24.80/28 -j ACCEPT
-A INPUT -s 200.41.24.104/29 -j ACCEPT
-A INPUT -s 200.41.24.112/28 -j ACCEPT
-A INPUT -s 200.41.24.128/25 -j ACCEPT
-A INPUT -s 200.41.25.0/27 -j ACCEPT
-A INPUT -s 200.41.25.32/29 -j ACCEPT
-A INPUT -s 200.41.25.56/29 -j ACCEPT
-A INPUT -s 200.41.25.72/30 -j ACCEPT
-A INPUT -s 200.41.25.80/29 -j ACCEPT
-A INPUT -s 200.41.25.88/30 -j ACCEPT
-A INPUT -s 200.41.25.96/28 -j ACCEPT
-A INPUT -s 200.41.25.116/30 -j ACCEPT
-A INPUT -s 200.41.25.128/30 -j ACCEPT
-A INPUT -s 200.41.25.136/29 -j ACCEPT
-A INPUT -s 200.41.25.144/28 -j ACCEPT
-A INPUT -s 200.41.25.160/27 -j ACCEPT
-A INPUT -s 200.41.25.200/29 -j ACCEPT
-A INPUT -s 200.41.25.208/28 -j ACCEPT
-A INPUT -s 200.41.25.224/29 -j ACCEPT
-A INPUT -s 200.41.25.236/30 -j ACCEPT
-A INPUT -s 200.41.25.248/30 -j ACCEPT
-A INPUT -s 200.41.26.0/24 -j ACCEPT
-A INPUT -s 200.41.27.0/25 -j ACCEPT
-A INPUT -s 200.41.27.128/26 -j ACCEPT
-A INPUT -s 200.41.28.0/23 -j ACCEPT
-A INPUT -s 200.41.30.0/24 -j ACCEPT
-A INPUT -s 200.41.32.0/24 -j ACCEPT
-A INPUT -s 200.41.33.128/25 -j ACCEPT
-A INPUT -s 200.41.34.0/23 -j ACCEPT
-A INPUT -s 200.41.36.0/23 -j ACCEPT
-A INPUT -s 200.41.38.4/30 -j ACCEPT
-A INPUT -s 200.41.38.8/29 -j ACCEPT
-A INPUT -s 200.41.38.16/28 -j ACCEPT
-A INPUT -s 200.41.38.32/27 -j ACCEPT
-A INPUT -s 200.41.38.64/28 -j ACCEPT
-A INPUT -s 200.41.38.80/30 -j ACCEPT
-A INPUT -s 200.41.38.88/30 -j ACCEPT
-A INPUT -s 200.41.38.96/28 -j ACCEPT
-A INPUT -s 200.41.38.112/29 -j ACCEPT
-A INPUT -s 200.41.38.128/30 -j ACCEPT
-A INPUT -s 200.41.38.144/28 -j ACCEPT
-A INPUT -s 200.41.38.160/28 -j ACCEPT
-A INPUT -s 200.41.38.176/30 -j ACCEPT
-A INPUT -s 200.41.38.184/29 -j ACCEPT
-A INPUT -s 200.41.38.192/27 -j ACCEPT
-A INPUT -s 200.41.38.224/29 -j ACCEPT
-A INPUT -s 200.41.38.232/30 -j ACCEPT
-A INPUT -s 200.41.38.252/30 -j ACCEPT
-A INPUT -s 200.41.39.8/29 -j ACCEPT
-A INPUT -s 200.41.39.16/28 -j ACCEPT
-A INPUT -s 200.41.39.48/29 -j ACCEPT
-A INPUT -s 200.41.39.64/27 -j ACCEPT
-A INPUT -s 200.41.39.104/29 -j ACCEPT
-A INPUT -s 200.41.39.112/28 -j ACCEPT
-A INPUT -s 200.41.39.128/26 -j ACCEPT
-A INPUT -s 200.41.39.208/28 -j ACCEPT
-A INPUT -s 200.41.39.224/27 -j ACCEPT
-A INPUT -s 200.41.40.0/27 -j ACCEPT
-A INPUT -s 200.41.40.32/29 -j ACCEPT
-A INPUT -s 200.41.40.40/30 -j ACCEPT
-A INPUT -s 200.41.40.48/28 -j ACCEPT
-A INPUT -s 200.41.40.64/27 -j ACCEPT
-A INPUT -s 200.41.40.96/30 -j ACCEPT
-A INPUT -s 200.41.40.104/30 -j ACCEPT
-A INPUT -s 200.41.40.112/29 -j ACCEPT
-A INPUT -s 200.41.40.124/30 -j ACCEPT
-A INPUT -s 200.41.40.128/28 -j ACCEPT
-A INPUT -s 200.41.40.144/29 -j ACCEPT
-A INPUT -s 200.41.40.152/30 -j ACCEPT
-A INPUT -s 200.41.40.160/29 -j ACCEPT
-A INPUT -s 200.41.40.168/30 -j ACCEPT
-A INPUT -s 200.41.40.176/28 -j ACCEPT
-A FORWARD -j BASE_FORWARD_CHAIN
-A FORWARD -o eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -j FORWARD_CHAIN
-A FORWARD -j HOST_BLOCK_SRC
-A FORWARD -j HOST_BLOCK_DST
-A FORWARD -i eth0 -j EXT_FORWARD_IN_CHAIN
-A FORWARD -o eth0 -j EXT_FORWARD_OUT_CHAIN
-A FORWARD -j SPOOF_CHK
-A FORWARD -j POST_FORWARD_CHAIN
-A FORWARD -m limit --limit 1/min --limit-burst 3 -j LOG --log-prefix "AIF:Dropped FORWARD packet: " --log-level 6
-A FORWARD -j DROP
-A OUTPUT -j BASE_OUTPUT_CHAIN
-A OUTPUT -o eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -j OUTPUT_CHAIN
-A OUTPUT -j HOST_BLOCK_DST
-A OUTPUT -f -m limit --limit 3/min -j LOG --log-prefix "AIF:Fragment packet: " --log-level 6
-A OUTPUT -f -j DROP
-A OUTPUT -o eth0 -j EXT_OUTPUT_CHAIN
-A OUTPUT -j POST_OUTPUT_CHAIN
-A OUTPUT -j ACCEPT
-A BASE_FORWARD_CHAIN -m state --state ESTABLISHED -j ACCEPT
-A BASE_FORWARD_CHAIN -p tcp -m state --state RELATED -m tcp --dport 1024:65535 -j ACCEPT
-A BASE_FORWARD_CHAIN -p udp -m state --state RELATED -m udp --dport 1024:65535 -j ACCEPT
-A BASE_FORWARD_CHAIN -p icmp -m state --state RELATED -j ACCEPT
-A BASE_FORWARD_CHAIN -i lo -j ACCEPT
-A BASE_INPUT_CHAIN -m state --state ESTABLISHED -j ACCEPT
-A BASE_INPUT_CHAIN -p tcp -m state --state RELATED -m tcp --dport 1024:65535 -j ACCEPT
-A BASE_INPUT_CHAIN -p udp -m state --state RELATED -m udp --dport 1024:65535 -j ACCEPT
-A BASE_INPUT_CHAIN -p icmp -m state --state RELATED -j ACCEPT
-A BASE_INPUT_CHAIN -i lo -j ACCEPT
-A BASE_OUTPUT_CHAIN -m state --state ESTABLISHED -j ACCEPT
-A BASE_OUTPUT_CHAIN -o lo -j ACCEPT
-A EXT_BROADCAST_CHAIN -p tcp -m tcp --dport 0:1023 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:PRIV TCP broadcast: " --log-level 6
-A EXT_BROADCAST_CHAIN -p udp -m udp --dport 0:1023 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:PRIV UDP broadcast: " --log-level 6
-A EXT_BROADCAST_CHAIN -p tcp -m tcp --dport 1024:65535 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:UNPRIV TCP broadcast: " --log-level 6
-A EXT_BROADCAST_CHAIN -p udp -m udp --dport 1024 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:UNPRIV UDP broadcast: " --log-level 6
-A EXT_BROADCAST_CHAIN -j DROP
-A EXT_FORWARD_IN_CHAIN -j VALID_CHK
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 3 -m limit --limit 12/hour --limit-burst 1 -j LOG --log-prefix "AIF:ICMP-unreachable flood: " --log-level 6
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 3 -j POST_INPUT_DROP_CHAIN
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 11 -m limit --limit 12/hour --limit-burst 1 -j LOG --log-prefix "AIF:ICMP-time-exceeded fld: " --log-level 6
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 11 -j POST_INPUT_DROP_CHAIN
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 12 -m limit --limit 12/hour --limit-burst 1 -j LOG --log-prefix "AIF:ICMP-param-problem fld: " --log-level 6
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 12 -j POST_INPUT_DROP_CHAIN
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 8 -m limit --limit 12/hour --limit-burst 1 -j LOG --log-prefix "AIF:ICMP-request(ping) fld: " --log-level 6
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 8 -j POST_INPUT_DROP_CHAIN
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 0 -m limit --limit 12/hour --limit-burst 1 -j LOG --log-prefix "AIF:ICMP-reply(pong) flood: " --log-level 6
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 0 -j POST_INPUT_DROP_CHAIN
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 4 -m limit --limit 12/hour --limit-burst 1 -j LOG --log-prefix "AIF:ICMP-source-quench fld: " --log-level 6
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m icmp --icmp-type 4 -j POST_INPUT_DROP_CHAIN
-A EXT_ICMP_FLOOD_CHAIN -p icmp -m limit --limit 12/hour --limit-burst 1 -j LOG --log-prefix "AIF:ICMP(other) flood: " --log-level 6
-A EXT_ICMP_FLOOD_CHAIN -p icmp -j POST_INPUT_DROP_CHAIN
-A EXT_INPUT_CHAIN -p tcp -m tcp --dport 0 -m limit --limit 6/hour --limit-burst 1 -j LOG --log-prefix "AIF:Port 0 OS fingerprint: " --log-level 6
-A EXT_INPUT_CHAIN -p udp -m udp --dport 0 -m limit --limit 6/hour --limit-burst 1 -j LOG --log-prefix "AIF:Port 0 OS fingerprint: " --log-level 6
-A EXT_INPUT_CHAIN -p tcp -m tcp --dport 0 -j POST_INPUT_DROP_CHAIN
-A EXT_INPUT_CHAIN -p udp -m udp --dport 0 -j POST_INPUT_DROP_CHAIN
-A EXT_INPUT_CHAIN -p tcp -m tcp --sport 0 -m limit --limit 6/hour -j LOG --log-prefix "AIF:TCP source port 0: " --log-level 6
-A EXT_INPUT_CHAIN -p udp -m udp --sport 0 -m limit --limit 6/hour -j LOG --log-prefix "AIF:UDP source port 0: " --log-level 6
-A EXT_INPUT_CHAIN -p tcp -m tcp --sport 0 -j POST_INPUT_DROP_CHAIN
-A EXT_INPUT_CHAIN -p udp -m udp --sport 0 -j POST_INPUT_DROP_CHAIN
-A EXT_INPUT_CHAIN -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A EXT_INPUT_CHAIN -p tcp -m tcp --dport 22 -j ACCEPT
-A EXT_INPUT_CHAIN -p tcp -m tcp --dport 50022 -j ACCEPT
-A EXT_INPUT_CHAIN -p tcp -m tcp --dport 2222 -j ACCEPT
-A EXT_INPUT_CHAIN -p icmp -m icmp --icmp-type 8 -m limit --limit 20/sec --limit-burst 100 -j ACCEPT
-A EXT_INPUT_CHAIN -p tcp -m tcp --dport 1024:65535 ! --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 3/min -j LOG --log-prefix "AIF:Stealth scan? (UNPRIV): " --log-level 6
-A EXT_INPUT_CHAIN -p tcp -m tcp --dport 0:1023 ! --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 3/min -j LOG --log-prefix "AIF:Stealth scan? (PRIV): " --log-level 6
-A EXT_INPUT_CHAIN -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -j POST_INPUT_DROP_CHAIN
-A EXT_INPUT_CHAIN -d 255.255.255.255/32 -j EXT_BROADCAST_CHAIN
-A EXT_INPUT_CHAIN -d 224.0.0.0/4 -j EXT_MULTICAST_CHAIN
-A EXT_INPUT_CHAIN -p tcp -m tcp --dport 0:1023 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:PRIV TCP packet: " --log-level 6
-A EXT_INPUT_CHAIN -p udp -m udp --dport 0:1023 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:PRIV UDP packet: " --log-level 6
-A EXT_INPUT_CHAIN -p tcp -m tcp --dport 1024:65535 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:UNPRIV TCP packet: " --log-level 6
-A EXT_INPUT_CHAIN -p udp -m udp --dport 1024:65535 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:UNPRIV UDP packet: " --log-level 6
-A EXT_INPUT_CHAIN -p igmp -m limit --limit 1/min -j LOG --log-prefix "AIF:IGMP packet: " --log-level 6
-A EXT_INPUT_CHAIN -j POST_INPUT_CHAIN
-A EXT_INPUT_CHAIN -p icmp -m icmp --icmp-type 8 -m limit --limit 3/min --limit-burst 1 -j LOG --log-prefix "AIF:ICMP-request: " --log-level 6
-A EXT_INPUT_CHAIN -p icmp -m icmp ! --icmp-type 8 -m limit --limit 12/hour --limit-burst 1 -j LOG --log-prefix "AIF:ICMP-other: " --log-level 6
-A EXT_INPUT_CHAIN -p tcp -j POST_INPUT_DROP_CHAIN
-A EXT_INPUT_CHAIN -p udp -j POST_INPUT_DROP_CHAIN
-A EXT_INPUT_CHAIN -p igmp -j POST_INPUT_DROP_CHAIN
-A EXT_INPUT_CHAIN -p icmp -j POST_INPUT_DROP_CHAIN
-A EXT_INPUT_CHAIN -m limit --limit 1/min -j LOG --log-prefix "AIF:Other connect: " --log-level 6
-A EXT_INPUT_CHAIN -j POST_INPUT_DROP_CHAIN
-A EXT_MULTICAST_CHAIN -p tcp -m tcp --dport 0:1023 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:PRIV TCP multicast: " --log-level 6
-A EXT_MULTICAST_CHAIN -p udp -m udp --dport 0:1023 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:PRIV UDP multicast: " --log-level 6
-A EXT_MULTICAST_CHAIN -p tcp -m tcp --dport 1024:65535 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:UNPRIV TCP multicast: " --log-level 6
-A EXT_MULTICAST_CHAIN -p udp -m udp --dport 1024 -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "AIF:UNPRIV UDP multicast: " --log-level 6
-A EXT_MULTICAST_CHAIN -p icmp -m icmp --icmp-type 8 -m limit --limit 3/min --limit-burst 1 -j LOG --log-prefix "AIF:ICMP-multicast-request: " --log-level 6
-A EXT_MULTICAST_CHAIN -p icmp -m icmp ! --icmp-type 8 -m limit --limit 12/hour --limit-burst 1 -j LOG --log-prefix "AIF:ICMP-multicast-other: " --log-level 6
-A EXT_MULTICAST_CHAIN -j DROP
-A HOST_BLOCK_DROP -m limit --limit 1/min --limit-burst 1 -j LOG --log-prefix "AIF:Blocked host(s): " --log-level 6
-A HOST_BLOCK_DROP -j DROP
-A POST_INPUT_DROP_CHAIN -j DROP
-A SPOOF_CHK -j RETURN
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -m limit --limit 3/min -j LOG --log-prefix "AIF:Stealth XMAS scan: " --log-level 6
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -m limit --limit 3/min -j LOG --log-prefix "AIF:Stealth XMAS-PSH scan: " --log-level 6
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -m limit --limit 3/min -j LOG --log-prefix "AIF:Stealth XMAS-ALL scan: " --log-level 6
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN -m limit --limit 3/min -j LOG --log-prefix "AIF:Stealth FIN scan: " --log-level 6
-A VALID_CHK -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -m limit --limit 3/min -j LOG --log-prefix "AIF:Stealth SYN/RST scan: " --log-level 6
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -m limit --limit 3/min -j LOG --log-prefix "AIF:Stealth SYN/FIN scan?: " --log-level 6
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -m limit --limit 3/min -j LOG --log-prefix "AIF:Stealth Null scan: " --log-level 6
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j POST_INPUT_DROP_CHAIN
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j POST_INPUT_DROP_CHAIN
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j POST_INPUT_DROP_CHAIN
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN -j POST_INPUT_DROP_CHAIN
-A VALID_CHK -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j POST_INPUT_DROP_CHAIN
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j POST_INPUT_DROP_CHAIN
-A VALID_CHK -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j POST_INPUT_DROP_CHAIN
-A VALID_CHK -p tcp -m tcp --tcp-option 64 -m limit --limit 3/min --limit-burst 1 -j LOG --log-prefix "AIF:Bad TCP flag(64): " --log-level 6
-A VALID_CHK -p tcp -m tcp --tcp-option 128 -m limit --limit 3/min --limit-burst 1 -j LOG --log-prefix "AIF:Bad TCP flag(128): " --log-level 6
-A VALID_CHK -p tcp -m tcp --tcp-option 64 -j POST_INPUT_DROP_CHAIN
-A VALID_CHK -p tcp -m tcp --tcp-option 128 -j POST_INPUT_DROP_CHAIN
-A VALID_CHK -m state --state INVALID -j POST_INPUT_DROP_CHAIN
-A VALID_CHK -f -m limit --limit 3/min --limit-burst 1 -j LOG --log-prefix "AIF:Fragment packet: "
-A VALID_CHK -f -j DROP
COMMIT
# Completed on Tue Mar 24 16:28:39 2015
